--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -12,7 +12,7 @@
   "my_number_is": "رقمي هو",
   "phone_number": "رقم التليفون",
   "please_enter_a_valid_phone_number": "يرجى إدخال رقم هاتف صالح",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "عند النقر فوق \"متابعة\" ، سترسل HeartLink نصًا برمز التحقق. تنطبق معدلات الرسائل والبيانات.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "عند النقر فوق \"متابعة\" ، سترسل HeartLink نصًا برمز التحقق. تنطبق معدلات الرسائل ومعدلات البيانات.",
   "the_verified_phone_number_can_be_used_to_log_in.": "يمكن استخدام رقم الهاتف الذي تم التحقق منه لتسجيل الدخول.",
   "learn_what_happens_when_your_number_changes.": "تعرف على ما يحدث عندما يتغير رقمك.",
   "continue": "يكمل",
@@ -23,9 +23,9 @@
   "what's_your_email?": "ما هو بريدك الإلكتروني؟",
   "don't_lose_access_to_your_account,_verify_your_email": "لا تفقد الوصول إلى حسابك ، تحقق من بريدك الإلكتروني",
   "verify_instantly_by_connecting_your_google_account": "تحقق على الفور عن طريق توصيل حساب Google الخاص بك",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "أريد أن أتلقى الأخبار والتحديثات والعروض من HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "أريد أن أتلقى الأخبار والتحديثات والعروض من HeartLink",
   "enter_email": "أدخل البريد الإلكتروني",
-  "welcome_to_heartlink": "مرحبًا بك في HeartLink",
+  "welcome_to_heartLink": "مرحبًا بك في HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "يرجى اتباع قواعدنا للحصول على المزيد من المرح وبناء مجتمع رائع معًا",
   "be_yourself": "كن نفسك",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "تأكد",
@@ -43,7 +43,7 @@
   "apply": "يتقدم",
   "my_name_is": "اسمي هو",
   "your_name": "اسمك",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "هكذا سيظهر في HeartLink ، ولن تتمكن من تغييره",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "هكذا سيظهر في HeartLink ، ولن تتمكن من تغييره",
   "my_birthday_is": "عيد ميلادي",
   "your_age_will_be_public": "سيكون عمرك علني",
   "i_am_a": "أنا",
@@ -57,15 +57,15 @@
   "my_photos_are": "صوري",
   "add_at_least_2_photos_to_continue": "أضف ما لا يقل عن صورتين للمتابعة",
   "enable_location": "تمكن موقع",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "ستحتاج إلى تمكين طلب موقعك لاستخدام heartlinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "ستحتاج إلى تمكين طلب موقعك لاستخدام heartlinks",
   "allow_location": "السماح للموقع",
   "tell_me_more": "اخبرني المزيد",
-  "meet_people_nearby": "قابل الناس القريبة",
+  "meet_people_nearby": "قابل الناس في مكان قريب",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "سيتم استخدام موقعك لإظهار المباريات المحتملة بالقرب منك.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "هل تريد تجنب شخص تعرفه على HeartLink؟",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "من السهل - مشاركة اتصال جهازك مع HeartLink عند استخدام هذه الميزة لاختيار من تريد تجنبه",
+  "want_to_avoid_someone_you_know_on_heartLink?": "هل تريد تجنب شخص تعرفه على HeartLink؟",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "من السهل - مشاركة اتصال جهازك مع HeartLink عند استخدام هذه الميزة لاختيار من تريد تجنبه",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "سنقوم بتخزين جهة الاتصال المحظورة الخاصة بك لمنعك من رؤية بعضنا البعض إذا كان جهة الاتصال الخاصة بك تحتوي على حساب مع نفس Infor الذي تقدمه. يمكنك التوقف عن المشاركة معنا في إعداداتك.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "تعرف على المزيد هنا ، بما في ذلك كيفية معالجة HeartLink جهات الاتصال الخاصة بك",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "تعرف على المزيد هنا ، بما في ذلك كيفية معالجة HeartLink جهات الاتصال الخاصة بك",
   "share_{nameUser}_profile": "مشاركة {nameuser} ملف تعريف",
   "see_what_a_friend_thinks": "انظر ماذا يفكر صديق",
   "report_{nameUser}": "تقرير {nameuser}",
@@ -73,7 +73,7 @@
   "my_anthem": "نشيد بلدي",
   "what_is_the_reason_for_your_report?": "ما هو سبب تقريرك؟",
   "please_choose_1_reason": "الرجاء اختيار سبب واحد",
-  "we_won't_let_puddink_know_that_you_reported_them": "لن ندع Puddink تعرف أنك أبلغت عنها",
+  "we_won't_let_puddink_know_that_you_reported_them": "لن ندع Puddink يعرف أنك أبلغت عنها",
   "can_you_tell_us_what_happened?": "هل يمكن أن تخبرنا بما حدث؟",
   "would_you_mind_sharing_more_details_with_us?": "هل تمانع في مشاركة المزيد من التفاصيل معنا؟",
   "add_a_comment": "اضف تعليق",
@@ -88,11 +88,11 @@
   "new_connections": "اتصالات جديدة",
   "messages": "رسائل",
   "get_read_receipts": "احصل على قراءة الإيصالات",
-  "level_up_everyone_action_you_take_on_heartlink": "رفع مستوى العمل الذي تتخذه على HeartLink",
   "get_boost_profile": "الحصول على ملف تعريف التعزيز",
   "get_supper_like": "الحصول على العشاء مثل",
   "silver_package": "حزمة الفضة",
   "gold_package": "حزمة الذهب",
+  "level_up_everyone_action_you_take_on_heartLink": "رفع مستوى العمل الذي تتخذه على HeartLink",
   "get_read_receipt_package": "احصل على حزمة استلام القراءة",
   "stay_up_to_date": "ابق على اطلاع دائم",
   "know_when_your_messages_have_been_read_with_read_receipt": "تعرف متى تتم قراءة رسائلك مع استلام القراءة",
@@ -108,14 +108,14 @@
   "get_supper_likes_package": "احصل على الحزمة Leger Super",
   "stand_out_with_super_like": "تبرز مع سوبر مثل",
   "3x_chance_to_get_a_match": "3x فرصة للحصول على مباراة",
-  "get_supper_likes": "الحصول على عشاء يحب",
-  "get_silver_package": "احصل على الحزمة الفضية",
+  "get_supper_likes": "احصل على عشاء يحب",
+  "get_silver_package": "احصل على حزمة الفضة",
   "unlimited_likes": "إعجاب غير محدود",
   "send_as_many_likes_as_you_want": "أرسل أكبر عدد من الإعجابات التي تريدها",
   "control_your_profile": "تحكم في ملفك الشخصي",
   "limit_what_others_see_with_dating_plus": "الحد من ما يراه الآخرون مع المواعدة زائد",
   "choose_who_sees_you": "اختر من يراك",
-  "only_be_shown_to_people_you've_liked": "يتم عرضها فقط للأشخاص الذين أعجبتهم",
+  "only_be_shown_to_people_you've_liked": "يتم عرضها فقط على الأشخاص الذين أعجبتهم",
   "like_profile_around_the_world": "مثل الملف الشخصي حول العالم",
   "passport_to_anywhere": "جواز السفر إلى أي مكان",
   "unlimited_rewinds": "عودة غير محدودة",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "أرني أفضل اختيارات",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "سيتيح لك تشغيل هذا العرض أن تُظهر لك كأعلى اختيار مميز للمستخدمين الآخرين بالقرب منك",
   "activity_status": "حالة النشاط",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "السماح للأعضاء الآخرين بمعرفة ما إذا كنت نشطًا مؤخرًا خلال الـ 24 ساعة الماضية على HeartLink. إذا قمت بإيقاف تشغيل هذا ، فلن يتمكنوا من رؤية حالتك النشطة مؤخرًا",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "السماح للأعضاء الآخرين بمعرفة ما إذا كنت نشطًا مؤخرًا خلال الـ 24 ساعة الماضية على HeartLink. إذا قمت بإيقاف تشغيل هذا ، فلن يتمكنوا من رؤية حالتك النشطة مؤخرًا",
   "app_settings": "إعدادات التطبيقات",
   "show_distance_in": "إظهار المسافة في",
   "language": "لغة",
@@ -224,7 +224,7 @@
   "school_name": "اسم المدرسة",
   "living_in": "يعيش في",
   "show_instagram_photos": "عرض صور Instagram",
-  "connect_instagram": "توصيل Instagram",
+  "connect_instagram": "قم بتوصيل Instagram",
   "choose_an_anthem": "اختر النشيد",
   "my_top_spotify_artists": "أفضل فناني سبوتيفي",
   "connect_spotify": "توصيل Spotify",
@@ -232,12 +232,65 @@
   "sexual_orientation": "التوجه الجنسي",
   "show_my_sexual_orientation_on_profile": "أظهر لأول مرة في التوجه الجنسي على الملف الشخصي",
   "select_to_3": "حدد 3",
-  "control_profile": "ملف التعريف",
+  "control_profile": "الملف الشخصي للتحكم",
   "don't_show_my_age": "لا تظهر عمري",
   "don't_show_my_distance": "لا تظهر مسافة بلدي",
-  "show_{nameScream}_on_my_profile": "عرض {namescream} في ملف التعريف الخاص بي",
+  "show_{nameScream}_on_my_profile": "عرض {namescream} في ملفي الشخصي",
   "you_are_not_enter_the_phone_number": "أنت لا تدخل رقم الهاتف",
-  "Interests": "الإهتمامات",
+  "interests": "الإهتمامات",
   "my_gender": "جنسي",
-  "my_orientation": "توجيهي"
+  "my_orientation": "توجيهي",
+  "version_x.y.z": "الإصدار X.Y.Z",
+  "km": "كم",
+  "mi": "مي",
+  "live_at_{nameAddress}": "العيش في {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {unit} بعيدا",
+  "verified": "تم التحقق",
+  "HeartLink": "heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "لا تقلق - لن نخبر هذا الشخص",
+  "finding_people_near_you...": "العثور على أشخاص بالقرب منك ...",
+  "let's_be_friend": "دعونا نكون صديق",
+  "find_someone_that_wants_to_be_friends": "ابحث عن شخص يريد أن نكون أصدقاء",
+  "coffee_date": "تاريخ القهوة",
+  "find_someone_to_get_coffee_with": "ابحث عن شخص ما للحصول على القهوة",
+  "looking_for_love": "أبحث عن الحب",
+  "blind_date": "تاريخ أعمى",
+  "open_hour_6pm_-_12pm_(local_time)": "ساعة مفتوحة من 6 مساءً إلى 12 مساءً (بالتوقيت المحلي)",
+  "share_idea": "مشاركة الفكرة",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "أجب على الأسئلة الصعبة بدلاً من فتح الجمل! ستظهر ردودك على واجهة تاريخ الأعمى ويمكن استخدامها لبدء محادثة",
+  "get_ready": "إستعد",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "الأسئلة ووقت الدردشة محدودة ، لذا فكر وأجيب بسرعة",
+  "compatible_to_view_profiles": "متوافق لعرض الملفات الشخصية",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "بعد انتهاء الدردشة ، سترى ملف تعريف الشخص إذا تطابق كلاهما",
+  "i_can't_date_someone_who:": "لا أستطيع مواعدة شخص ما:",
+  "smoker": "المدخن",
+  "not_lovers": "ليس عشاق",
+  "no_romance": "لا رومانسية",
+  "love_novels": "روايات الحب",
+  "answer_question": "اجب عن السؤال",
+  "optimise_pairing": "تحسين الاقتران",
+  "connecting": "توصيل",
+  "the_best_dinner_is_at:": "أفضل عشاء في:",
+  "on_the_tray_and_watch_tv": "على الدرج وشاهد التلفزيون",
+  "in_bed": "في السرير",
+  "verified_photo": "صورة تم التحقق منها",
+  "likes_you": "يحبك",
+  "prioritized_likes": "إعجاب الأولوية",
+  "everyone_you_like_will_see_you_soon": "كل من تحب سيراك قريبا",
+  "match_instantly_with_people_who_already_like_you": "تطابق على الفور مع الأشخاص الذين يحبونك بالفعل",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "بما في ذلك أفضل اللقطات ، الإعجابات غير المحدودة ، دفعة 1free كل شهر ، 5 عشاء مجاني مثل كل أسبوع ، الترجيع وجواز السفر",
+  "message_before_matching": "رسالة قبل المطابقة",
+  "99+_people_already_like_you": "أكثر من 99 شخصًا مثلك",
+  "see_who_likes_you_and_match_instantly": "تعرف على من يحبك ويطابق على الفور",
+  "buy_more_top_picks": "شراء المزيد من أفضل اللقطات",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "احصل على إمكانية الوصول الكامل إلى أفضل اللقطات ، مثلك ، أرسل إعجابات غير محدودة وأكثر",
+  "see_as_many_likes_as_you_want": "شاهد العديد من الإعجابات كما تريد",
+  "1_free_boost_every_month": "1 دفعة مجانية كل شهر",
+  "choose_who_see_you": "اختر من يراك",
+  "5_free_supper_likes_very_week": "5 عشاء مجاني يحب الأسبوع",
+  "you're_3x_more_likely_to_get_a_match": "أنت أكثر عرضة لثلاثة أضعاف للحصول على مباراة",
+  "online_now": "متواجد حاليا",
+  "like": "يحب",
+  "nope": "لا",
+  "supper_like": "العشاء مثل"
 }
