--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -5,14 +5,14 @@
   "log_in_with_facebook": "Inicia sessió amb Facebook",
   "log_in_with_phone_number": "Inicieu la sessió amb el número de telèfon",
   "trouble_logging_in?": "Problemes per iniciar la sessió?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Feu clic a \"Inici de sessió\", esteu d'acord amb els nostres termes. Obteniu informació sobre com processem les vostres dades al nostre",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Feu clic a \"Inici de sessió\", esteu d'acord amb els nostres termes. Obteniu més informació sobre com processem les vostres dades al nostre",
   "privacy_policy": "Política de privacitat",
   "and": "i",
   "cookies_policy": "Política de cookies",
   "my_number_is": "El meu número és",
   "phone_number": "Número de telèfon",
   "please_enter_a_valid_phone_number": "siusplau introdueixi un número de telèfon vàlid",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Quan toqueu \"Continua\", HeartLink enviarà un text amb codi de verificació. Les taxes de missatges i les taxes de dades s'apliquen.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Quan toqueu \"Continua\", HeartLink enviarà un text amb codi de verificació. Les taxes de missatges i les taxes de dades s'apliquen.",
   "the_verified_phone_number_can_be_used_to_log_in.": "El número de telèfon verificat es pot utilitzar per iniciar la sessió.",
   "learn_what_happens_when_your_number_changes.": "Obteniu informació sobre què passa quan el vostre número canvia.",
   "continue": "Continuar",
@@ -23,9 +23,9 @@
   "what's_your_email?": "quin és el teu email?",
   "don't_lose_access_to_your_account,_verify_your_email": "No perdeu l’accés al vostre compte, verifiqueu el vostre correu electrònic",
   "verify_instantly_by_connecting_your_google_account": "Verifiqueu de forma instantània connectant el vostre compte de Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Vull rebre notícies, actualitzacions i ofertes de HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Vull rebre notícies, actualitzacions i ofertes de HeartLink",
   "enter_email": "Introduïu el correu electrònic",
-  "welcome_to_heartlink": "Benvingut a HeartLink",
+  "welcome_to_heartLink": "Benvingut a HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Seguiu les nostres regles per divertir -vos més i construir una gran comunitat junts",
   "be_yourself": "Sigues tu mateix",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Assegureu -vos que les vostres fotos, edat i bio fidels a qui sou",
@@ -43,7 +43,7 @@
   "apply": "Aplicar -se",
   "my_name_is": "El meu nom és",
   "your_name": "El teu nom",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Així és com apareixerà en enllaç de cor i no ho podreu canviar",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Així és com apareixerà en enllaç de cor i no ho podreu canviar",
   "my_birthday_is": "El meu aniversari és",
   "your_age_will_be_public": "La vostra edat serà pública",
   "i_am_a": "sóc un",
@@ -57,15 +57,15 @@
   "my_photos_are": "Les meves fotos són",
   "add_at_least_2_photos_to_continue": "Afegiu almenys 2 fotos per continuar",
   "enable_location": "Habilitar la ubicació",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Haureu d’habilitar la vostra comanda d’ubicació per utilitzar els enllaços de cor",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Haureu d’habilitar la vostra comanda d’ubicació per utilitzar els enllaços de cor",
   "allow_location": "Permetre la ubicació",
   "tell_me_more": "Explica'm més",
   "meet_people_nearby": "Coneix gent a prop",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "La ubicació s’utilitzarà per mostrar possibles partits a prop vostre.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Voleu evitar algú que conegueu en un enllaç de cor?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "És fàcil: compartiu el contacte del vostre dispositiu amb HeartLink quan utilitzeu aquesta funció per triar a qui voleu evitar",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Voleu evitar algú que conegueu en un enllaç de cor?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "És fàcil: compartiu el contacte del vostre dispositiu amb HeartLink quan utilitzeu aquesta funció per triar a qui voleu evitar",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Emmagatzemarem el vostre contacte bloquejat per evitar que es vegi si el vostre contacte té un compte amb la mateixa informació que proporcioneu. Podeu deixar de compartir amb nosaltres a la vostra configuració.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Obteniu més informació aquí, inclòs com processen els vostres contactes",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Obteniu més informació aquí, inclòs com processen els vostres contactes",
   "share_{nameUser}_profile": "Comparteix {Nameuser} perfil",
   "see_what_a_friend_thinks": "Mireu què pensa un amic",
   "report_{nameUser}": "Informe {Nameuser}",
@@ -88,11 +88,11 @@
   "new_connections": "Noves connexions",
   "messages": "Missatges",
   "get_read_receipts": "Obteniu rebuts de lectura",
-  "level_up_everyone_action_you_take_on_heartlink": "Anivellava tothom que realitzeu en un enllaç de cor",
   "get_boost_profile": "Obteniu el perfil Boost",
   "get_supper_like": "Aconsegueix el sopar com",
   "silver_package": "Paquet de plata",
   "gold_package": "Paquet d'or",
+  "level_up_everyone_action_you_take_on_heartLink": "Anivellava tothom que realitzeu en un enllaç de cor",
   "get_read_receipt_package": "Obteniu el paquet de recepció de lectura",
   "stay_up_to_date": "Estigueu al dia",
   "know_when_your_messages_have_been_read_with_read_receipt": "Sabeu quan s’han llegit els vostres missatges amb la recepció de lectura",
@@ -118,7 +118,7 @@
   "only_be_shown_to_people_you've_liked": "Només es mostra a les persones que us han agradat",
   "like_profile_around_the_world": "Com el perfil de tot el món",
   "passport_to_anywhere": "Passaport a qualsevol lloc",
-  "unlimited_rewinds": "Rebobinades il·limitades",
+  "unlimited_rewinds": "Rewinds il·limitats",
   "go_back_and_try_again": "Torna enrere i torna -ho a provar",
   "turn_off_ads": "Apagueu els anuncis",
   "have_fun_without_interruptions": "Diverteix -te sense interrupcions",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Mostra’m les millors opcions",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Engegar -lo us permetrà mostrar -vos com a selecció superior destacada a altres usuaris propers",
   "activity_status": "Estat de l'activitat",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permeteu que altres membres vegin si heu estat actius recentment durant les darreres 24 hores a Heartlink. Si heu desactivat això, no podran veure el vostre estat recentment actiu",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permeteu que altres membres vegin si heu estat actius recentment durant les darreres 24 hores a Heartlink. Si heu desactivat això, no podran veure el vostre estat recentment actiu",
   "app_settings": "Configuració de l'aplicació",
   "show_distance_in": "Mostra la distància a",
   "language": "Llenguatge",
@@ -194,7 +194,7 @@
   "do_you_have_pets": "Tens mascotes",
   "are_you_a_smoker?": "Ets fumador?",
   "do_you_exercise?": "Feu exercici?",
-  "do_you_follow_any_diet?": "Segueixes alguna dieta?",
+  "do_you_follow_any_diet?": "Seguiu alguna dieta?",
   "how_active_you_are_on_social_media?": "Quina actiu esteu a les xarxes socials?",
   "how_often_do_you_drink_alcohol?": "Amb quina freqüència beu alcohol?",
   "how_are_your_sleeping_habits?": "Com són els vostres hàbits de son?",
@@ -205,7 +205,7 @@
   "vaccine_for_covid": "Vacuna per a covid",
   "personality_type": "Tipus de personalitat",
   "communication_style": "Estil de comunicació",
-  "love_languages": "Love Idiomes",
+  "love_languages": "Idiomes d’amor",
   "life_style": "Estil de vida",
   "pets_free": "Pets gratuït",
   "drink_beer": "Beu cervesa",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "No mostris la meva distància",
   "show_{nameScream}_on_my_profile": "Mostra {namescream} al meu perfil",
   "you_are_not_enter_the_phone_number": "No introduïu el número de telèfon",
-  "Interests": "Interessos",
+  "interests": "Interessos",
   "my_gender": "el meu gènere",
-  "my_orientation": "La meva orientació"
+  "my_orientation": "La meva orientació",
+  "version_x.y.z": "Versió X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "En directe a {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilomeTers} {unitat} fora",
+  "verified": "Verificat",
+  "HeartLink": "Enllaç de cor",
+  "don't_worry_-_we_won't_tell_this_person": "No us preocupeu: no ho direm a aquesta persona",
+  "finding_people_near_you...": "Trobar gent a prop teu ...",
+  "let's_be_friend": "Siguem amic",
+  "find_someone_that_wants_to_be_friends": "Troba algú que vulgui ser amics",
+  "coffee_date": "Data de cafè",
+  "find_someone_to_get_coffee_with": "Trobeu algú amb qui es prengui cafè",
+  "looking_for_love": "Buscant l'amor",
+  "blind_date": "Cita a cegues",
+  "open_hour_6pm_-_12pm_(local_time)": "Hora oberta a les 18:00 a les 12:00 (hora local)",
+  "share_idea": "Comparteix Idea",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Respon a preguntes dures en lloc d’obrir frases! Les vostres respostes apareixeran a la interfície cega i es poden utilitzar per iniciar una conversa",
+  "get_ready": "Prepareu -vos",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Les preguntes i el temps de xat són limitats, així que penseu i responeu ràpidament",
+  "compatible_to_view_profiles": "Compatible per veure els perfils",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Un cop acabat el xat, veureu el perfil de la persona si coincideix",
+  "i_can't_date_someone_who:": "No puc sortir amb algú que:",
+  "smoker": "Fumador",
+  "not_lovers": "No amants",
+  "no_romance": "Sense romanç",
+  "love_novels": "Love Novel·les",
+  "answer_question": "Respondre pregunta",
+  "optimise_pairing": "Optimitzar el maridatge",
+  "connecting": "Connectant",
+  "the_best_dinner_is_at:": "El millor sopar és a:",
+  "on_the_tray_and_watch_tv": "A la safata i veure la televisió",
+  "in_bed": "Al llit",
+  "verified_photo": "Foto verificada",
+  "likes_you": "T'agrada",
+  "prioritized_likes": "Likes prioritzats",
+  "everyone_you_like_will_see_you_soon": "Tothom que us agradi ens veurà aviat",
+  "match_instantly_with_people_who_already_like_you": "Coincideix amb l’instant amb persones que ja t’agraden",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inclou les millors opcions, likes il·limitats, un augment d’1 mes, 5 sopars gratuïts com cada setmana, rebobineu i passaport",
+  "message_before_matching": "Missatge abans de coincidir",
+  "99+_people_already_like_you": "99 persones més ja t’agraden",
+  "see_who_likes_you_and_match_instantly": "Mireu qui us agrada i coincideix a l’instant",
+  "buy_more_top_picks": "Compra més opcions més importants",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Obteniu accés complet a les millors opcions, com vosaltres, envieu els gustos il·limitats i molt més",
+  "see_as_many_likes_as_you_want": "Mireu tants gustos com vulgueu",
+  "1_free_boost_every_month": "1 impuls gratuït cada mes",
+  "choose_who_see_you": "Trieu qui us veiem",
+  "5_free_supper_likes_very_week": "5 El sopar gratuït li agrada molt la setmana",
+  "you're_3x_more_likely_to_get_a_match": "És més probable que tinguis un partit",
+  "online_now": "En línia ara",
+  "like": "M'AGRADA",
+  "nope": "Nota",
+  "supper_like": "Sopar com"
 }
