--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -5,14 +5,14 @@
   "log_in_with_facebook": "Login med Facebook",
   "log_in_with_phone_number": "Log ind med telefonnummer",
   "trouble_logging_in?": "Problemer med at logge ind?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ved at klikke på 'login' er du enig med vores vilkår. Lære, hvordan vi behandler dine data i vores",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ved at klikke på 'login' er du enig i vores vilkår. Lære, hvordan vi behandler dine data i vores",
   "privacy_policy": "Fortrolighedspolitik",
   "and": "og",
   "cookies_policy": "Cookies -politik",
   "my_number_is": "Mit nummer er",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "Indtast venligst et gyldigt telefonnummer",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsæt', sender HeartLink en tekst med verifikationskode. Meddelelse og datahastigheder, der er parret.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsæt', sender Heartlink en tekst med verifikationskode. Meddelelse og datahastigheder, der er parret.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Det verificerede telefonnummer kan bruges til at logge ind.",
   "learn_what_happens_when_your_number_changes.": "Lær hvad der sker, når dit nummer ændres.",
   "continue": "Blive ved",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Hvad er din email?",
   "don't_lose_access_to_your_account,_verify_your_email": "Mist ikke adgang til din konto, bekræft din e -mail",
   "verify_instantly_by_connecting_your_google_account": "Bekræft øjeblikkeligt ved at tilslutte din Google -konto",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Jeg vil modtage nyheder, opdateringer og tilbud fra HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Jeg vil modtage nyheder, opdateringer og tilbud fra HeartLink",
   "enter_email": "Indtast e -mail",
-  "welcome_to_heartlink": "Velkommen til Heartlink",
+  "welcome_to_heartLink": "Velkommen til Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Følg vores regler for at have sjovere og opbygge et godt samfund sammen",
   "be_yourself": "Vær dig selv",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Sørg for, at dine fotos, alder og bio tro på hvem du er",
@@ -43,7 +43,7 @@
   "apply": "ansøge",
   "my_name_is": "Mit navn er",
   "your_name": "Dit navn",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Sådan vises det i Heartlink, og du vil ikke ændre det",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Sådan vises det i Heartlink, og du vil ikke ændre det",
   "my_birthday_is": "Min fødselsdag er",
   "your_age_will_be_public": "Din alder vil være offentlig",
   "i_am_a": "jeg er en",
@@ -57,16 +57,16 @@
   "my_photos_are": "Mine fotos er",
   "add_at_least_2_photos_to_continue": "Tilføj mindst 2 fotos for at fortsætte",
   "enable_location": "Aktivér placering",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Du bliver nødt til at aktivere din placeringsordre til at bruge HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Du bliver nødt til at aktivere din placeringsordre for at bruge HeartLinks",
   "allow_location": "Tillad placering",
   "tell_me_more": "Fortæl mig mere",
   "meet_people_nearby": "Mød mennesker i nærheden",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Din placering vil blive brugt til at vise potentielle kampe i nærheden af ​​dig.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Vil du undgå nogen, du kender på Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det er let - del din enheds kontakt med HeartLink, når du bruger denne funktion til at vælge, hvem du vil undgå",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Vil du undgå nogen, du kender på Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det er let - del din enheds kontakt med hjertelink, når du bruger denne funktion til at vælge, hvem du vil undgå",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Vi gemmer din blokerede kontakt for at forhindre dig i at se hinanden, hvis din kontakt har en konto med den samme information, du giver. Du kan stoppe med at dele med os i dine indstillinger.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Lær mere her, inklusive hvordan hjertelink behandler dine kontakter",
-  "share_{nameUser}_profile": "Del {nameUser} profil",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Lær mere her, herunder hvordan hjertelink behandler dine kontakter",
+  "share_{nameUser}_profile": "Del {NameUser} profil",
   "see_what_a_friend_thinks": "Se hvad en ven synes",
   "report_{nameUser}": "Rapport {NameUser}",
   "away": "væk",
@@ -87,12 +87,12 @@
   "recommendations": "Anbefalinger",
   "new_connections": "Nye forbindelser",
   "messages": "Beskeder",
-  "get_read_receipts": "Få læsning af kvitteringer",
-  "level_up_everyone_action_you_take_on_heartlink": "Niveau op alle handlinger, du tager på hjertelink",
+  "get_read_receipts": "Få læst kvitteringer",
   "get_boost_profile": "Få boost -profil",
   "get_supper_like": "Få aftensmad som",
   "silver_package": "Sølvpakke",
   "gold_package": "Guldpakke",
+  "level_up_everyone_action_you_take_on_heartLink": "Niveau op alle handlinger, du tager på hjertelink",
   "get_read_receipt_package": "Få læst kvitteringspakke",
   "stay_up_to_date": "Hold dig ajour",
   "know_when_your_messages_have_been_read_with_read_receipt": "Ved, hvornår dine beskeder er blevet læst med læst kvittering",
@@ -139,7 +139,7 @@
   "control_who_you_see": "Kontroller, hvem du ser",
   "sliver_package": "Sliver -pakke",
   "balance_recommendations": "Balanceanbefalinger",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevante personer for dig (standardindstillinger)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevante personer til dig (standardindstillinger)",
   "recently_active": "For nylig aktiv",
   "see_the_most_recently_active_people_first": "Se de senest aktive mennesker først",
   "standard": "Standard",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Vis mig de bedste valg",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "At tænde for dette giver dig mulighed for at blive vist som en fremhævet topvalg til andre brugere i nærheden af ​​dig",
   "activity_status": "Aktivitetsstatus",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Tillad andre medlemmer at se, om du for nylig var aktive inden for den sidste 24 timer på HeartLink. Hvis du har slået dette fra, vil de ikke være i stand til at se din nyligt aktive status",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Tillad andre medlemmer at se, om du for nylig var aktive inden for den sidste 24 timer på HeartLink. Hvis du har slået dette fra, vil de ikke være i stand til at se din nyligt aktive status",
   "app_settings": "Appindstillinger",
   "show_distance_in": "Vis afstand i",
   "language": "Sprog",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Vis ikke min afstand",
   "show_{nameScream}_on_my_profile": "Vis {Namescream} på min profil",
   "you_are_not_enter_the_phone_number": "Du indtaster ikke telefonnummeret",
-  "Interests": "Interesser",
+  "interests": "Interesser",
   "my_gender": "Mit køn",
-  "my_orientation": "min orientering"
+  "my_orientation": "min orientering",
+  "version_x.y.z": "Version X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Live at {NameAddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {enhed} væk",
+  "verified": "Verificeret",
+  "HeartLink": "Hjertelink",
+  "don't_worry_-_we_won't_tell_this_person": "Bare rolig - vi fortæller ikke denne person",
+  "finding_people_near_you...": "At finde folk i nærheden af ​​dig ...",
+  "let's_be_friend": "Lad os være venner",
+  "find_someone_that_wants_to_be_friends": "Find nogen, der vil være venner",
+  "coffee_date": "Kaffedato",
+  "find_someone_to_get_coffee_with": "Find nogen til at få kaffe med",
+  "looking_for_love": "Søger kærlighed",
+  "blind_date": "Blind date",
+  "open_hour_6pm_-_12pm_(local_time)": "Åben time 18:00 - 12:00 (lokal tid)",
+  "share_idea": "Del idé",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Besvar hårde spørgsmål i stedet for at åbne sætninger! Dine svar vises på den blinde dato -grænseflade og kan bruges til at starte en samtale",
+  "get_ready": "Gør dig klar",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Spørgsmål og chattid er begrænset, så tænk og svar hurtigt",
+  "compatible_to_view_profiles": "Kompatibel med at se profiler",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Når chatten er forbi, vil du se personens profil, hvis du begge matcher",
+  "i_can't_date_someone_who:": "Jeg kan ikke date nogen, der:",
+  "smoker": "Ryger",
+  "not_lovers": "Ikke elskere",
+  "no_romance": "Ingen romantik",
+  "love_novels": "Elsker romaner",
+  "answer_question": "Besvar spørgsmål",
+  "optimise_pairing": "Optimer parring",
+  "connecting": "Tilslutning",
+  "the_best_dinner_is_at:": "Den bedste middag er på:",
+  "on_the_tray_and_watch_tv": "På bakken og se tv",
+  "in_bed": "I seng",
+  "verified_photo": "Verificeret foto",
+  "likes_you": "Kan lide dig",
+  "prioritized_likes": "Prioriterede likes",
+  "everyone_you_like_will_see_you_soon": "Alle, du kan lide, ser dig snart",
+  "match_instantly_with_people_who_already_like_you": "Match øjeblikkeligt med mennesker, der allerede kan lide dig",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inkluderet topvalg, ubegrænsede likes, 1 Free Boost hver måned, 5 gratis aftensmad som hver uge, spole tilbage og pas",
+  "message_before_matching": "Besked inden matching",
+  "99+_people_already_like_you": "99+ mennesker kan allerede lide dig",
+  "see_who_likes_you_and_match_instantly": "Se hvem der kan lide dig og matche øjeblikkeligt",
+  "buy_more_top_picks": "Køb flere topvalg",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Få fuld adgang til topvalg, som dig, send ubegrænsede likes & mere",
+  "see_as_many_likes_as_you_want": "Se så mange likes, som du vil",
+  "1_free_boost_every_month": "1 gratis boost hver måned",
+  "choose_who_see_you": "Vælg hvem der ser dig",
+  "5_free_supper_likes_very_week": "5 Gratis aftensmad kan lide meget uge",
+  "you're_3x_more_likely_to_get_a_match": "Du er 3 gange mere tilbøjelig til at få en kamp",
+  "online_now": "Online nu",
+  "like": "SYNES GODT OM",
+  "nope": "NIX",
+  "supper_like": "Aftensmad kan lide"
 }
