--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -12,7 +12,7 @@
   "my_number_is": "Meine Nummer ist",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "Bitte geben Sie eine gültige Telefonnummer ein",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Wenn Sie auf \"Weiter\" tippen, sendet Heartkink einen Text mit Verifizierungscode. Nachrichten- und Datenraten Mate Apply.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Wenn Sie auf \"Weiter\" tippen, sendet Heartkink einen Text mit Verifizierungscode. Nachrichten- und Datenraten Mate Apply.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Mit der überprüften Telefonnummer kann sich anmelden.",
   "learn_what_happens_when_your_number_changes.": "Erfahren Sie, was passiert, wenn sich Ihre Nummer ändert.",
   "continue": "Weitermachen",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Wie ist deine E-Mailadresse?",
   "don't_lose_access_to_your_account,_verify_your_email": "Verlieren Sie keinen Zugriff auf Ihr Konto, überprüfen Sie Ihre E -Mail",
   "verify_instantly_by_connecting_your_google_account": "Überprüfen Sie sofort, indem Sie Ihr Google -Konto verbinden",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Ich möchte Neuigkeiten, Updates und Angebote von Heartlink erhalten",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Ich möchte Neuigkeiten, Updates und Angebote von Heartlink erhalten",
   "enter_email": "Email eingeben",
-  "welcome_to_heartlink": "Willkommen bei Heartlink",
+  "welcome_to_heartLink": "Willkommen bei Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Bitte befolgen Sie unsere Regeln, um mehr Spaß zu haben und gemeinsam eine großartige Community aufzubauen",
   "be_yourself": "Sei du selbst",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Stellen Sie sicher",
@@ -43,7 +43,7 @@
   "apply": "Anwenden",
   "my_name_is": "Ich heiße",
   "your_name": "Ihren Namen",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "So wird es in Heartlink erscheinen, und Sie werden es nicht ändern werden",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "So wird es in Heartlink erscheinen, und Sie werden es nicht ändern werden",
   "my_birthday_is": "Mein Geburtstag ist",
   "your_age_will_be_public": "Ihr Alter wird öffentlich sein",
   "i_am_a": "Ich bin ein",
@@ -57,15 +57,15 @@
   "my_photos_are": "Meine Fotos sind",
   "add_at_least_2_photos_to_continue": "Fügen Sie mindestens 2 Fotos hinzu, um fortzufahren",
   "enable_location": "Aktiviere Standort",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Sie müssen Ihren Standort bestellen, Heartlinks zu verwenden",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Sie müssen Ihre Standortbestellung ermöglichen, Heartlinks zu verwenden",
   "allow_location": "Standort zulassen",
   "tell_me_more": "Erzähl mir mehr",
   "meet_people_nearby": "Treffen Sie Leute in der Nähe",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Ihre Lage wird verwendet, um potenzielle Übereinstimmungen in Ihrer Nähe zu zeigen.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Möchten Sie jemandem vermeiden, den Sie auf Herzverbindung kennen?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Es ist einfach - teilen Sie den Kontakt Ihres Geräts mit Heartlink, wenn Sie diese Funktion verwenden, um auszuwählen, wer Sie vermeiden möchten",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Wir speichern Ihren blockierten Kontakt, um Sie daran zu hindern, sich zu sehen, wenn Ihr Kontakt ein Konto mit demselben Informationen hat, das Sie bereitstellen. Sie können aufhören, uns in Ihren Einstellungen mit uns zu teilen.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Weitere Informationen finden Sie hier, einschließlich des Verfahrens Ihrer Kontakte Ihre Kontakte",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Möchten Sie jemandem vermeiden, den Sie auf Herzverbindung kennen?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Es ist einfach - teilen Sie den Kontakt Ihres Geräts mit Heartlink, wenn Sie diese Funktion verwenden, um auszuwählen, wer Sie vermeiden möchten",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Wir speichern Ihren blockierten Kontakt, um Sie daran zu hindern, sich zu sehen, wenn Ihr Kontakt über ein Konto mit demselben Informationen verfügt, das Sie bereitstellen. Sie können aufhören, uns in Ihren Einstellungen mit uns zu teilen.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Weitere Informationen finden Sie hier, einschließlich des Verfahrens Ihrer Kontakte Ihre Kontakte",
   "share_{nameUser}_profile": "Teilen Sie {NameUser} Profil",
   "see_what_a_friend_thinks": "Sehen Sie, was ein Freund denkt",
   "report_{nameUser}": "Bericht {NameUser}",
@@ -88,20 +88,20 @@
   "new_connections": "Neue Verbindungen",
   "messages": "Mitteilungen",
   "get_read_receipts": "Holen Sie sich Lesebelege",
-  "level_up_everyone_action_you_take_on_heartlink": "Stufen Sie alle Aktionen auf, die Sie mit Heartlink übernehmen",
   "get_boost_profile": "Holen Sie sich Boost -Profil",
   "get_supper_like": "Holen Sie sich das Abendessen wie",
   "silver_package": "Silberpaket",
   "gold_package": "Goldpaket",
+  "level_up_everyone_action_you_take_on_heartLink": "Stufen Sie alle Aktionen auf, die Sie mit Heartlink übernehmen",
   "get_read_receipt_package": "Holen Sie sich Lese -Quittungspaket",
   "stay_up_to_date": "Auf dem Laufenden bleiben",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Wissen Sie, wann Ihre Nachrichten mit Lese -Quittung gelesen wurden",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Wissen Sie, wann Ihre Nachrichten mit Lesequittung gelesen wurden",
   "most_popular": "AM BELIEBTESTEN",
   "read_receipt": "Quittung lesen",
   "recurring_billing,_cancel_anytime": "Wiederkehrende Abrechnung, jederzeit abbrechen",
   "get_boost_package": "Holen Sie sich Boost -Paket",
   "skip_the_queue": "Überspringen Sie die Warteschlange",
-  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Immer in Ihrer Nähe für 30 Minuten im Top -Profil, um mehr Übereinstimmungen zu erhalten",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Immer in Ihrer Region 30 Minuten im Top -Profil, um mehr Übereinstimmungen zu erhalten",
   "boost_my_profile": "Steigst mein Profil",
   "get_a_gold_package": "Holen Sie sich ein Goldpaket",
   "5_free_supper_like_weekly": "5 kostenloses Abendessen wie wöchentlich",
@@ -117,7 +117,7 @@
   "choose_who_sees_you": "Wählen Sie, wer Sie sieht",
   "only_be_shown_to_people_you've_liked": "Werden nur Leuten gezeigt, die Sie gemocht haben",
   "like_profile_around_the_world": "Wie ein Profil auf der ganzen Welt",
-  "passport_to_anywhere": "Reisepass zu einem überall",
+  "passport_to_anywhere": "Pass zu einem überall",
   "unlimited_rewinds": "Unbegrenzte Rückspulen",
   "go_back_and_try_again": "Geh zurück und versuche es erneut",
   "turn_off_ads": "Anzeigen ausschalten",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Zeigen Sie mir Top -Picks",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Wenn Sie dies einschalten",
   "activity_status": "Aktivitätsstatus",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Erlauben Sie anderen Mitgliedern, zu sehen, ob Sie kürzlich innerhalb der letzten 24 Stunden auf Heartlink aktiv waren. Wenn Sie dies ausgeschaltet haben, können sie Ihren kürzlich aktiven Status nicht sehen",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Erlauben Sie anderen Mitgliedern, zu sehen, ob Sie kürzlich innerhalb der letzten 24 Stunden auf Heartlink aktiv waren. Wenn Sie dies ausgeschaltet haben, können sie Ihren kürzlich aktiven Status nicht sehen",
   "app_settings": "App Einstellungen",
   "show_distance_in": "Distanz zeigen in",
   "language": "Sprache",
@@ -161,7 +161,7 @@
   "choose_the_theme_you_like_most": "Wählen Sie das Thema, das Ihnen am meisten gefällt",
   "log_out": "AUSLOGGEN",
   "delete_account": "KONTO LÖSCHEN",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Fügen Sie Video, Bild oder Logo hinzu, 4% näher am Fertigstellen Ihres Profils und Sie können sogar mehr Likes erhalten",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Fügen Sie Video, Bild oder Logo hinzu 4% näher am Fertigstellen Ihres Profils und Sie können sogar mehr Likes erhalten",
   "add_media": "Medien hinzufügen",
   "upload_photo": "Foto hochladen",
   "upload_loop": "Schleife hochladen",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Zeigen Sie meine Entfernung nicht",
   "show_{nameScream}_on_my_profile": "Zeigen Sie in meinem Profil {namescream} an",
   "you_are_not_enter_the_phone_number": "Sie sind nicht die Telefonnummer eingeben",
-  "Interests": "Interessen",
+  "interests": "Interessen",
   "my_gender": "Mein Geschlecht",
-  "my_orientation": "meine Orientierung"
+  "my_orientation": "meine Orientierung",
+  "version_x.y.z": "Version X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Lebe bei {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{Numberkilometer} {Einheit} weg",
+  "verified": "Verifiziert",
+  "HeartLink": "Herzverbindung",
+  "don't_worry_-_we_won't_tell_this_person": "Mach dir keine Sorgen - wir werden es dieser Person nicht sagen",
+  "finding_people_near_you...": "Leute in deiner Nähe finden ...",
+  "let's_be_friend": "Lass uns Freunde sein",
+  "find_someone_that_wants_to_be_friends": "Finden Sie jemanden, der Freunde sein will",
+  "coffee_date": "Kaffeedatum",
+  "find_someone_to_get_coffee_with": "Finden Sie jemanden, mit dem man Kaffee bekommt",
+  "looking_for_love": "Auf der Suche nach Liebe",
+  "blind_date": "Blind Date",
+  "open_hour_6pm_-_12pm_(local_time)": "Offene Stunde 18 Uhr - 12 Uhr (Ortszeit)",
+  "share_idea": "Idee teilen",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Beantworten Sie schwierige Fragen, anstatt Sätze zu öffnen! Ihre Antworten werden auf der Blind Date -Schnittstelle angezeigt und können verwendet werden, um ein Gespräch zu starten",
+  "get_ready": "Bereit machen",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Fragen und Chat -Zeit sind begrenzt. Denken Sie also schnell und beantworten Sie schnell",
+  "compatible_to_view_profiles": "Kompatibel, um Profile anzuzeigen",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Nachdem der Chat vorbei ist, sehen Sie das Profil der Person, wenn Sie beide übereinstimmen",
+  "i_can't_date_someone_who:": "Ich kann nicht mit jemandem ausgehen, der:",
+  "smoker": "Raucher",
+  "not_lovers": "Keine Liebhaber",
+  "no_romance": "Keine Romantik",
+  "love_novels": "Liebesromane",
+  "answer_question": "Frage beantworten",
+  "optimise_pairing": "Paarung optimieren",
+  "connecting": "Verbinden",
+  "the_best_dinner_is_at:": "Das beste Abendessen ist bei:",
+  "on_the_tray_and_watch_tv": "Auf dem Tablett und fernsehen",
+  "in_bed": "Im Bett",
+  "verified_photo": "Verifiziertes Foto",
+  "likes_you": "MAG DICH",
+  "prioritized_likes": "Priorisierte Likes",
+  "everyone_you_like_will_see_you_soon": "Jeder, den du magst, wird dich bald sehen",
+  "match_instantly_with_people_who_already_like_you": "Passen sofort mit Leuten zusammen, die Sie bereits mögen",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Einschließlich Top -Picks, unbegrenzten Likes, 1 freier Boost jeden Monat, 5 kostenloses Abendessen wie jede Woche, Rückspulen und Pass",
+  "message_before_matching": "Nachricht vor dem Übereinstimmung",
+  "99+_people_already_like_you": "Mehr als 99 Leute wie Sie schon",
+  "see_who_likes_you_and_match_instantly": "Sehen Sie, wer Sie mag und sofort übereinstimmt",
+  "buy_more_top_picks": "Kaufen Sie mehr Top -Picks",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Erhalten Sie den vollen Zugriff auf Top -Picks, wie Sie, unbegrenzte Likes & mehr",
+  "see_as_many_likes_as_you_want": "Sehen Sie so viele Likes, wie Sie wollen",
+  "1_free_boost_every_month": "1 kostenloser Boost jeden Monat",
+  "choose_who_see_you": "Wählen Sie, wer Sie sehen",
+  "5_free_supper_likes_very_week": "5 kostenloses Abendessen mag sehr Woche",
+  "you're_3x_more_likely_to_get_a_match": "Sie sind 3x wahrscheinlicher, dass Sie ein Match bekommen",
+  "online_now": "Jetzt online",
+  "like": "WIE",
+  "nope": "NÖ",
+  "supper_like": "Abendessen wie"
 }
