--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -12,7 +12,7 @@
   "my_number_is": "Ο αριθμός μου είναι",
   "phone_number": "Τηλεφωνικό νούμερο",
   "please_enter_a_valid_phone_number": "Παρακαλώ εισάγετε έναν έγκυρο αριθμό τηλεφώνου",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Όταν πατάτε το 'Continter', το HeartLink θα στείλει ένα κείμενο με κωδικό επαλήθευσης. Εφαρμόστε ισχύει ο τύπος μηνυμάτων και οι τιμές δεδομένων.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Όταν πατάτε το 'Continter', το HeartLink θα στείλει ένα κείμενο με κωδικό επαλήθευσης. Εφαρμόστε ισχύει ο τύπος μηνυμάτων και οι τιμές δεδομένων.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Ο επαληθευμένος αριθμός τηλεφώνου μπορεί να χρησιμοποιηθεί για να συνδεθεί.",
   "learn_what_happens_when_your_number_changes.": "Μάθετε τι συμβαίνει όταν αλλάξει ο αριθμός σας.",
   "continue": "Να συνεχίσει",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Ποιο είναι το email σας;",
   "don't_lose_access_to_your_account,_verify_your_email": "Μην χάσετε πρόσβαση στον λογαριασμό σας, επαληθεύστε το email σας",
   "verify_instantly_by_connecting_your_google_account": "Επαληθεύστε αμέσως τη σύνδεση του λογαριασμού σας στο Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Θέλω να λάβω νέα, ενημερώσεις και προσφορές από το HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Θέλω να λάβω νέα, ενημερώσεις και προσφορές από το HeartLink",
   "enter_email": "Εισάγετε ηλεκτρονική διεύθυνση",
-  "welcome_to_heartlink": "Καλώς ήλθατε στο Heartlink",
+  "welcome_to_heartLink": "Καλώς ήλθατε στο HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Ακολουθήστε τους κανόνες μας για να διασκεδάσετε και να οικοδομήσετε μια μεγάλη κοινότητα μαζί",
   "be_yourself": "Να είσαι ο εαυτός σου",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Βεβαιωθείτε ότι οι φωτογραφίες σας, η ηλικία και το βιογραφικό σας είναι αληθινό σε ποιοι είστε",
@@ -43,7 +43,7 @@
   "apply": "Ισχύουν",
   "my_name_is": "Το όνομά μου είναι",
   "your_name": "Το όνομα σου",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Έτσι θα εμφανιστεί στο HeartLink και δεν θα το αλλάξετε",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Έτσι θα εμφανιστεί στο HeartLink και δεν θα το αλλάξετε",
   "my_birthday_is": "Τα γενέθλιά μου είναι",
   "your_age_will_be_public": "Η ηλικία σας θα είναι δημόσια",
   "i_am_a": "Είμαι",
@@ -57,15 +57,15 @@
   "my_photos_are": "Οι φωτογραφίες μου είναι",
   "add_at_least_2_photos_to_continue": "Προσθέστε τουλάχιστον 2 φωτογραφίες για να συνεχίσετε",
   "enable_location": "Ενεργοποίηση τοποθεσίας",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Θα χρειαστεί να ενεργοποιήσετε την παραγγελία σας για να χρησιμοποιήσετε τις καρδιακές συνδέσεις",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Θα χρειαστεί να ενεργοποιήσετε την παραγγελία σας για να χρησιμοποιήσετε τις καρδιακές συνδέσεις",
   "allow_location": "Επιτρέψτε την τοποθεσία",
   "tell_me_more": "Πες μου κι άλλα",
   "meet_people_nearby": "Γνωρίστε άτομα κοντά",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Η τοποθεσία σας θα χρησιμοποιηθεί για να εμφανίσει πιθανούς αγώνες κοντά σας.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Θέλετε να αποφύγετε κάποιον που γνωρίζετε στο HeartLink;",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Είναι εύκολο - μοιραστείτε την επαφή της συσκευής σας με το HeartLink όταν χρησιμοποιείτε αυτήν τη λειτουργία για να επιλέξετε ποιος θέλετε να αποφύγετε",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Θα αποθηκεύσουμε την μπλοκαρισμένη επαφή σας για να σας εμποδίσουν να δείτε ο ένας τον άλλον εάν η επαφή σας έχει λογαριασμό με τα ίδια Infor που παρέχετε. Μπορείτε να σταματήσετε να μοιράζεστε μαζί μας στις ρυθμίσεις σας.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Μάθετε περισσότερα εδώ, συμπεριλαμβανομένου του τρόπου με τον οποίο η HeartLink επεξεργάζεται τις επαφές σας",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Θέλετε να αποφύγετε κάποιον που γνωρίζετε στο HeartLink;",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Είναι εύκολο - μοιραστείτε την επαφή της συσκευής σας με το HeartLink όταν χρησιμοποιείτε αυτήν τη λειτουργία για να επιλέξετε ποιος θέλετε να αποφύγετε",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Θα αποθηκεύσουμε την αποκλεισμένη επαφή σας για να σας εμποδίσουν να δείτε ο ένας τον άλλον εάν η επαφή σας έχει λογαριασμό με τα ίδια Infor που παρέχετε. Μπορείτε να σταματήσετε να μοιράζεστε μαζί μας στις ρυθμίσεις σας.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Μάθετε περισσότερα εδώ, συμπεριλαμβανομένου του τρόπου με τον οποίο η HeartLink επεξεργάζεται τις επαφές σας",
   "share_{nameUser}_profile": "Μοιραστείτε το προφίλ {nameUser}",
   "see_what_a_friend_thinks": "Δείτε τι σκέφτεται ένας φίλος",
   "report_{nameUser}": "Αναφορά {nameUser}",
@@ -88,18 +88,18 @@
   "new_connections": "Νέες συνδέσεις",
   "messages": "Μηνύματα",
   "get_read_receipts": "Λάβετε ανάγνωση αποδείξεων",
-  "level_up_everyone_action_you_take_on_heartlink": "Επικεφαλής της δράσης που παίρνετε στο HeartLink",
   "get_boost_profile": "Λήψη προφίλ ώθησης",
   "get_supper_like": "Πάρτε το δείπνο σαν",
   "silver_package": "Ασημένιο πακέτο",
   "gold_package": "Χρυσό πακέτο",
+  "level_up_everyone_action_you_take_on_heartLink": "Επικεφαλής της δράσης που παίρνετε στο HeartLink",
   "get_read_receipt_package": "Λάβετε το πακέτο παραλαβής ανάγνωσης",
   "stay_up_to_date": "Μείνετε ενημερωμένοι",
   "know_when_your_messages_have_been_read_with_read_receipt": "Γνωρίστε πότε έχουν διαβαστεί τα μηνύματά σας με απόδειξη ανάγνωσης",
   "most_popular": "ΔΗΜΟΦΙΛΕΣΤΕΡΟΣ",
   "read_receipt": "Ανάγνωση απόδειξη",
   "recurring_billing,_cancel_anytime": "Επαναλαμβανόμενη χρέωση, ακυρώστε ανά πάσα στιγμή",
-  "get_boost_package": "Πάρτε πακέτο Boost",
+  "get_boost_package": "Πάρτε πακέτο ώθησης",
   "skip_the_queue": "Παραλείψτε την ουρά",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Πάντα στο κορυφαίο προφίλ στην περιοχή σας για 30 λεπτά για να λάβετε περισσότερους αγώνες",
   "boost_my_profile": "Ενισχύστε το προφίλ μου",
@@ -139,20 +139,20 @@
   "control_who_you_see": "Ελέγξτε ποιος βλέπετε",
   "sliver_package": "Πακέτο",
   "balance_recommendations": "Συστάσεις ισορροπίας",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Δείτε τους πιο σχετικούς ανθρώπους για εσάς (προεπιλεγμένες ρυθμίσεις)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Δείτε τους πιο σχετικούς ανθρώπους σε εσάς (προεπιλεγμένες ρυθμίσεις)",
   "recently_active": "Πρόσφατα ενεργός",
   "see_the_most_recently_active_people_first": "Δείτε πρώτα τους πιο πρόσφατα ενεργούς ανθρώπους",
   "standard": "Πρότυπο",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Να αποδειχθεί μόνο σε ορισμένους τύπους ατόμων για μεμονωμένες συστάσεις",
   "only_people_i've_liked": "Μόνο άτομα που μου άρεσαν",
-  "only_people_you_have_liked_will_see_me": "Μόνο άτομα που σας άρεσαν θα με δουν",
+  "only_people_you_have_liked_will_see_me": "Μόνο τα άτομα που σας άρεσαν θα με δουν",
   "only_wi-fi_only": "Μόνο Wi-Fi μόνο",
   "on_wi-fi_and_mobile_data": "Σε δεδομένα Wi-Fi και κινητής τηλεφωνίας",
   "never_auto_play_videos": "Never Auto Play Videos",
   "show_me_top_picks": "Δείξε μου κορυφαίες επιλογές",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Η ενεργοποίηση αυτού του ενεργού θα σας επιτρέψει να εμφανιστεί ως μια κορυφαία επιλογή σε άλλους χρήστες κοντά σας",
   "activity_status": "Κατάσταση δραστηριότητας",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Επιτρέψτε σε άλλα μέλη να δουν αν ήσασταν πρόσφατα ενεργά μέσα στο τελευταίο 24ωρο στο HeartLink. Εάν το έχετε απενεργοποιήσει, δεν θα μπορέσουν να δουν την πρόσφατα ενεργή σας κατάσταση",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Επιτρέψτε σε άλλα μέλη να δουν αν ήσασταν πρόσφατα ενεργά μέσα στο τελευταίο 24ωρο στο HeartLink. Εάν το έχετε απενεργοποιήσει, δεν θα μπορέσουν να δουν την πρόσφατα ενεργή σας κατάσταση",
   "app_settings": "Ρυθμίσεις εφαρμογής",
   "show_distance_in": "Εμφάνιση απόστασης",
   "language": "Γλώσσα",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Μην δείχνετε την απόσταση μου",
   "show_{nameScream}_on_my_profile": "Εμφάνιση {NamesCream} στο προφίλ μου",
   "you_are_not_enter_the_phone_number": "Δεν εισάγετε τον αριθμό τηλεφώνου",
-  "Interests": "Τα ενδιαφέροντα",
+  "interests": "Τα ενδιαφέροντα",
   "my_gender": "το γένος μου",
-  "my_orientation": "ο προσανατολισμός μου"
+  "my_orientation": "ο προσανατολισμός μου",
+  "version_x.y.z": "Έκδοση x.y.z",
+  "km": "km",
+  "mi": "μι",
+  "live_at_{nameAddress}": "Ζήστε στο {Nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {Unit} μακριά",
+  "verified": "Επαληθευμένος",
+  "HeartLink": "Καρδιακή σύνδεση",
+  "don't_worry_-_we_won't_tell_this_person": "Μην ανησυχείτε - δεν θα πούμε σε αυτό το άτομο",
+  "finding_people_near_you...": "Βρίσκοντας ανθρώπους κοντά σας ...",
+  "let's_be_friend": "Ας γίνουμε φίλοι",
+  "find_someone_that_wants_to_be_friends": "Βρείτε κάποιον που θέλει να είναι φίλος",
+  "coffee_date": "Ημερομηνία καφέ",
+  "find_someone_to_get_coffee_with": "Βρείτε κάποιον για να πάρετε καφέ με",
+  "looking_for_love": "Ψάχνοντας για αγάπη",
+  "blind_date": "Ραντεβού στα τυφλά",
+  "open_hour_6pm_-_12pm_(local_time)": "Ανοιχτή ώρα 6μμ - 12μμ (τοπική ώρα)",
+  "share_idea": "Μοιραστείτε την ιδέα",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Απαντήστε σε δύσκολες ερωτήσεις αντί να ανοίξετε προτάσεις! Οι απαντήσεις σας θα εμφανιστούν στη διεπαφή τυφλής ημερομηνίας και μπορούν να χρησιμοποιηθούν για να ξεκινήσετε μια συνομιλία",
+  "get_ready": "Ετοιμάσου",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Οι ερωτήσεις και ο χρόνος συνομιλίας είναι περιορισμένοι, οπότε σκεφτείτε και απαντήστε γρήγορα",
+  "compatible_to_view_profiles": "Συμβατό για προφίλ προφίλ",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Μετά την ολοκλήρωση της συνομιλίας, θα δείτε το προφίλ του ατόμου, αν και οι δύο ταιριάζουν",
+  "i_can't_date_someone_who:": "Δεν μπορώ να γνωρίσω κάποιον που:",
+  "smoker": "Καπνιστής",
+  "not_lovers": "Όχι εραστές",
+  "no_romance": "Χωρίς ρομαντισμό",
+  "love_novels": "Λατρεύω τα μυθιστορήματα",
+  "answer_question": "Απάντησε στην ερώτηση",
+  "optimise_pairing": "Βελτιστοποιήστε το ζευγάρωμα",
+  "connecting": "Συνδετικός",
+  "the_best_dinner_is_at:": "Το καλύτερο δείπνο είναι:",
+  "on_the_tray_and_watch_tv": "Στο δίσκο και να παρακολουθήσετε τηλεόραση",
+  "in_bed": "Στο κρεβάτι",
+  "verified_photo": "Επαληθευμένη φωτογραφία",
+  "likes_you": "ΤΟΥ ΑΡΕΣΕΙΣ",
+  "prioritized_likes": "Προτεραιότητα που προτιμούν",
+  "everyone_you_like_will_see_you_soon": "Όλοι που σας αρέσουν θα σας δουν σύντομα",
+  "match_instantly_with_people_who_already_like_you": "Ταιριάζει αμέσως με άτομα που σας αρέσουν ήδη",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Συμπεριλαμβανομένων κορυφαίων επιλογών, απεριόριστων συμπαθειών, 1 χωρίς ώθηση κάθε μήνα, 5 ελεύθερο δείπνο όπως κάθε εβδομάδα, Rewind και Passport",
+  "message_before_matching": "Μήνυμα πριν από την αντιστοίχιση",
+  "99+_people_already_like_you": "99+ άτομα που μου αρέσουν ήδη",
+  "see_who_likes_you_and_match_instantly": "Δείτε ποιος σας αρέσει και ταιριάζει αμέσως",
+  "buy_more_top_picks": "Αγοράστε περισσότερες κορυφαίες επιλογές",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Αποκτήστε πλήρη πρόσβαση σε κορυφαίες επιλογές, όπως εσείς, στείλτε απεριόριστα συμπαθήματα και άλλα",
+  "see_as_many_likes_as_you_want": "Δείτε όσα συμπαθούν όπως θέλετε",
+  "1_free_boost_every_month": "1 δωρεάν ώθηση κάθε μήνα",
+  "choose_who_see_you": "Επιλέξτε ποιος σας βλέπει",
+  "5_free_supper_likes_very_week": "5 Ελεύθερο δείπνο αρέσει πολύ εβδομάδα",
+  "you're_3x_more_likely_to_get_a_match": "Είστε 3 φορές πιο πιθανό να πάρετε έναν αγώνα",
+  "online_now": "Συνδεδεμένος τώρα",
+  "like": "ΑΡΕΣΕΙ",
+  "nope": "ΟΧΙ",
+  "supper_like": "Δείπνο"
 }
