--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,7 @@
   "my_number_is": "My number is",
   "phone_number": "Phone number",
   "please_enter_a_valid_phone_number": "Please enter a valid phone number",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "When you tap 'Continue', HeartLink will send a text with verification code. Message and data rates mate apply.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "When you tap 'Continue', HeartLink will send a text with verification code. Message and data rates mate apply.",
   "the_verified_phone_number_can_be_used_to_log_in.": "The verified phone number can be used to log in.",
   "learn_what_happens_when_your_number_changes.": "Learn what happens when your number changes.",
   "continue": "Continue",
@@ -23,9 +23,9 @@
   "what's_your_email?": "What's your email?",
   "don't_lose_access_to_your_account,_verify_your_email": "Don't lose access to your account, verify your email",
   "verify_instantly_by_connecting_your_google_account": "Verify instantly by connecting your Google account",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "I want to receive news, updates and offers from HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "I want to receive news, updates and offers from HeartLink",
   "enter_email": "Enter email",
-  "welcome_to_heartlink": "Welcome to HeartLink",
+  "welcome_to_heartLink": "Welcome to HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Please follow our rules to have more fun and build a great community together",
   "be_yourself": "Be Yourself",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Make sure your photos, age and bio true to who you are",
@@ -43,7 +43,7 @@
   "apply": "Apply",
   "my_name_is": "My name is",
   "your_name": "Your name",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "This is how it will appear in HeartLink, and you will not able to change it",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "This is how it will appear in HeartLink, and you will not able to change it",
   "my_birthday_is": "My birthday is",
   "your_age_will_be_public": "Your age will be public",
   "i_am_a": "I am a",
@@ -57,15 +57,15 @@
   "my_photos_are": "My Photos are",
   "add_at_least_2_photos_to_continue": "Add at least 2 photos to continue",
   "enable_location": "Enable Location",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "You will need to enable your location order to use HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "You will need to enable your location order to use HeartLinks",
   "allow_location": "Allow Location",
   "tell_me_more": "Tell me more",
   "meet_people_nearby": "MEET PEOPLE NEARBY",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "You location will be used to show potential matches near you.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Want to avoid someone you know on HeartLink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "It is easy - share your device's contact with HeartLink when using this feature to pick who you want to avoid",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Want to avoid someone you know on HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "It is easy - share your device's contact with HeartLink when using this feature to pick who you want to avoid",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "We'll store your blocked contact to stop you from seeing each other if your contact has an account with the same infor you provide. You can stop sharing with us in your settings.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Learn more here, including how HeartLink process your contacts",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Learn more here, including how HeartLink process your contacts",
   "share_{nameUser}_profile": "Share {nameUser} profile",
   "see_what_a_friend_thinks": "See what a friend thinks",
   "report_{nameUser}": "Report {nameUser}",
@@ -83,16 +83,16 @@
   "no_thanks": "NO THANKS",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Upgrade to Gold to see people who are interested in you",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "No one likes you yet. Done't worry, make sure you complete your profile to other find you faster",
-  "see_who_likes_you": "SEE WHO LIKES YOU",
+  "see_who_likes_you": "See who likes you",
   "recommendations": "Recommendations",
   "new_connections": "New Connections",
   "messages": "Messages",
   "get_read_receipts": "Get Read Receipts",
-  "level_up_everyone_action_you_take_on_heartlink": "Level up everyone action you take on HeartLink",
   "get_boost_profile": "Get Boost Profile",
   "get_supper_like": "Get Supper Like",
   "silver_package": "Silver package",
   "gold_package": "Gold package",
+  "level_up_everyone_action_you_take_on_heartLink": "Level up everyone action you take on HeartLink",
   "get_read_receipt_package": "Get Read Receipt Package",
   "stay_up_to_date": "Stay up to date",
   "know_when_your_messages_have_been_read_with_read_receipt": "Know when your messages have been read with Read Receipt",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Show me Top picks",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Turning this on will allow you to be shown as a featured Top Pick to other users near you",
   "activity_status": "Activity Status",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Allow other members to see if you were recently active within the last 24h on HeartLink. If you have turned this off, they will not be able to see your recently active status",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Allow other members to see if you were recently active within the last 24h on HeartLink. If you have turned this off, they will not be able to see your recently active status",
   "app_settings": "App Settings",
   "show_distance_in": "SHOW DISTANCE IN",
   "language": "Language",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Don't show my distance",
   "show_{nameScream}_on_my_profile": "Show {nameScream} on my profile",
   "you_are_not_enter_the_phone_number": "You are not enter the phone number",
-  "Interests": "Interests",
+  "interests": "Interests",
   "my_gender": "my gender",
-  "my_orientation": "my orientation"
+  "my_orientation": "my orientation",
+  "version_x.y.z": "Version x.y.z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Live at {nameAddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {unit} away",
+  "verified": "Verified",
+  "heartLink": "HeartLink",
+  "don't_worry_-_we_won't_tell_this_person": "Don't worry - we won't tell this person",
+  "finding_people_near_you...": "Finding people near you...",
+  "let's_be_friend": "Let's be friend",
+  "find_someone_that_wants_to_be_friends": "Find someone that wants to be friends",
+  "coffee_date": "Coffee Date",
+  "find_someone_to_get_coffee_with": "Find someone to get coffee with",
+  "looking_for_love": "Looking for love",
+  "blind_date": "Blind Date",
+  "open_hour_6pm_-_12pm_(local_time)": "Open hour 6pm - 12pm (Local time)",
+  "share_idea": "Share idea",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Answer tough questions instead of opening sentences! Your responses will appear on the Blind Date interface and can be used to start a conversation",
+  "get_ready": "Get ready",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Questions and chat time are limited, so think and answer quickly",
+  "compatible_to_view_profiles": "Compatible to view profiles",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "After the chat is over, you'll see the person's profile if you both match",
+  "i_can't_date_someone_who:": "I can't date someone who:",
+  "smoker": "Smoker",
+  "not_lovers": "Not lovers",
+  "no_romance": "No romance",
+  "love_novels": "Love novels",
+  "answer_question": "Answer question",
+  "optimise_pairing": "Optimise pairing",
+  "connecting": "Connecting",
+  "the_best_dinner_is_at:": "The best dinner is at:",
+  "on_the_tray_and_watch_tv": "On the tray and watch TV",
+  "in_bed": "In bed",
+  "verified_photo": "Verified photo",
+  "likes_you": "LIKES YOU",
+  "prioritized_likes": "Prioritized Likes",
+  "everyone_you_like_will_see_you_soon": "Everyone you like will see you soon",
+  "match_instantly_with_people_who_already_like_you": "Match instantly with people who already like you",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Including Top Picks, Unlimited likes, 1free Boost every month, 5 free Supper Like every week, Rewind and Passport",
+  "message_before_matching": "Message before matching",
+  "99+_people_already_like_you": "99+ people already like you",
+  "see_who_likes_you_and_match_instantly": "See who likes you and match instantly",
+  "buy_more_top_picks": "Buy more Top Picks",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Get full access to Top Picks, Like you, send unlimited likes & more",
+  "see_as_many_likes_as_you_want": "See as many likes as you want",
+  "1_free_boost_every_month": "1 free boost every month",
+  "choose_who_see_you": "Choose who see you",
+  "5_free_supper_likes_very_week": "5 free Supper Likes very week",
+  "you're_3x_more_likely_to_get_a_match": "You're 3x more likely to get a match",
+  "online_now": "Online now",
+  "like": "LIKE",
+  "nope": "NOPE",
+  "supper_like": "SUPPER LIKE"
 }
