--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mi número es",
   "phone_number": "Número de teléfono",
   "please_enter_a_valid_phone_number": "Por favor ingrese un número de teléfono válido",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Cuando toque 'Continuar', HeartLink enviará un texto con código de verificación. MECHO Y TARAS DE DATOS DE DATOS Aplicar.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Cuando toque 'Continuar', HeartLink enviará un texto con código de verificación. MECHO Y TARAS DE DATOS DE DATOS Aplicar.",
   "the_verified_phone_number_can_be_used_to_log_in.": "El número de teléfono verificado se puede usar para iniciar sesión.",
   "learn_what_happens_when_your_number_changes.": "Aprenda lo que sucede cuando cambia su número.",
   "continue": "Continuar",
@@ -21,11 +21,11 @@
   "resend_code": "Reenviar codigo",
   "invalid_code._please_try_again": "Codigo invalido. Inténtalo de nuevo",
   "what's_your_email?": "¿Cuál es tu correo electrónico?",
-  "don't_lose_access_to_your_account,_verify_your_email": "No pierda el acceso a su cuenta, verifique su correo electrónico",
+  "don't_lose_access_to_your_account,_verify_your_email": "No pierda acceso a su cuenta, verifique su correo electrónico",
   "verify_instantly_by_connecting_your_google_account": "Verifique instantáneamente conectando su cuenta de Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Quiero recibir noticias, actualizaciones y ofertas de HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Quiero recibir noticias, actualizaciones y ofertas de HeartLink",
   "enter_email": "Ingrese correo electrónico",
-  "welcome_to_heartlink": "Bienvenido a Heartlink",
+  "welcome_to_heartLink": "Bienvenido a Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Siga nuestras reglas para divertirse más y construir una gran comunidad juntos",
   "be_yourself": "Ser uno mismo",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Asegúrese de sus fotos, edad y biografía de quién es usted",
@@ -35,7 +35,7 @@
   "play_it_cool": "Relájate",
   "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Respeta a los demás y trátalos como le gustaría que lo traten",
   "be_proactive": "Ser proactivo",
-  "always_report_bad_behavior": "Siempre reporta un mal comportamiento",
+  "always_report_bad_behavior": "Siempre reportar mal comportamiento",
   "i_agree": "Estoy de acuerdo",
   "are_you_sure?": "¿Está seguro?",
   "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "¿Saldrá de este proceso de registro y toda su información se eliminará?",
@@ -43,7 +43,7 @@
   "apply": "Aplicar",
   "my_name_is": "Mi nombre es",
   "your_name": "Su nombre",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Así es como aparecerá en HeartLink, y no podrás cambiarlo",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Así es como aparecerá en HeartLink, y no podrás cambiarlo",
   "my_birthday_is": "Mi cumpleaños es",
   "your_age_will_be_public": "Tu edad será pública",
   "i_am_a": "soy un",
@@ -57,15 +57,15 @@
   "my_photos_are": "Mis fotos son",
   "add_at_least_2_photos_to_continue": "Agregue al menos 2 fotos para continuar",
   "enable_location": "Habilitar ubicación",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Deberá habilitar su pedido de ubicación para usar HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Deberá habilitar su pedido de ubicación para usar HeartLinks",
   "allow_location": "Permitir ubicación",
   "tell_me_more": "Dime más",
-  "meet_people_nearby": "Conoce gente cerca",
+  "meet_people_nearby": "Conocer gente cerca",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Su ubicación se utilizará para mostrar posibles coincidencias cerca de usted.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "¿Quieres evitar a alguien que conoces en HeartLink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Es fácil: comparta el contacto de su dispositivo con HeartLink cuando use esta función para elegir a quién desea evitar",
+  "want_to_avoid_someone_you_know_on_heartLink?": "¿Quieres evitar a alguien que conoces en HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Es fácil: comparta el contacto de su dispositivo con HeartLink cuando use esta función para elegir a quién desea evitar",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Almacenaremos su contacto bloqueado para evitar que se vea si su contacto tiene una cuenta con la misma información que proporciona. Puede dejar de compartir con nosotros en su configuración.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Obtenga más información aquí, incluyendo cómo HeartLink procesa sus contactos",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Obtenga más información aquí, incluyendo cómo HeartLink procesa sus contactos",
   "share_{nameUser}_profile": "Compartir {nameUser} perfil",
   "see_what_a_friend_thinks": "Mira lo que piensa un amigo",
   "report_{nameUser}": "Informe {nameUser}",
@@ -88,18 +88,18 @@
   "new_connections": "Nuevas conexiones",
   "messages": "Mensajes",
   "get_read_receipts": "Obtenga recibos de lectura",
-  "level_up_everyone_action_you_take_on_heartlink": "Nivele a todos la acción que tomas en HeartLink",
   "get_boost_profile": "Obtener perfil de impulso",
-  "get_supper_like": "Obtener una cena como",
+  "get_supper_like": "Obtener cena como",
   "silver_package": "Paquete de plata",
   "gold_package": "Paquete de oro",
+  "level_up_everyone_action_you_take_on_heartLink": "Nivele a todos la acción que tomas en HeartLink",
   "get_read_receipt_package": "Obtenga el paquete de recibo de lectura",
   "stay_up_to_date": "Estar al día",
   "know_when_your_messages_have_been_read_with_read_receipt": "Sepa cuándo se han leído sus mensajes con el recibo de lectura",
   "most_popular": "MÁS POPULAR",
   "read_receipt": "Leer el recibo",
   "recurring_billing,_cancel_anytime": "Facturación recurrente, cancelar en cualquier momento",
-  "get_boost_package": "Obtener el paquete BOOST",
+  "get_boost_package": "Obtener el paquete Boost",
   "skip_the_queue": "Omitir la cola",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Siempre en el perfil superior en su área durante 30 minutos para obtener más partidos",
   "boost_my_profile": "Aumentar mi perfil",
@@ -145,14 +145,14 @@
   "standard": "Estándar",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Solo se muestra en ciertos tipos de personas para recomendaciones individuales.",
   "only_people_i've_liked": "Solo personas a las que me han gustado",
-  "only_people_you_have_liked_will_see_me": "Solo las personas que te ha gustado me verán",
+  "only_people_you_have_liked_will_see_me": "Solo las personas que te ha gustado me vemos",
   "only_wi-fi_only": "Solo Wi-Fi solo",
   "on_wi-fi_and_mobile_data": "En Wi-Fi y datos móviles",
   "never_auto_play_videos": "Nunca reproducir automáticamente videos",
   "show_me_top_picks": "Muéstrame las mejores elecciones",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Encender esto le permitirá mostrarse como una selección superior destacada para otros usuarios cerca de usted",
   "activity_status": "Estado de actividad",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permita que otros miembros vean si estuvo recientemente activo dentro de las últimas 24 h en HeartLink. Si ha desactivado esto, no podrán ver su estado recientemente activo",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permita que otros miembros vean si estuvo recientemente activo dentro de las últimas 24 h en HeartLink. Si ha desactivado esto, no podrán ver su estado recientemente activo",
   "app_settings": "Ajustes de Aplicacion",
   "show_distance_in": "Mostrar distancia en",
   "language": "Idioma",
@@ -161,7 +161,7 @@
   "choose_the_theme_you_like_most": "Elija el tema que más le guste",
   "log_out": "CERRAR SESIÓN",
   "delete_account": "BORRAR CUENTA",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Agregue video, foto o logotipo toget 4% más cerca de completar su perfil e incluso puede obtener más me gusta",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Agregue video, foto o logotipo un 4% más cerca de completar su perfil e incluso puede obtener más me gusta",
   "add_media": "Agregar medios",
   "upload_photo": "Subir foto",
   "upload_loop": "Bucle de carga",
@@ -184,7 +184,7 @@
   "basic_information": "INFORMACIÓN BÁSICA",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Agregue más información para que la gente pueda ver sus increíbles fotos",
   "what_is_your_zodiac_sign?": "¿Cuál es tu signo del zodiaco?",
-  "your_education_level?": "¿Tu nivel de educación?",
+  "your_education_level?": "Tu nivel de educación?",
   "do_you_want_to_have_children?": "¿Te gustaría tener hijos?",
   "have_you_been_vaccinated_yet?": "¿Ya has sido vacunado?",
   "what_is_your_personality_type?": "¿Cual es tu tipo de personalidad?",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "No muestres mi distancia",
   "show_{nameScream}_on_my_profile": "Mostrar {NamesCream} en mi perfil",
   "you_are_not_enter_the_phone_number": "No estás ingresando al número de teléfono",
-  "Interests": "Intereses",
+  "interests": "Intereses",
   "my_gender": "Mi género",
-  "my_orientation": "Mi orientación"
+  "my_orientation": "Mi orientación",
+  "version_x.y.z": "Versión X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Vivir en {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {unidad} de distancia",
+  "verified": "Verificado",
+  "HeartLink": "Heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "No te preocupes, no le diremos a esta persona",
+  "finding_people_near_you...": "Encontrar gente cerca de ti ...",
+  "let's_be_friend": "Seamos amigos",
+  "find_someone_that_wants_to_be_friends": "Encuentra a alguien que quiera ser amigo",
+  "coffee_date": "Fecha de café",
+  "find_someone_to_get_coffee_with": "Encuentra a alguien con quien tomar café",
+  "looking_for_love": "Buscando amor",
+  "blind_date": "Cita a ciegas",
+  "open_hour_6pm_-_12pm_(local_time)": "Hora abierta 6pm - 12pm (hora local)",
+  "share_idea": "Compartir idea",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "¡Responda preguntas difíciles en lugar de abrir oraciones! Sus respuestas aparecerán en la interfaz de la fecha ciega y se pueden usar para iniciar una conversación",
+  "get_ready": "Prepararse",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Las preguntas y el tiempo de chat son limitados, así que piense y responda rápidamente",
+  "compatible_to_view_profiles": "Compatible para ver perfiles",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Después de que termine el chat, verá el perfil de la persona si ambos coinciden",
+  "i_can't_date_someone_who:": "No puedo salir con alguien que:",
+  "smoker": "Fumador",
+  "not_lovers": "No amantes",
+  "no_romance": "Sin romance",
+  "love_novels": "Novelas de amor",
+  "answer_question": "Pregunta de respuesta",
+  "optimise_pairing": "Optimizar el emparejamiento",
+  "connecting": "Conexión",
+  "the_best_dinner_is_at:": "La mejor cena está en:",
+  "on_the_tray_and_watch_tv": "En la bandeja y mira televisión",
+  "in_bed": "En cama",
+  "verified_photo": "Foto verificada",
+  "likes_you": "LE GUSTAS",
+  "prioritized_likes": "Me gusta priorizados",
+  "everyone_you_like_will_see_you_soon": "Todos los que te guste te verán pronto",
+  "match_instantly_with_people_who_already_like_you": "Coincide al instante con personas a las que ya les gustas",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Incluyendo selecciones principales, me gusta ilimitados, 1T a libre cada mes, 5 cena gratis como cada semana, rebobinado y pasaporte",
+  "message_before_matching": "Mensaje antes de coincidir",
+  "99+_people_already_like_you": "Más de 99 personas ya les gustas",
+  "see_who_likes_you_and_match_instantly": "Mira a quién le gustas y coincide al instante",
+  "buy_more_top_picks": "Comprar más selecciones superiores",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Obtenga acceso completo a las mejores selecciones, como usted, envíe me gusta ilimitados y más",
+  "see_as_many_likes_as_you_want": "Mira tantos me gusta como quieras",
+  "1_free_boost_every_month": "1 impulso gratis cada mes",
+  "choose_who_see_you": "Elige quién te vemos",
+  "5_free_supper_likes_very_week": "5 cena gratis le gusta muy semana",
+  "you're_3x_more_likely_to_get_a_match": "Eres 3 veces más probable que obtengas un partido",
+  "online_now": "En línea ahora",
+  "like": "COMO",
+  "nope": "NO",
+  "supper_like": "Cenar como"
 }
