--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -12,7 +12,7 @@
   "my_number_is": "Numeroni on",
   "phone_number": "Puhelinnumero",
   "please_enter_a_valid_phone_number": "Ole hyvä ja näppäile voimassaoleva puhelinnumero",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Kun napautat 'Jatka', HeartLink lähettää tekstin varmennuskoodilla. Viesti- ja tiedonsiirtonopeudet MATE.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Kun napautat 'Jatka', HeartLink lähettää tekstin varmennuskoodilla. Viesti- ja tiedonsiirtonopeudet MATE.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Vahvistettua puhelinnumeroa voidaan kirjautua sisään.",
   "learn_what_happens_when_your_number_changes.": "Opi mitä tapahtuu, kun numerosi muuttuu.",
   "continue": "Jatkaa",
@@ -23,10 +23,10 @@
   "what's_your_email?": "Mikä on sähköpostisi?",
   "don't_lose_access_to_your_account,_verify_your_email": "Älä menetä pääsyä tilillesi, tarkista sähköpostiosoitteesi",
   "verify_instantly_by_connecting_your_google_account": "Varmista heti yhdistämällä Google -tilisi",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Haluan vastaanottaa uutisia, päivityksiä ja tarjouksia Heartlinkiltä",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Haluan vastaanottaa uutisia, päivityksiä ja tarjouksia Heartlinkiltä",
   "enter_email": "Syötä sähköposti",
-  "welcome_to_heartlink": "Tervetuloa Heartlinkkiin",
-  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Noudata sääntöjämme, jotta pidä hauskaa ja rakenna upea yhteisö yhdessä",
+  "welcome_to_heartLink": "Tervetuloa Heartlinkkiin",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Noudata sääntöjämme, jotta sinulla on hauskempia ja rakenna upea yhteisö yhdessä",
   "be_yourself": "Ole oma itsesi",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Varmista, että valokuvasi, ikä ja bio on totta kuka olet",
   "stay_safe": "Pysy turvassa",
@@ -43,7 +43,7 @@
   "apply": "Käytä",
   "my_name_is": "Nimeni on",
   "your_name": "Sinun nimesi",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Näin se ilmestyy Heartlinkissä, etkä pysty muuttamaan sitä",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Näin se ilmestyy Heartlinkissä, etkä pysty muuttamaan sitä",
   "my_birthday_is": "Syntymäpäiväni on",
   "your_age_will_be_public": "Ikä on julkinen",
   "i_am_a": "minä olen",
@@ -57,15 +57,15 @@
   "my_photos_are": "Valokuvani ovat",
   "add_at_least_2_photos_to_continue": "Lisää vähintään 2 kuvaa jatkaaksesi",
   "enable_location": "Ota sijainti käyttöön",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Sinun on otettava sijaintitilauksesi käyttöön sydänlinjojen käyttö",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Sinun on otettava sijaintitilauksesi käyttöön sydänlinjojen käyttö",
   "allow_location": "Salli sijainti",
   "tell_me_more": "Kerro minulle lisää",
   "meet_people_nearby": "Tapaa lähellä olevia ihmisiä",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Sijainti käytetään näyttämään potentiaalisia otteluita lähelläsi.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Haluatko välttää joku, jonka tunnet Heartlinkillä?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Se on helppoa - jaa laitteen yhteyshenkilö Heartlinkin kanssa, kun käytät tätä ominaisuutta valitaksesi kuka haluat välttää",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Haluatko välttää joku, jonka tunnet Heartlinkillä?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Se on helppoa - jaa laitteen yhteyshenkilö Heartlinkin kanssa, kun käytät tätä ominaisuutta valitaksesi kuka haluat välttää",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Tallennamme estetyn yhteystietosi estääksesi sinua näkemästä toisiamme, jos yhteystiedossa on tili, jolla on sama tieto. Voit lopettaa jakamisen kanssamme asetuksissasi.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Lisätietoja täältä, mukaan lukien kuinka HeartLink käsittelee yhteystietosi",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Lisätietoja täältä, mukaan lukien kuinka HeartLink käsittelee yhteystietosi",
   "share_{nameUser}_profile": "Jaa {nameuser} -profiili",
   "see_what_a_friend_thinks": "Katso mitä ystävä ajattelee",
   "report_{nameUser}": "Ilmoita {nameuser}",
@@ -88,20 +88,20 @@
   "new_connections": "Uudet yhteydet",
   "messages": "Viestit",
   "get_read_receipts": "Hanki luetut kuitit",
-  "level_up_everyone_action_you_take_on_heartlink": "Tasoi kaikki toimet",
   "get_boost_profile": "Hanki Boost -profiili",
   "get_supper_like": "Hanki illallinen kuten",
   "silver_package": "Hopeapakkaus",
   "gold_package": "Kultapaketti",
+  "level_up_everyone_action_you_take_on_heartLink": "Tasoi kaikki toimet",
   "get_read_receipt_package": "Hanki lue kuittipaketti",
   "stay_up_to_date": "Pysyä ajan tasalla",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Tiedä, milloin viestisi on luettu luetulla kutilla",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Tiedä, milloin viestisi on luettu luetulla vastaanotolla",
   "most_popular": "SUOSITUIN",
   "read_receipt": "Lue kuitti",
   "recurring_billing,_cancel_anytime": "Toistuva laskutus, peruuta milloin tahansa",
   "get_boost_package": "Hanki Boost -paketti",
   "skip_the_queue": "Hyppää jono",
-  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Aina alueellasi parhaimmassa profiilissa 30 minuutin ajan saadaksesi lisää otteluita",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Aina alueellasi huippuprofiilissa 30 minuutin ajan saadaksesi lisää otteluita",
   "boost_my_profile": "Lisää profiiliani",
   "get_a_gold_package": "Hanki kultapaketti",
   "5_free_supper_like_weekly": "5 ilmaista illallista kuten viikoittain",
@@ -136,10 +136,10 @@
   "age_range": "Ikähaarukka",
   "show_me": "Näytä minulle",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Käytämme näitä mieltymyksiä löytääksesi otteluita. Jotkut vastaavat ehdotukset eivät välttämättä kuulu haluamasi parametriisi",
-  "control_who_you_see": "Hallita ketä näet",
+  "control_who_you_see": "Hallitse ketä näet",
   "sliver_package": "Paketti",
   "balance_recommendations": "Tasapainon suositukset",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Katso sinulle tärkeimmät ihmiset (oletusasetukset)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Katso sinulle merkityksellisimmät ihmiset (oletusasetukset)",
   "recently_active": "Äskettäin aktiivinen",
   "see_the_most_recently_active_people_first": "Katso viimeksi aktiiviset ihmiset ensin",
   "standard": "Standardi",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Näytä minulle huippuluokan",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Tämän käynnistäminen antaa sinun näytetä esillä olevana huippuvalintana muille lähelläsi oleville käyttäjille",
   "activity_status": "Toiminnan tila",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Anna muiden jäsenten nähdä, oletko äskettäin aktiivinen Heartlinkin viimeisen 24 tunnin aikana. Jos olet sammuttanut tämän, he eivät näe äskettäin aktiivista tilaa",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Anna muiden jäsenten nähdä, oletko äskettäin aktiivinen Heartlinkin viimeisen 24 tunnin aikana. Jos olet sammuttanut tämän, he eivät näe äskettäin aktiivista tilaa",
   "app_settings": "Sovellusasetukset",
   "show_distance_in": "Osoittaa etäisyyttä jhk",
   "language": "Kieli",
@@ -182,7 +182,7 @@
   "the_language_i_know": "Kieli, jonka tiedän",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Valitse jopa 5 tuntemasi kielen ja lisää profiilisi",
   "basic_information": "PERUSTIEDOT",
-  "add_more_info_so_people_can_see_your_amazing_pictures": "Lisää lisätietoja, jotta ihmiset voivat nähdä uskomattomia kuviasi",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "Lisää lisätietoja, jotta ihmiset voivat nähdä uskomattomia kuvia",
   "what_is_your_zodiac_sign?": "Mikä on horoskooppimerkkisi?",
   "your_education_level?": "Koulutustasosi?",
   "do_you_want_to_have_children?": "Haluatko lapsia?",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Älä näytä etäisyyttäni",
   "show_{nameScream}_on_my_profile": "Näytä {namescream} profiilissani",
   "you_are_not_enter_the_phone_number": "Et kirjoita puhelinnumeroa",
-  "Interests": "Kiinnostuksen kohteet",
+  "interests": "Kiinnostuksen kohteet",
   "my_gender": "Sukupuoleni",
-  "my_orientation": "Oma suuntaus"
+  "my_orientation": "Oma suuntaus",
+  "version_x.y.z": "Versio x.y.z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Elää {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {yksikkö}",
+  "verified": "Varmennettu",
+  "HeartLink": "Sydänsolku",
+  "don't_worry_-_we_won't_tell_this_person": "Älä huoli - emme kerro tälle henkilölle",
+  "finding_people_near_you...": "Löydä ihmisiä lähelläsi ...",
+  "let's_be_friend": "Ollaan ystäviä",
+  "find_someone_that_wants_to_be_friends": "Löydä joku, joka haluaa olla ystäviä",
+  "coffee_date": "Kahvipäivä",
+  "find_someone_to_get_coffee_with": "Löydä joku saada kahvia",
+  "looking_for_love": "Etsimässä rakkautta",
+  "blind_date": "Sokkotreffit",
+  "open_hour_6pm_-_12pm_(local_time)": "Avoin tunti klo 18–12 (paikallinen aika)",
+  "share_idea": "Jaa -idea",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Vastaa vaikeisiin kysymyksiin lauseiden avaamisen sijasta! Vastauksesi näkyvät sokeassa päivämäärän käyttöliittymässä ja niitä voidaan käyttää keskustelun aloittamiseen",
+  "get_ready": "Valmistaudu",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Kysymykset ja chat -aika ovat rajalliset, joten ajattele ja vastaa nopeasti",
+  "compatible_to_view_profiles": "Näkymäprofiilien yhteensopiva",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Kun chat on ohi, näet henkilön profiilin, jos molemmat vastaavat",
+  "i_can't_date_someone_who:": "En voi treffata ketään, joka:",
+  "smoker": "Tupakoitsija",
+  "not_lovers": "Ei rakastajia",
+  "no_romance": "Ei romantiikkaa",
+  "love_novels": "Rakkausromaaneja",
+  "answer_question": "Vastata kysymykseen",
+  "optimise_pairing": "Optimoida pariliitos",
+  "connecting": "Yhdistäminen",
+  "the_best_dinner_is_at:": "Paras illallinen on:",
+  "on_the_tray_and_watch_tv": "Lokerossa ja katsele televisiota",
+  "in_bed": "Sängyssä",
+  "verified_photo": "Vahvistettu valokuva",
+  "likes_you": "PITÄÄ SINUSTA",
+  "prioritized_likes": "Priorisoidut tykkäävät",
+  "everyone_you_like_will_see_you_soon": "Kaikki, joista pidät, näkee sinut pian",
+  "match_instantly_with_people_who_already_like_you": "Sovi heti ihmisiin, jotka jo pitävät sinusta",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Sisältää huippuluokan, rajoittamattoman tykkää, 1 -free Boost joka kuukausi, 5 ilmaista illallista kuten joka viikko, takaisinkila ja passi",
+  "message_before_matching": "Viesti ennen sovittamista",
+  "99+_people_already_like_you": "99+ ihmistä jo pidät sinusta",
+  "see_who_likes_you_and_match_instantly": "Katso kuka tykkää sinusta ja vastaa heti",
+  "buy_more_top_picks": "Osta lisää huippuvalikoimia",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Hanki täysi pääsy huippuvalinnoihin, kuten sinä, lähetä rajoittamattomat tykkää ja paljon muuta",
+  "see_as_many_likes_as_you_want": "Katso niin monta tykkää kuin haluat",
+  "1_free_boost_every_month": "1 ilmainen lisäys joka kuukausi",
+  "choose_who_see_you": "Valitse kuka näkee sinut",
+  "5_free_supper_likes_very_week": "5 ilmaista illallista tykkää viikosta",
+  "you're_3x_more_likely_to_get_a_match": "Saat 3x todennäköisemmin ottelun",
+  "online_now": "Nyt online-tilassa",
+  "like": "KUTEN",
+  "nope": "Ei",
+  "supper_like": "Illallinen kuten"
 }
