--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mon numéro est",
   "phone_number": "Numéro de téléphone",
   "please_enter_a_valid_phone_number": "s'il vous plaît entrer un numéro de téléphone valide",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Lorsque vous appuyez sur «Continuer», HeartLink enverra un texte avec du code de vérification. Message et débits de données Le partenaire s'applique.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Lorsque vous appuyez sur «Continuer», HeartLink enverra un texte avec du code de vérification. Message et débits de données Le partenaire s'applique.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Le numéro de téléphone vérifié peut être utilisé pour se connecter.",
   "learn_what_happens_when_your_number_changes.": "Apprenez ce qui se passe lorsque votre numéro change.",
   "continue": "Continuer",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Quel est ton e-mail?",
   "don't_lose_access_to_your_account,_verify_your_email": "Ne perdez pas accès à votre compte, vérifiez votre e-mail",
   "verify_instantly_by_connecting_your_google_account": "Vérifiez instantanément en connectant votre compte Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Je veux recevoir des nouvelles, des mises à jour et des offres de HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Je veux recevoir des nouvelles, des mises à jour et des offres de HeartLink",
   "enter_email": "Entrer le courrier électronique",
-  "welcome_to_heartlink": "Bienvenue à HeartLink",
+  "welcome_to_heartLink": "Bienvenue à HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Veuillez suivre nos règles pour s'amuser et construire une grande communauté ensemble",
   "be_yourself": "Être soi-même",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Assurez-vous que vos photos, votre âge et votre bio",
@@ -43,7 +43,7 @@
   "apply": "Appliquer",
   "my_name_is": "Mon nom est",
   "your_name": "Votre nom",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "C'est ainsi que cela apparaîtra dans le lien de cœur, et vous ne pouvez pas le changer",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "C'est ainsi que cela apparaîtra dans le lien de cœur, et vous ne pouvez pas le changer",
   "my_birthday_is": "Mon anniversaire est",
   "your_age_will_be_public": "Votre âge sera public",
   "i_am_a": "je suis un",
@@ -57,16 +57,16 @@
   "my_photos_are": "Mes photos sont",
   "add_at_least_2_photos_to_continue": "Ajoutez au moins 2 photos pour continuer",
   "enable_location": "Location disponible",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Vous devrez permettre à votre ordre de localisation d'utiliser les liens de cœur",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Vous devrez permettre à votre ordre de localisation d'utiliser les liens de cœur",
   "allow_location": "Autoriser l'emplacement",
   "tell_me_more": "Dis m'en plus",
   "meet_people_nearby": "Rencontrer des gens à proximité",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Votre emplacement sera utilisé pour montrer des matchs potentiels près de chez vous.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Vous voulez éviter quelqu'un que vous connaissez sur lien de cœur?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Il est facile - partagez le contact de votre appareil avec le lien de cœur lorsque vous utilisez cette fonctionnalité pour choisir qui vous souhaitez éviter",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Vous voulez éviter quelqu'un que vous connaissez sur lien de cœur?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Il est facile - partagez le contact de votre appareil avec le lien de cœur lorsque vous utilisez cette fonctionnalité pour choisir qui vous souhaitez éviter",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Nous stockons votre contact bloqué pour vous empêcher de vous voir si votre contact a un compte avec le même Infor que vous fournissez. Vous pouvez arrêter de partager avec nous dans vos paramètres.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "En savoir plus ici, y compris comment le chagrin traite vos contacts",
-  "share_{nameUser}_profile": "Partage {NameUser} Profil",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "En savoir plus ici, y compris comment le chagrin traite vos contacts",
+  "share_{nameUser}_profile": "Partager {NameUser} Profil",
   "see_what_a_friend_thinks": "Voyez ce qu'un ami pense",
   "report_{nameUser}": "Rapport {NameUser}",
   "away": "loin",
@@ -81,19 +81,19 @@
   "let's_find_people_same_with_your_vibe...": "Faisons des personnes les mêmes avec votre ambiance ...",
   "join_now": "Adhérer maintenant",
   "no_thanks": "NON MERCI",
-  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Passer à l'or pour voir des gens qui vous intéressent",
+  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Passer à l'or pour voir des gens qui s'intéressent à vous",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Personne ne vous aime encore. Ne vous inquiétez pas, assurez-vous de compléter votre profil pour vous trouver plus rapidement",
   "see_who_likes_you": "Voyez qui vous aime",
   "recommendations": "Recommandations",
   "new_connections": "Nouvelles connexions",
   "messages": "messages",
   "get_read_receipts": "Obtenez des reçus de lecture",
-  "level_up_everyone_action_you_take_on_heartlink": "Augmenter tous les mesures de tout le monde que vous entreprenez en lien de cœur",
   "get_boost_profile": "Obtenez le profil Boost",
   "get_supper_like": "Souper comme",
   "silver_package": "Paquet en argent",
   "gold_package": "Forfait en or",
-  "get_read_receipt_package": "Obtenez le package de réception de lecture",
+  "level_up_everyone_action_you_take_on_heartLink": "Augmenter tous les mesures de tout le monde que vous entreprenez en lien de cœur",
+  "get_read_receipt_package": "OBTENIR LE RECORD RÉCONNAGE",
   "stay_up_to_date": "Tiens-toi à jour",
   "know_when_your_messages_have_been_read_with_read_receipt": "Sachez quand vos messages ont été lus avec un reçu de lecture",
   "most_popular": "LE PLUS POPULAIRE",
@@ -119,8 +119,8 @@
   "like_profile_around_the_world": "Comme le profil dans le monde",
   "passport_to_anywhere": "Passeport à n'importe où",
   "unlimited_rewinds": "Rewinds illimité",
-  "go_back_and_try_again": "Revenir en arrière et réessayer",
-  "turn_off_ads": "Désactiver les annonces",
+  "go_back_and_try_again": "Retourne et réessayer",
+  "turn_off_ads": "Éteindre les annonces",
   "have_fun_without_interruptions": "Amusez-vous sans interruptions",
   "settings": "PARAMÈTRES",
   "edit_profile": "Editer le profil",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Montre-moi les meilleurs choix",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "L'allumage vous permettra d'être montré comme un choix supérieur en vedette à d'autres utilisateurs près de chez vous",
   "activity_status": "Statut d'activité",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permettez à d'autres membres de voir si vous étiez récemment actif dans le dernier 24 heures sur le lien de cœur. Si vous avez désactivé cela, ils ne pourront pas voir votre statut récemment actif",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permettez à d'autres membres de voir si vous étiez récemment actif dans le dernier 24 heures sur le lien de cœur. Si vous avez désactivé cela, ils ne pourront pas voir votre statut récemment actif",
   "app_settings": "Paramètres de l'application",
   "show_distance_in": "Montrer la distance",
   "language": "Langue",
@@ -182,7 +182,7 @@
   "the_language_i_know": "La langue que je connais",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Choisissez jusqu'à 5 langues que vous connaissez et ajoutez à votre profil",
   "basic_information": "INFORMATIONS DE BASE",
-  "add_more_info_so_people_can_see_your_amazing_pictures": "Ajoutez plus d'informations pour que les gens puissent voir vos images incroyables",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "Ajoutez plus d'informations pour que les gens puissent voir vos photos incroyables",
   "what_is_your_zodiac_sign?": "Quel est ton signe du zodiaque?",
   "your_education_level?": "Votre niveau d'éducation?",
   "do_you_want_to_have_children?": "Voulez-vous avoir des enfants?",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Ne montrez pas ma distance",
   "show_{nameScream}_on_my_profile": "Afficher {nomscream} sur mon profil",
   "you_are_not_enter_the_phone_number": "Vous n'entrez pas le numéro de téléphone",
-  "Interests": "Intérêts",
+  "interests": "Intérêts",
   "my_gender": "mon sexe",
-  "my_orientation": "Mon orientation"
+  "my_orientation": "Mon orientation",
+  "version_x.y.z": "Version X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Vivre à {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilomètres} {unité} loin",
+  "verified": "Vérifié",
+  "HeartLink": "Liaison de cœur",
+  "don't_worry_-_we_won't_tell_this_person": "Ne t'inquiète pas - nous ne dirons pas à cette personne",
+  "finding_people_near_you...": "Trouver des gens près de chez vous ...",
+  "let's_be_friend": "Soyons amis",
+  "find_someone_that_wants_to_be_friends": "Trouver quelqu'un qui veut être ami",
+  "coffee_date": "Rendez-vous",
+  "find_someone_to_get_coffee_with": "Trouvez quelqu'un avec qui prendre un café",
+  "looking_for_love": "À la recherche de l'amour",
+  "blind_date": "Date aveugle",
+  "open_hour_6pm_-_12pm_(local_time)": "Hour ouverte 18h - 12h (heure locale)",
+  "share_idea": "Partager",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Répondez à des questions difficiles au lieu d'ouvrir des phrases! Vos réponses apparaîtront sur l'interface de date aveugle et peuvent être utilisées pour démarrer une conversation",
+  "get_ready": "Sois prêt",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Les questions et le temps de chat sont limités, alors pensez et répondez rapidement",
+  "compatible_to_view_profiles": "Compatible pour afficher les profils",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Une fois la conversation terminée, vous verrez le profil de la personne si vous correspondez tous les deux",
+  "i_can't_date_someone_who:": "Je ne peux pas sortir avec quelqu'un qui:",
+  "smoker": "Fumeur",
+  "not_lovers": "Pas les amoureux",
+  "no_romance": "Pas de romance",
+  "love_novels": "Romans d'amour",
+  "answer_question": "Répondez à la question",
+  "optimise_pairing": "Optimiser l'appariement",
+  "connecting": "De liaison",
+  "the_best_dinner_is_at:": "Le meilleur dîner est à:",
+  "on_the_tray_and_watch_tv": "Sur le plateau et regarder la télévision",
+  "in_bed": "Au lit",
+  "verified_photo": "Photo vérifiée",
+  "likes_you": "T'AIME BIEN",
+  "prioritized_likes": "Les goûts prioritaires",
+  "everyone_you_like_will_see_you_soon": "Tous ceux que vous aimez vous verront bientôt",
+  "match_instantly_with_people_who_already_like_you": "Faites correspondre instantanément avec des gens qui vous aiment déjà",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Y compris les meilleurs choix, les goûts illimités, 1 Boost de 1 mois, 5 souper gratuits comme chaque semaine, le rembobinage et le passeport",
+  "message_before_matching": "Message avant de faire correspondre",
+  "99+_people_already_like_you": "99+ personnes comme vous",
+  "see_who_likes_you_and_match_instantly": "Voyez qui vous aime et correspond instantanément",
+  "buy_more_top_picks": "Achetez plus de choix supérieurs",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Obtenez un accès complet aux meilleurs choix, comme vous, envoyez des goûts illimités et plus",
+  "see_as_many_likes_as_you_want": "Voir autant de likes que vous le souhaitez",
+  "1_free_boost_every_month": "1 boost gratuit chaque mois",
+  "choose_who_see_you": "Choisissez qui vous voient",
+  "5_free_supper_likes_very_week": "5 Le souper gratuit aime très la semaine",
+  "you're_3x_more_likely_to_get_a_match": "Vous êtes 3x plus susceptible d'obtenir un match",
+  "online_now": "Maintenant en ligne",
+  "like": "COMME",
+  "nope": "NON",
+  "supper_like": "Souper comme"
 }
