--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -12,7 +12,7 @@
   "my_number_is": "मेरा नंबर हे",
   "phone_number": "फ़ोन नंबर",
   "please_enter_a_valid_phone_number": "एक मान्य दूरभाष क्रमांक दर्ज करे",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "जब आप 'जारी' पर टैप करते हैं, तो हार्टलिंक सत्यापन कोड के साथ एक पाठ भेजेगा। संदेश और डेटा दरें मेट लागू होती हैं।",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "जब आप 'जारी' पर टैप करते हैं, तो हार्टलिंक सत्यापन कोड के साथ एक पाठ भेजेगा। संदेश और डेटा दरें मेट लागू होती हैं।",
   "the_verified_phone_number_can_be_used_to_log_in.": "सत्यापित फोन नंबर का उपयोग लॉग इन करने के लिए किया जा सकता है।",
   "learn_what_happens_when_your_number_changes.": "जानें कि जब आपका नंबर बदल जाता है तो क्या होता है।",
   "continue": "जारी रखना",
@@ -23,9 +23,9 @@
   "what's_your_email?": "तुम्हारा ईमेल क्या है?",
   "don't_lose_access_to_your_account,_verify_your_email": "अपने खाते तक पहुंच न खोएं, अपने ईमेल को सत्यापित करें",
   "verify_instantly_by_connecting_your_google_account": "अपने Google खाते को जोड़कर तुरंत सत्यापित करें",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "मैं हार्टलिंक से समाचार, अपडेट और ऑफ़र प्राप्त करना चाहता हूं",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "मैं हार्टलिंक से समाचार, अपडेट और ऑफ़र प्राप्त करना चाहता हूं",
   "enter_email": "ईमेल दर्ज करें",
-  "welcome_to_heartlink": "हार्टलिंक में आपका स्वागत है",
+  "welcome_to_heartLink": "हार्टलिंक में आपका स्वागत है",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "कृपया हमारे नियमों का पालन करें और अधिक मज़ा करें और एक साथ एक महान समुदाय का निर्माण करें",
   "be_yourself": "वास्तविक बने रहें",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "सुनिश्चित करें कि आपकी तस्वीरें, उम्र और जैव सही हैं कि आप कौन हैं",
@@ -43,7 +43,7 @@
   "apply": "आवेदन करना",
   "my_name_is": "मेरा नाम है",
   "your_name": "अप का नाम",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "यह है कि यह हार्टलिंक में कैसे दिखाई देगा, और आप इसे बदल नहीं पाएंगे",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "यह है कि यह हार्टलिंक में कैसे दिखाई देगा, और आप इसे बदल नहीं पाएंगे",
   "my_birthday_is": "मेरा जन्मदिन है",
   "your_age_will_be_public": "आपकी उम्र सार्वजनिक होगी",
   "i_am_a": "मैं एक हूँ",
@@ -57,15 +57,15 @@
   "my_photos_are": "मेरी तस्वीरें हैं",
   "add_at_least_2_photos_to_continue": "जारी रखने के लिए कम से कम 2 तस्वीरें जोड़ें",
   "enable_location": "स्थान सक्षम करें",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "आपको हार्टलिंक का उपयोग करने के लिए अपने स्थान आदेश को सक्षम करना होगा",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "आपको हार्टलिंक का उपयोग करने के लिए अपने स्थान आदेश को सक्षम करना होगा",
   "allow_location": "स्थान की अनुमति दें",
   "tell_me_more": "मुझे और बताएँ",
   "meet_people_nearby": "आस -पास के लोगों से मिलें",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "आपके पास संभावित मैचों को दिखाने के लिए आपका उपयोग किया जाएगा।",
-  "want_to_avoid_someone_you_know_on_heartlink?": "किसी ऐसे व्यक्ति से बचना चाहते हैं जिसे आप हार्टलिंक पर जानते हैं?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "यह आसान है - इस सुविधा का उपयोग करते समय अपने डिवाइस के संपर्क को हार्टलिंक के साथ साझा करें",
+  "want_to_avoid_someone_you_know_on_heartLink?": "किसी ऐसे व्यक्ति से बचना चाहते हैं जिसे आप हार्टलिंक पर जानते हैं?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "यह आसान है - इस सुविधा का उपयोग करते समय अपने डिवाइस के संपर्क को हार्टलिंक के साथ साझा करें",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "यदि आपके संपर्क में आपके द्वारा प्रदान किए गए एक ही इन्फोर के साथ एक खाता है, तो हम एक दूसरे को देखने से रोकने के लिए आपके अवरुद्ध संपर्क को संग्रहीत करेंगे। आप अपनी सेटिंग्स में हमारे साथ साझा करना बंद कर सकते हैं।",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "यहां और जानें, जिसमें हार्टलिंक आपके संपर्कों की प्रक्रिया कैसे होती है",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "यहां और जानें, जिसमें हार्टलिंक आपके संपर्कों की प्रक्रिया कैसे होती है",
   "share_{nameUser}_profile": "शेयर {NameUser} प्रोफ़ाइल",
   "see_what_a_friend_thinks": "देखें कि एक दोस्त क्या सोचता है",
   "report_{nameUser}": "रिपोर्ट {Nameuser}",
@@ -88,11 +88,11 @@
   "new_connections": "नए कनेक्शन",
   "messages": "संदेशों",
   "get_read_receipts": "पढ़ें रसीदें प्राप्त करें",
-  "level_up_everyone_action_you_take_on_heartlink": "हर किसी की कार्रवाई को आप हार्टलिंक पर ले जाते हैं",
   "get_boost_profile": "बूस्ट प्रोफाइल प्राप्त करें",
   "get_supper_like": "की तरह ही हो जाना",
   "silver_package": "चांदी का पैकेज",
   "gold_package": "स्वर्ण पैकेज",
+  "level_up_everyone_action_you_take_on_heartLink": "हर किसी की कार्रवाई को आप हार्टलिंक पर ले जाते हैं",
   "get_read_receipt_package": "रसीद पैकेज पढ़ें",
   "stay_up_to_date": "अद्यतन रहना",
   "know_when_your_messages_have_been_read_with_read_receipt": "पता है कि आपके संदेश पढ़ने की रसीद के साथ कब पढ़े गए हैं",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "मुझे शीर्ष पिक्स दिखाओ",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "इसे चालू करने से आप अपने आस -पास के अन्य उपयोगकर्ताओं के लिए एक विशेष रूप से शीर्ष पिक के रूप में दिखाया जाएगा",
   "activity_status": "गतिविधि की स्थिति",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "अन्य सदस्यों को यह देखने की अनुमति दें कि क्या आप हाल ही में हार्टलिंक पर पिछले 24 घंटे के भीतर सक्रिय थे। यदि आपने इसे बंद कर दिया है, तो वे आपकी हाल ही में सक्रिय स्थिति नहीं देख पाएंगे",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "अन्य सदस्यों को यह देखने की अनुमति दें कि क्या आप हाल ही में हार्टलिंक पर पिछले 24 घंटे के भीतर सक्रिय थे। यदि आपने इसे बंद कर दिया है, तो वे आपकी हाल ही में सक्रिय स्थिति नहीं देख पाएंगे",
   "app_settings": "एप्लिकेशन सेटिंग",
   "show_distance_in": "में दूरी दिखाओ",
   "language": "भाषा",
@@ -180,7 +180,7 @@
   "share_the_purpose_to_find_'that_person'": "'उस व्यक्ति' को खोजने के उद्देश्य को साझा करें",
   "i_know_languages": "मैं भाषाओं को जानता हूं",
   "the_language_i_know": "भाषा मुझे पता है",
-  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "5 भाषाओं को चुनें जिन्हें आप जानते हैं और अपनी प्रोफ़ाइल में जोड़ते हैं",
+  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "उन 5 भाषाओं को चुनें जिन्हें आप जानते हैं और अपनी प्रोफ़ाइल में जोड़ते हैं",
   "basic_information": "मूल जानकारी",
   "add_more_info_so_people_can_see_your_amazing_pictures": "अधिक जानकारी जोड़ें ताकि लोग आपकी अद्भुत तस्वीरें देख सकें",
   "what_is_your_zodiac_sign?": "आपकी राशि क्या है?",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "मेरी दूरी मत दिखाओ",
   "show_{nameScream}_on_my_profile": "मेरी प्रोफ़ाइल पर {NamesCream} दिखाएं",
   "you_are_not_enter_the_phone_number": "आप फ़ोन नंबर दर्ज नहीं कर रहे हैं",
-  "Interests": "रूचियाँ",
+  "interests": "रूचियाँ",
   "my_gender": "मेरी लैंगिकता",
-  "my_orientation": "मेरा अभिविन्यास"
+  "my_orientation": "मेरा अभिविन्यास",
+  "version_x.y.z": "संस्करण X.Y.Z",
+  "km": "किमी",
+  "mi": "एम आई",
+  "live_at_{nameAddress}": "{Nameaddress} पर रहते हैं",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {यूनिट} दूर",
+  "verified": "सत्यापित",
+  "HeartLink": "हार्टलिंक",
+  "don't_worry_-_we_won't_tell_this_person": "चिंता न करें - हम इस व्यक्ति को नहीं बताएंगे",
+  "finding_people_near_you...": "आप के पास लोगों को ढूंढना ...",
+  "let's_be_friend": "चलो दोस्त बन जाएं",
+  "find_someone_that_wants_to_be_friends": "किसी ऐसे व्यक्ति को खोजें जो दोस्त बनना चाहता है",
+  "coffee_date": "कॉफी की तारीख",
+  "find_someone_to_get_coffee_with": "किसी के साथ कॉफी पाने के लिए खोजें",
+  "looking_for_love": "प्यार की तलाश",
+  "blind_date": "दो अजनबियों की मुलाकात",
+  "open_hour_6pm_-_12pm_(local_time)": "खुला घंटा 6pm - 12pm (स्थानीय समय)",
+  "share_idea": "शेयर विचार",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "वाक्यों को खोलने के बजाय कठिन सवालों के जवाब! आपकी प्रतिक्रियाएं ब्लाइंड डेट इंटरफ़ेस पर दिखाई देंगी और इसका उपयोग बातचीत शुरू करने के लिए किया जा सकता है",
+  "get_ready": "तैयार कर",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "प्रश्न और चैट समय सीमित हैं, इसलिए जल्दी से सोचें और जवाब दें",
+  "compatible_to_view_profiles": "प्रोफाइल देखने के लिए संगत",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "चैट खत्म होने के बाद, यदि आप दोनों से मेल खाते हैं तो आप व्यक्ति की प्रोफ़ाइल देखेंगे",
+  "i_can't_date_someone_who:": "मैं किसी ऐसे व्यक्ति को डेट नहीं कर सकता:",
+  "smoker": "धूम्रपान न करने",
+  "not_lovers": "प्रेमी नहीं",
+  "no_romance": "कोई रोमांस नहीं",
+  "love_novels": "प्यार उपन्यास",
+  "answer_question": "जवाब सवाल",
+  "optimise_pairing": "अनुकूलन युग्मन",
+  "connecting": "कनेक्ट",
+  "the_best_dinner_is_at:": "सबसे अच्छा रात का खाना है:",
+  "on_the_tray_and_watch_tv": "ट्रे पर और टीवी देखें",
+  "in_bed": "बिस्तर में",
+  "verified_photo": "सत्यापित फोटो",
+  "likes_you": "आपको पसंद करते हैं",
+  "prioritized_likes": "प्राथमिकता दी गई पसंद",
+  "everyone_you_like_will_see_you_soon": "आपको हर कोई पसंद है",
+  "match_instantly_with_people_who_already_like_you": "उन लोगों के साथ तुरंत मैच करें जो पहले से ही आपको पसंद करते हैं",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "शीर्ष पिक्स, असीमित लाइक, हर महीने 1free बूस्ट, हर हफ्ते की तरह 5 फ्री सपर, रिवाइंड और पासपोर्ट सहित",
+  "message_before_matching": "मिलान से पहले संदेश",
+  "99+_people_already_like_you": "99+ लोग पहले से ही आप जैसे हैं",
+  "see_who_likes_you_and_match_instantly": "देखें कि आपको कौन पसंद करता है और तुरंत मेल खाता है",
+  "buy_more_top_picks": "अधिक शीर्ष पिक्स खरीदें",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "आप जैसे शीर्ष पिक्स तक पूरी पहुंच प्राप्त करें, असीमित लाइक और अधिक भेजें",
+  "see_as_many_likes_as_you_want": "आप जितनी चाहें उतने पसंद देखें",
+  "1_free_boost_every_month": "हर महीने 1 मुफ्त बढ़ावा",
+  "choose_who_see_you": "चुनें कि आपको कौन देखता है",
+  "5_free_supper_likes_very_week": "5 फ्री सपर बहुत सप्ताह पसंद करता है",
+  "you're_3x_more_likely_to_get_a_match": "आप एक मैच प्राप्त करने की संभावना 3x अधिक हैं",
+  "online_now": "अब ऑनलाइन हैं",
+  "like": "पसंद",
+  "nope": "नहीं",
+  "supper_like": "की तरह"
 }
