--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -12,7 +12,7 @@
   "my_number_is": "Moj broj je",
   "phone_number": "Broj telefona",
   "please_enter_a_valid_phone_number": "Unesite valjani telefonski broj",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Kad dodirnete 'Nastavi', HeartLink će poslati tekst s verifikacijskim kodom. Primjenjuju se poruke i stope podataka.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Kad dodirnete 'Nastavi', HeartLink će poslati tekst s verifikacijskim kodom. Primjenjuju se poruke i stope podataka.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Provjereni telefonski broj može se koristiti za prijavu.",
   "learn_what_happens_when_your_number_changes.": "Saznajte što se događa kada se vaš broj promijeni.",
   "continue": "Nastaviti",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Koja je tvoja e-mail adresa?",
   "don't_lose_access_to_your_account,_verify_your_email": "Ne gubite pristup svom računu, provjerite svoju e -poštu",
   "verify_instantly_by_connecting_your_google_account": "Provjerite odmah povezivanjem svog Google računa",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Želim primati vijesti, ažuriranja i ponude od srca",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Želim primati vijesti, ažuriranja i ponude od srca",
   "enter_email": "Unesite e -mail",
-  "welcome_to_heartlink": "Dobrodošli u HeartLink",
+  "welcome_to_heartLink": "Dobrodošli u HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Molimo slijedite naša pravila kako biste se više zabavili i zajedno izgradili sjajnu zajednicu",
   "be_yourself": "Budi svoj",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Provjerite jesu li svoje fotografije, dob i bio istiniti onome tko ste",
@@ -43,7 +43,7 @@
   "apply": "Prijaviti",
   "my_name_is": "Moje ime je",
   "your_name": "Tvoje ime",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Ovako će se pojaviti u srčanom linku i nećete ga moći promijeniti",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Ovako će se pojaviti u srčanom linku i nećete ga moći promijeniti",
   "my_birthday_is": "Moj rođendan je",
   "your_age_will_be_public": "Vaša će godina biti javna",
   "i_am_a": "ja sam",
@@ -57,15 +57,15 @@
   "my_photos_are": "Moje fotografije su",
   "add_at_least_2_photos_to_continue": "Dodajte najmanje 2 fotografije za nastavak",
   "enable_location": "Omogući mjesto",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Morat ćete omogućiti svoju lokaciju kako biste koristili srčane veze",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Morat ćete omogućiti svoju lokaciju kako biste koristili srčane veze",
   "allow_location": "Omogućite lokaciju",
   "tell_me_more": "Reci mi više",
   "meet_people_nearby": "Upoznajte ljude u blizini",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Vi lokacija će se koristiti za prikazivanje potencijalnih podudaranja u vašoj blizini.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Želite izbjeći nekoga koga poznajete na srcu?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Lako je - podijelite kontakt uređaja sa HeartLink -om kada koristite ovu značajku za odabir koga želite izbjeći",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Želite izbjeći nekoga koga poznajete na srcu?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Lako je - podijelite kontakt uređaja sa HeartLink -om kada koristite ovu značajku za odabir koga želite izbjeći",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Pohranit ćemo vaš blokirani kontakt kako bismo spriječili da se vidite ako vaš kontakt ima račun s istim informacijama koje pružate. Možete prestati dijeliti s nama u svojim postavkama.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Saznajte više ovdje, uključujući kako obrađuju srčane veze vaše kontakte",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Saznajte više ovdje, uključujući kako obrađuju srčane veze vaše kontakte",
   "share_{nameUser}_profile": "Podijeli {nameuser} profil",
   "see_what_a_friend_thinks": "Pogledajte što prijatelj misli",
   "report_{nameUser}": "Izvještaj {nameuser}",
@@ -81,18 +81,18 @@
   "let's_find_people_same_with_your_vibe...": "Nađimo ljude isto s vašom vibracijom ...",
   "join_now": "Pridružite se sada",
   "no_thanks": "NE HVALA",
-  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nadogradite na zlato da biste vidjeli ljude koji su zainteresirani za vas",
+  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nadogradite na zlato kako biste vidjeli ljude koji su zainteresirani za vas",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Još se nitko ne sviđa. Ne brinite se, obavezno ispunite svoj profil drugim pronalaženjem brže",
   "see_who_likes_you": "Pogledajte tko te voliš",
   "recommendations": "Preporuke",
   "new_connections": "Nove veze",
   "messages": "Poruke",
   "get_read_receipts": "Pročitajte potvrde",
-  "level_up_everyone_action_you_take_on_heartlink": "Izravnajte sve akcije koje poduzimate na srčanoj liniji",
   "get_boost_profile": "Nabavite profil pojačanja",
   "get_supper_like": "Nabavite večeru poput",
   "silver_package": "Srebrni paket",
   "gold_package": "Zlatni paket",
+  "level_up_everyone_action_you_take_on_heartLink": "Izravnajte sve akcije koje poduzimate na srčanoj liniji",
   "get_read_receipt_package": "Pročitajte paket primanja",
   "stay_up_to_date": "Ostati u toku",
   "know_when_your_messages_have_been_read_with_read_receipt": "Znajte kada su vaše poruke pročitane s potvrdom o čitanju",
@@ -118,7 +118,7 @@
   "only_be_shown_to_people_you've_liked": "Biti prikazani samo ljudima koji su vam se svidjeli",
   "like_profile_around_the_world": "Poput profila širom svijeta",
   "passport_to_anywhere": "Putovnica do bilo kojeg mjesta",
-  "unlimited_rewinds": "Neograničeni premotaji",
+  "unlimited_rewinds": "Neograničeno premotavanje",
   "go_back_and_try_again": "Vrati se i pokušajte ponovo",
   "turn_off_ads": "Isključite oglase",
   "have_fun_without_interruptions": "Zabavite se bez prekida",
@@ -150,9 +150,9 @@
   "on_wi-fi_and_mobile_data": "Na Wi-Fi i mobilnim podacima",
   "never_auto_play_videos": "Nikad auto reproducirajte videozapise",
   "show_me_top_picks": "Pokaži mi Top Picks",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Uključivanje ovoga omogućit će vam da se prikažete kao istaknuti vrhunski odabir drugih korisnika u vašoj blizini",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Uključivanje ovoga omogućit će vam da se prikažete kao istaknuti vrhunski odabir ostalih korisnika u vašoj blizini",
   "activity_status": "Status aktivnosti",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Dopustite ostalim članovima da vide jeste li nedavno bili aktivni u posljednja 24 sata na srčanom linku. Ako ste to isključili, oni neće moći vidjeti vaš nedavno aktivni status",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Dopustite ostalim članovima da vide jeste li nedavno bili aktivni u posljednja 24 sata na srčanom linku. Ako ste to isključili, oni neće moći vidjeti vaš nedavno aktivni status",
   "app_settings": "Postavke aplikacija",
   "show_distance_in": "Prikazati udaljenost u",
   "language": "Jezik",
@@ -215,7 +215,7 @@
   "social_media": "Društveni mediji",
   "sleeping_habits": "Navike spavanja",
   "job_title": "Naslov posla",
-  "add_job_title": "Dodajte naziv posla",
+  "add_job_title": "Dodajte naslov posla",
   "company": "DRUŠTVO",
   "add_company": "Dodaj tvrtku",
   "school": "ŠKOLA",
@@ -226,7 +226,7 @@
   "show_instagram_photos": "Pokažite Instagram fotografije",
   "connect_instagram": "Povežite Instagram",
   "choose_an_anthem": "Odaberite himnu",
-  "my_top_spotify_artists": "Moji vrhunski Spotify umjetnici",
+  "my_top_spotify_artists": "Moji najbolji Spotify umjetnici",
   "connect_spotify": "Povežite Spotify",
   "gender": "Spol",
   "sexual_orientation": "Seksualna orijentacija",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Ne pokazuje moju udaljenost",
   "show_{nameScream}_on_my_profile": "Prikaži {NamesCream} na mom profilu",
   "you_are_not_enter_the_phone_number": "Niste uneseni telefonski broj",
-  "Interests": "Interesi",
+  "interests": "Interesi",
   "my_gender": "moj spol",
-  "my_orientation": "Moja orijentacija"
+  "my_orientation": "Moja orijentacija",
+  "version_x.y.z": "Verzija X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Živjeti na {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numbilometers} {jedinica} daleko",
+  "verified": "Provjeren",
+  "HeartLink": "Srčana veza",
+  "don't_worry_-_we_won't_tell_this_person": "Ne brinite - nećemo reći ovoj osobi",
+  "finding_people_near_you...": "Pronalaženje ljudi u vašoj blizini ...",
+  "let's_be_friend": "Budimo prijatelji",
+  "find_someone_that_wants_to_be_friends": "Pronađite nekoga tko želi biti prijatelji",
+  "coffee_date": "Datum kave",
+  "find_someone_to_get_coffee_with": "Pronađite nekoga da popije kavu",
+  "looking_for_love": "Tražiti ljubav",
+  "blind_date": "Spoj na slijepo",
+  "open_hour_6pm_-_12pm_(local_time)": "Otvoreni sat 18:00 - 12:00 (lokalno vrijeme)",
+  "share_idea": "Podijeliti ideju",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Odgovorite na teška pitanja umjesto otvaranja rečenica! Vaši će se odgovori pojaviti na sučelju slijepih datuma i mogu se koristiti za pokretanje razgovora",
+  "get_ready": "Pripremi se",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Pitanja i vrijeme za razgovor su ograničeni, pa razmislite i odgovorite brzo",
+  "compatible_to_view_profiles": "Kompatibilno s prikazom profila",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Nakon završetka razgovora, vidjet ćete profil osobe ako se oboje podudarate",
+  "i_can't_date_someone_who:": "Ne mogu izlaziti s nekim tko:",
+  "smoker": "Pušač",
+  "not_lovers": "Ne ljubavnici",
+  "no_romance": "Nema romantike",
+  "love_novels": "Ljubavni romani",
+  "answer_question": "Odgovori na pitanje",
+  "optimise_pairing": "Optimizirajte uparivanje",
+  "connecting": "Spoj",
+  "the_best_dinner_is_at:": "Najbolja večera je na:",
+  "on_the_tray_and_watch_tv": "Na pladnju i gledajte TV",
+  "in_bed": "U krevetu",
+  "verified_photo": "Provjerena fotografija",
+  "likes_you": "SVIĐAŠ MU SE",
+  "prioritized_likes": "Prioritetni lajkovi",
+  "everyone_you_like_will_see_you_soon": "Uskoro se vidimo svi koji vam se sviđaju",
+  "match_instantly_with_people_who_already_like_you": "Odmah se podudaraju s ljudima koji se već sviđaju vama",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Uključujući gornje tipove, neograničene lajkove, 1 slobodni pojačanje svakog mjeseca, 5 besplatnih večera poput svakog tjedna, premotavanja i putovnice",
+  "message_before_matching": "Poruka prije podudaranja",
+  "99+_people_already_like_you": "99+ ljudi već poput vas",
+  "see_who_likes_you_and_match_instantly": "Pogledajte tko vas voli i odmah se podudara",
+  "buy_more_top_picks": "Kupite više gornjih tipova",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Potpuni pristup vrhunskim tipovima, poput vas, šaljite neograničene lajkove i više",
+  "see_as_many_likes_as_you_want": "Pogledajte onoliko lajkova koliko želite",
+  "1_free_boost_every_month": "1 besplatno pojačanje svakog mjeseca",
+  "choose_who_see_you": "Odaberite tko te vidi",
+  "5_free_supper_likes_very_week": "5 besplatna večera voli vrlo tjedan",
+  "you're_3x_more_likely_to_get_a_match": "Vjerojatnije ste da ćete dobiti utakmicu",
+  "online_now": "Na mreži sada",
+  "like": "KAO",
+  "nope": "Ne",
+  "supper_like": "Večera poput"
 }
