--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -1,6 +1,6 @@
 {
   "warm_welcome": "Meleg fogadtatás",
-  "we_hope_you_have_a_sweet_time_here": "Reméljük, hogy itt van édes időd",
+  "we_hope_you_have_a_sweet_time_here": "Reméljük, hogy itt van egy édes időd",
   "log_in_with_google": "Jelentkezzen be a Google -val",
   "log_in_with_facebook": "Jelentkezz be facebookal",
   "log_in_with_phone_number": "Jelentkezzen be telefonszámmal",
@@ -12,7 +12,7 @@
   "my_number_is": "A számom",
   "phone_number": "Telefonszám",
   "please_enter_a_valid_phone_number": "Adjon meg egy érvényes telefonszámot",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Amikor megérinti a „Folytatás” bekapcsolást, a HeartLink egy szöveget küld ellenőrző kóddal. Üzenet- és adatsebesség -társ alkalmazandó.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Amikor megérinti a „Folytatás” bekapcsolást, a HeartLink egy szöveget küld ellenőrző kóddal. Üzenet- és adatsebesség -társ alkalmazandó.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Az ellenőrzött telefonszám felhasználható a bejelentkezéshez.",
   "learn_what_happens_when_your_number_changes.": "Tudja meg, mi történik, amikor a számod megváltozik.",
   "continue": "Folytatni",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Mi az e -mailed?",
   "don't_lose_access_to_your_account,_verify_your_email": "Ne veszítse el a fiókjához való hozzáférést, ellenőrizze e -mailjét",
   "verify_instantly_by_connecting_your_google_account": "Azonnal ellenőrizze a Google -fiók csatlakoztatásával",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Szeretnék híreket, frissítéseket és ajánlatokat kapni a HeartLink -től",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Szeretnék híreket, frissítéseket és ajánlatokat kapni a HeartLink -től",
   "enter_email": "Írja be az e -mailt",
-  "welcome_to_heartlink": "Üdvözöljük a Heart Linkben",
+  "welcome_to_heartLink": "Üdvözöljük a Heart Linkben",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Kérjük, kövesse a szabályainkat, hogy szórakoztatóbb legyen és nagyszerű közösséget építsen együtt",
   "be_yourself": "Légy önmagad",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Győződjön meg róla, hogy fotóit, életkorát és bio -jét igaz, hogy ki vagy",
@@ -33,17 +33,17 @@
   "don't_be_too_quick_to_give_out_personal_information.": "Ne légy túl gyors, hogy személyes információkat adjon ki.",
   "date_safety_guidelines": "Dátum biztonsági iránymutatások",
   "play_it_cool": "Csak lazán",
-  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Tiszteld meg másokat, és úgy kezeljék őket, mint amennyit szeretnének kezelni",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Tiszteld másokat, és úgy kezeljék őket, mint amennyit szeretnének kezelni",
   "be_proactive": "Legyél proaktív",
   "always_report_bad_behavior": "Mindig jelentse a rossz viselkedést",
   "i_agree": "Egyetértek",
   "are_you_sure?": "biztos vagy ebben?",
-  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "Kilép a regisztrációs folyamatból, és az összes információt törölni fogják?",
+  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "Kilép a regisztrációs folyamatból, és minden információját törölni fogják?",
   "cancel": "Megszünteti",
   "apply": "Alkalmaz",
   "my_name_is": "A nevem",
   "your_name": "A neved",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Így fog megjelenni a Heart Linkben, és nem fogja megváltoztatni",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Így fog megjelenni a Heart Linkben, és nem fogja megváltoztatni",
   "my_birthday_is": "Az én születésnapom",
   "your_age_will_be_public": "A korod nyilvános lesz",
   "i_am_a": "Vagyok",
@@ -57,17 +57,17 @@
   "my_photos_are": "A fotóim az",
   "add_at_least_2_photos_to_continue": "Adjon hozzá legalább 2 képet a folytatáshoz",
   "enable_location": "A hely engedélyezése",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Engedélyeznie kell a helymeghatározási megrendelést a Heart Links használatához",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Engedélyeznie kell a helymeghatározási megrendelést a Heart Links használatához",
   "allow_location": "Engedélyezze a helyét",
   "tell_me_more": "Mondj többet",
   "meet_people_nearby": "Találkozzon a közeli emberekkel",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Az Ön helyét a közelben lévő potenciális mérkőzések megjelenítésére fogják használni.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Szeretné elkerülni valakit, akit ismersz a Heart Linknél?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Könnyű - ossza meg az eszköz kapcsolatát a HeartLink -rel, amikor ezt a funkciót használja, hogy kiválasztja, hogy ki akarja kerülni",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Szeretné elkerülni valakit, akit ismersz a Heart Linknél?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Könnyű - ossza meg a készülék kapcsolatát a HeartLink -rel, amikor ezt a funkciót használja, hogy kiválasztja, hogy kit akar kerülni",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Megtisztítjuk a blokkolt kapcsolatfelvételt, hogy megakadályozzuk egymást, ha a kapcsolattartója ugyanolyan információs fiókkal rendelkezik, mint az Ön által. A beállításokban abbahagyhatja velünk a megosztást.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Tudjon meg többet itt, beleértve azt is, hogy hogyan dolgozza fel a Heart Link feldolgozza a kapcsolatait",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Tudjon meg többet itt, beleértve azt is, hogy hogyan dolgozza fel a Heart Link feldolgozza a kapcsolatait",
   "share_{nameUser}_profile": "Ossza meg a {nameUser} profilt",
-  "see_what_a_friend_thinks": "Nézze meg, mit gondol egy barát",
+  "see_what_a_friend_thinks": "Nézze meg, mit gondol egy barátom",
   "report_{nameUser}": "Jelentés {nameUser}",
   "away": "el",
   "my_anthem": "Himnuszom",
@@ -88,11 +88,11 @@
   "new_connections": "Új kapcsolatok",
   "messages": "üzenetek",
   "get_read_receipts": "Olvassa el a nyugtákat",
-  "level_up_everyone_action_you_take_on_heartlink": "Levelje fel mindenkit, amit a Heart Linken vállal",
   "get_boost_profile": "Get Boost Profile",
   "get_supper_like": "Készítsen vacsorát, mint",
   "silver_package": "Ezüstcsomag",
   "gold_package": "Aranycsomag",
+  "level_up_everyone_action_you_take_on_heartLink": "Levelje fel mindenkit, amit a Heart Linken vállal",
   "get_read_receipt_package": "Szerezd meg az olvasási nyugta csomagot",
   "stay_up_to_date": "Maradj naprakész",
   "know_when_your_messages_have_been_read_with_read_receipt": "Tudja meg, mikor olvasták el az üzeneteket az olvasási nyugtával",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Mutasd meg nekem a legjobb válogatásokat",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ennek bekapcsolása lehetővé teszi, hogy kiemelt legfontosabb válogatásként jelenjen meg a közeli más felhasználók számára",
   "activity_status": "Tevékenységi állapot",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Engedje meg, hogy más tagok megtudják, vajon a közelmúltban aktív -e az utolsó 24 órában a Heart Link -en. Ha kikapcsolta ezt, akkor nem fogják látni a közelmúltban aktív állapotát",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Engedje meg, hogy más tagok megtudják, vajon a közelmúltban aktív -e az utolsó 24 órában a Heart Link -en. Ha kikapcsolta ezt, akkor nem fogják látni a közelmúltban aktív állapotát",
   "app_settings": "Alkalmazásbeállítások",
   "show_distance_in": "Mutasd meg a távolságot",
   "language": "Nyelv",
@@ -173,7 +173,7 @@
   "interest": "ÉRDEKLŐDÉS",
   "out_of_5": "5 -ből",
   "search_interest": "Keresési érdeklődés",
-  "dating_purposes": "Randevúk",
+  "dating_purposes": "Randevú",
   "i'm_looking_for": "Keresem",
   "empty": "üres",
   "now_i'm_looking_for...": "Most keresek ...",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Ne mutasd meg a távolságomat",
   "show_{nameScream}_on_my_profile": "Mutassa meg a {namescream} -et a profilomon",
   "you_are_not_enter_the_phone_number": "Nem írja be a telefonszámot",
-  "Interests": "Érdeklődés",
+  "interests": "Érdeklődés",
   "my_gender": "a nemem",
-  "my_orientation": "orientációm"
+  "my_orientation": "orientációm",
+  "version_x.y.z": "X.Y.Z verzió",
+  "km": "km",
+  "mi": "MI",
+  "live_at_{nameAddress}": "Éljen a {nameaddress} oldalon",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {egység} Away",
+  "verified": "Igazolt",
+  "HeartLink": "Szívlánc",
+  "don't_worry_-_we_won't_tell_this_person": "Ne aggódj - nem mondjuk el ezt a személyt",
+  "finding_people_near_you...": "Találni az embereket a közelben ...",
+  "let's_be_friend": "Legyünk barátok",
+  "find_someone_that_wants_to_be_friends": "Keressen valakit, aki barátok akar lenni",
+  "coffee_date": "Kávé dátum",
+  "find_someone_to_get_coffee_with": "Keressen valakit, akivel kávét szerezhet",
+  "looking_for_love": "Szerelmet keresni",
+  "blind_date": "Vak randi",
+  "open_hour_6pm_-_12pm_(local_time)": "Nyitott óra 18:00 - 12:00 (helyi idő szerint)",
+  "share_idea": "Megosztási ötlet",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Válaszoljon nehéz kérdésekre a mondatok megnyitása helyett! Válaszai megjelennek a Blind Date felületen, és felhasználhatók a beszélgetés megkezdéséhez",
+  "get_ready": "Felkészül",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "A kérdések és a csevegési idő korlátozott, ezért gondoljon és válaszoljon gyorsan",
+  "compatible_to_view_profiles": "Kompatibilis a profilok megtekintéséhez",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Miután a csevegés véget ért, látni fogja a személy profilját, ha mindkettő megegyezik",
+  "i_can't_date_someone_who:": "Nem tudok randevúzni valakivel, aki:",
+  "smoker": "Dohányos",
+  "not_lovers": "Nem szerelmesek",
+  "no_romance": "Nincs romantika",
+  "love_novels": "Szerelmi regények",
+  "answer_question": "Válaszolj a kérdésre",
+  "optimise_pairing": "Optimalizálja a párosítást",
+  "connecting": "Összekötő",
+  "the_best_dinner_is_at:": "A legjobb vacsora:",
+  "on_the_tray_and_watch_tv": "A tálcán és tévénézésen",
+  "in_bed": "Ágyban",
+  "verified_photo": "Ellenőrzött fotó",
+  "likes_you": "KEDVEL TÉGED",
+  "prioritized_likes": "A prioritást élvező kedvelt",
+  "everyone_you_like_will_see_you_soon": "Mindenki, aki tetszik, hamarosan találkozunk",
+  "match_instantly_with_people_who_already_like_you": "Azonnal illeszkedjen azokkal az emberekkel, akik már kedvelnek téged",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Beleértve a legfontosabb válogatásokat, a korlátlan kedvelőket, az 1 -néli lendületet minden hónapban, 5 ingyenes vacsorát, mint minden héten, a visszatekerés és az útlevél",
+  "message_before_matching": "Üzenet az egyeztetés előtt",
+  "99+_people_already_like_you": "99+ ember már kedveled téged",
+  "see_who_likes_you_and_match_instantly": "Nézze meg, ki kedvel téged és azonnal egyez",
+  "buy_more_top_picks": "Vásároljon még több felső válogatást",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Teljes hozzáférést kapjon a felső válogatásokhoz, mint te, Korlátlan kedvelések küldése és még sok más",
+  "see_as_many_likes_as_you_want": "Lásd annyi kedvelést, amennyit csak akar",
+  "1_free_boost_every_month": "1 ingyenes lendület minden hónapban",
+  "choose_who_see_you": "Válassza ki, ki látja",
+  "5_free_supper_likes_very_week": "5 ingyenes vacsora nagyon kedveli a hetet",
+  "you're_3x_more_likely_to_get_a_match": "3x -m vagy nagyobb valószínűséggel kap egyezést",
+  "online_now": "Online most",
+  "like": "MINT",
+  "nope": "DEHOGY",
+  "supper_like": "Vacsora hasonló"
 }
