--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -12,20 +12,20 @@
   "my_number_is": "Nomorku adalah",
   "phone_number": "Nomor telepon",
   "please_enter_a_valid_phone_number": "silahkan masukkan nomor telepon yang benar",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Saat Anda mengetuk 'Lanjutkan', Heartlink akan mengirim teks dengan kode verifikasi. Pesan dan tarif data sobat berlaku.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Saat Anda mengetuk 'Lanjutkan', Heartlink akan mengirim teks dengan kode verifikasi. Pesan dan tarif data sobat berlaku.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Nomor telepon yang diverifikasi dapat digunakan untuk masuk.",
   "learn_what_happens_when_your_number_changes.": "Pelajari apa yang terjadi ketika nomor Anda berubah.",
   "continue": "Melanjutkan",
   "my_code_is": "Kode saya adalah",
   "please_enter_code_sent_to": "Harap masukkan kode yang dikirim ke",
   "resend_code": "Ulang kode",
-  "invalid_code._please_try_again": "Kode salah. Tolong coba lagi",
+  "invalid_code._please_try_again": "Kode salah. Silakan coba lagi",
   "what's_your_email?": "apa e-mailmu?",
   "don't_lose_access_to_your_account,_verify_your_email": "Jangan kehilangan akses ke akun Anda, verifikasi email Anda",
   "verify_instantly_by_connecting_your_google_account": "Verifikasi secara instan dengan menghubungkan akun Google Anda",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Saya ingin menerima berita, pembaruan, dan penawaran dari Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Saya ingin menerima berita, pembaruan, dan penawaran dari Heartlink",
   "enter_email": "Masukan email",
-  "welcome_to_heartlink": "Selamat datang di Heartlink",
+  "welcome_to_heartLink": "Selamat datang di Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Silakan ikuti aturan kami untuk bersenang -senang dan membangun komunitas yang hebat bersama",
   "be_yourself": "Jadilah diri sendiri",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Pastikan foto, usia, dan bio Anda benar untuk siapa Anda",
@@ -43,7 +43,7 @@
   "apply": "Menerapkan",
   "my_name_is": "Nama saya adalah",
   "your_name": "Namamu",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Beginilah cara muncul dalam tautan, dan Anda tidak akan dapat mengubahnya",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Beginilah cara muncul dalam tautan, dan Anda tidak akan dapat mengubahnya",
   "my_birthday_is": "Ulang tahun saya adalah",
   "your_age_will_be_public": "Usia Anda akan menjadi publik",
   "i_am_a": "saya adalah seorang",
@@ -57,15 +57,15 @@
   "my_photos_are": "Foto saya",
   "add_at_least_2_photos_to_continue": "Tambahkan setidaknya 2 foto untuk dilanjutkan",
   "enable_location": "Aktifkan lokasi",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Anda perlu mengaktifkan pesanan lokasi Anda untuk menggunakan HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Anda perlu mengaktifkan pesanan lokasi Anda untuk menggunakan HeartLinks",
   "allow_location": "Izinkan lokasi",
   "tell_me_more": "Ceritakan lebih banyak",
-  "meet_people_nearby": "Bertemu orang di dekatnya",
+  "meet_people_nearby": "Temui orang di dekatnya",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Lokasi Anda akan digunakan untuk menunjukkan kecocokan potensial di dekat Anda.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Ingin menghindari seseorang yang Anda kenal di Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Mudah - Bagikan kontak perangkat Anda dengan Heartlink saat menggunakan fitur ini untuk memilih yang ingin Anda hindari",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Kami akan menyimpan kontak yang diblokir untuk menghentikan Anda dari bertemu satu sama lain jika kontak Anda memiliki akun dengan infor yang sama dengan yang Anda berikan. Anda dapat berhenti berbagi dengan kami di pengaturan Anda.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Pelajari lebih lanjut di sini, termasuk bagaimana cara memproses kontak Anda",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Ingin menghindari seseorang yang Anda kenal di Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Mudah - Bagikan kontak perangkat Anda dengan Heartlink saat menggunakan fitur ini untuk memilih yang ingin Anda hindari",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Kami akan menyimpan kontak yang diblokir untuk menghentikan Anda dari melihat satu sama lain jika kontak Anda memiliki akun dengan infor yang sama dengan yang Anda berikan. Anda dapat berhenti berbagi dengan kami di pengaturan Anda.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Pelajari lebih lanjut di sini, termasuk bagaimana proses jantung memproses kontak Anda",
   "share_{nameUser}_profile": "Bagikan Profil {NameUser}",
   "see_what_a_friend_thinks": "Lihat apa yang dipikirkan teman",
   "report_{nameUser}": "Laporkan {NameUser}",
@@ -87,15 +87,15 @@
   "recommendations": "Rekomendasi",
   "new_connections": "Koneksi baru",
   "messages": "Pesan",
-  "get_read_receipts": "Dapatkan tanda terima baca",
-  "level_up_everyone_action_you_take_on_heartlink": "Level semua tindakan yang Anda ambil dalam tink",
+  "get_read_receipts": "Baca tanda terima",
   "get_boost_profile": "Dapatkan Profil Boost",
   "get_supper_like": "Dapatkan makan malam",
   "silver_package": "Paket perak",
   "gold_package": "Paket emas",
+  "level_up_everyone_action_you_take_on_heartLink": "Level semua tindakan yang Anda ambil dalam tink",
   "get_read_receipt_package": "Dapatkan Paket Baca Kwitansi",
   "stay_up_to_date": "Tetap terkini",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Tahu kapan pesan Anda telah dibaca dengan tanda terima baca",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Ketahui kapan pesan Anda telah dibaca dengan tanda terima baca",
   "most_popular": "Paling Populer",
   "read_receipt": "Baca tanda terima",
   "recurring_billing,_cancel_anytime": "Penagihan berulang, batal kapan saja",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Tunjukkan Pilihan Teratas",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Menghidupkan ini akan memungkinkan Anda untuk ditampilkan sebagai pilihan atas yang ditampilkan untuk pengguna lain di dekat Anda",
   "activity_status": "Status aktivitas",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Izinkan anggota lain untuk melihat apakah Anda baru -baru ini aktif dalam 24 jam terakhir tentang Heartlink. Jika Anda telah mematikan ini, mereka tidak akan dapat melihat status aktif Anda yang baru saja aktif",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Izinkan anggota lain untuk melihat apakah Anda baru -baru ini aktif dalam 24 jam terakhir tentang Heartlink. Jika Anda telah mematikan ini, mereka tidak akan dapat melihat status aktif Anda yang baru saja aktif",
   "app_settings": "Pengaturan aplikasi",
   "show_distance_in": "Tampilkan jarak di",
   "language": "Bahasa",
@@ -184,7 +184,7 @@
   "basic_information": "INFORMASI DASAR",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Tambahkan info lebih lanjut sehingga orang dapat melihat gambar luar biasa Anda",
   "what_is_your_zodiac_sign?": "Apa tanda zodiak Anda?",
-  "your_education_level?": "Tingkat Pendidikan Anda?",
+  "your_education_level?": "Tingkat pendidikan Anda?",
   "do_you_want_to_have_children?": "Apakah Anda ingin memiliki anak?",
   "have_you_been_vaccinated_yet?": "Apakah Anda sudah divaksinasi?",
   "what_is_your_personality_type?": "Apa tipe kepribadian Anda?",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Jangan tunjukkan jarak saya",
   "show_{nameScream}_on_my_profile": "Tampilkan {namescream} di profil saya",
   "you_are_not_enter_the_phone_number": "Anda tidak memasukkan nomor telepon",
-  "Interests": "Minat",
+  "interests": "Minat",
   "my_gender": "Jenis kelamin saya",
-  "my_orientation": "orientasi saya"
+  "my_orientation": "orientasi saya",
+  "version_x.y.z": "Versi X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Tinggal di {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometer} {unit} jauh",
+  "verified": "Diverifikasi",
+  "HeartLink": "Heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "Jangan khawatir - kami tidak akan memberi tahu orang ini",
+  "finding_people_near_you...": "Menemukan orang di dekat Anda ...",
+  "let's_be_friend": "Mari kita menjadi teman",
+  "find_someone_that_wants_to_be_friends": "Temukan seseorang yang ingin berteman",
+  "coffee_date": "Tanggal kopi",
+  "find_someone_to_get_coffee_with": "Temukan seseorang untuk mendapatkan kopi",
+  "looking_for_love": "Mencari cinta",
+  "blind_date": "Kencan buta",
+  "open_hour_6pm_-_12pm_(local_time)": "Jam buka jam 6 sore - 12:00 (waktu setempat)",
+  "share_idea": "Berbagi ide",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Jawab pertanyaan sulit alih -alih membuka kalimat! Respons Anda akan muncul di antarmuka tanggal buta dan dapat digunakan untuk memulai percakapan",
+  "get_ready": "Siap-siap",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Pertanyaan dan waktu obrolan terbatas, jadi pikirkan dan jawab dengan cepat",
+  "compatible_to_view_profiles": "Kompatibel untuk melihat profil",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Setelah obrolan selesai, Anda akan melihat profil orang tersebut jika Anda berdua cocok",
+  "i_can't_date_someone_who:": "Saya tidak bisa berkencan dengan seseorang yang:",
+  "smoker": "Perokok",
+  "not_lovers": "Bukan pecinta",
+  "no_romance": "Tidak ada romansa",
+  "love_novels": "Novel cinta",
+  "answer_question": "Jawab pertanyaan",
+  "optimise_pairing": "Mengoptimalkan pasangan",
+  "connecting": "Menghubungkan",
+  "the_best_dinner_is_at:": "Makan malam terbaik adalah di:",
+  "on_the_tray_and_watch_tv": "Di nampan dan menonton TV",
+  "in_bed": "Tidur",
+  "verified_photo": "Foto terverifikasi",
+  "likes_you": "Menyukaimu",
+  "prioritized_likes": "Suka yang diprioritaskan",
+  "everyone_you_like_will_see_you_soon": "Semua orang yang Anda sukai akan segera melihat Anda",
+  "match_instantly_with_people_who_already_like_you": "Cocokkan secara instan dengan orang -orang yang sudah menyukai Anda",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Termasuk pilihan teratas, suka tanpa batas, 1 -free boost setiap bulan, 5 makan malam gratis seperti setiap minggu, mundur dan paspor",
+  "message_before_matching": "Pesan sebelum dicocokkan",
+  "99+_people_already_like_you": "99+ orang sudah menyukai Anda",
+  "see_who_likes_you_and_match_instantly": "Lihat siapa yang menyukai Anda dan cocok secara instan",
+  "buy_more_top_picks": "Beli lebih banyak pilihan top",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Dapatkan akses penuh ke pilihan teratas, seperti Anda, kirim suka tidak terbatas & lainnya",
+  "see_as_many_likes_as_you_want": "Lihat sebanyak yang Anda inginkan",
+  "1_free_boost_every_month": "1 dorongan gratis setiap bulan",
+  "choose_who_see_you": "Pilih siapa yang melihatmu",
+  "5_free_supper_likes_very_week": "5 Perjamuan Gratis suka minggu",
+  "you're_3x_more_likely_to_get_a_match": "Anda 3x lebih mungkin untuk mendapatkan kecocokan",
+  "online_now": "Sekarang online",
+  "like": "MENYUKAI",
+  "nope": "TIDAK",
+  "supper_like": "Suka makan malam"
 }
