--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -12,7 +12,7 @@
   "my_number_is": "Il mio numero è",
   "phone_number": "Numero di telefono",
   "please_enter_a_valid_phone_number": "Si prega di inserire un numero di telefono valido",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Quando tocchi \"Continua\", HeartLink invierà un testo con codice di verifica. MESSAGGI E MESSAGGIO APPLICARE.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Quando tocchi \"Continua\", HeartLink invierà un testo con codice di verifica. MESSAGGI E MESSAGGIO APPLICARE.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Il numero di telefono verificato può essere utilizzato per accedere.",
   "learn_what_happens_when_your_number_changes.": "Scopri cosa succede quando il tuo numero cambia.",
   "continue": "Continua",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Qual è la tua email?",
   "don't_lose_access_to_your_account,_verify_your_email": "Non perdere l'accesso al tuo account, verifica la tua email",
   "verify_instantly_by_connecting_your_google_account": "Verifica immediatamente collegando il tuo account Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Voglio ricevere notizie, aggiornamenti e offerte da Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Voglio ricevere notizie, aggiornamenti e offerte da Heartlink",
   "enter_email": "Inserisci l'email",
-  "welcome_to_heartlink": "Benvenuti a Heartlink",
+  "welcome_to_heartLink": "Benvenuti a Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Segui le nostre regole per divertirsi di più e costruire una grande comunità insieme",
   "be_yourself": "Sii te stesso",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Assicurati che le tue foto, l'età e la bio siano fedeli a chi sei",
@@ -43,7 +43,7 @@
   "apply": "Fare domanda a",
   "my_name_is": "Mi chiamo",
   "your_name": "Il tuo nome",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "È così che apparirà in Heartlink e non sarai in grado di cambiarlo",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "È così che apparirà in Heartlink e non sarai in grado di cambiarlo",
   "my_birthday_is": "Il mio compleanno è",
   "your_age_will_be_public": "La tua età sarà pubblica",
   "i_am_a": "sono un",
@@ -57,18 +57,18 @@
   "my_photos_are": "Le mie foto sono",
   "add_at_least_2_photos_to_continue": "Aggiungi almeno 2 foto per continuare",
   "enable_location": "Abilita posizione",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Dovrai abilitare il tuo ordine di posizione per utilizzare i pezzi di cuore",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Dovrai abilitare il tuo ordine di posizione per utilizzare i pezzi di cuore",
   "allow_location": "Consentire la posizione",
   "tell_me_more": "Dimmi di più",
   "meet_people_nearby": "Incontra persone nelle vicinanze",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "La tua posizione verrà utilizzata per mostrare potenziali corrispondenze vicino a te.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Vuoi evitare qualcuno che conosci su HeartLink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "È facile: condividi il contatto del tuo dispositivo con HeartLink quando si utilizza questa funzione per scegliere chi si desidera evitare",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Conserteremo il tuo contatto bloccato per impedirti di vederti se il tuo contatto ha un account con lo stesso informazione fornita. Puoi smettere di condividere con noi nelle tue impostazioni.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Ulteriori informazioni qui, incluso come HeartLink elabora i tuoi contatti",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Vuoi evitare qualcuno che conosci su HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "È facile: condividi il contatto del tuo dispositivo con HeartLink quando si utilizza questa funzione per scegliere chi si desidera evitare",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Conserteremo il tuo contatto bloccato per impedirti di vederci se il tuo contatto ha un account con la stessa informazione fornita. Puoi smettere di condividere con noi nelle tue impostazioni.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Ulteriori informazioni qui, incluso come HeartLink elabora i tuoi contatti",
   "share_{nameUser}_profile": "Condividi {nameUser} profilo",
   "see_what_a_friend_thinks": "Guarda cosa pensa un amico",
-  "report_{nameUser}": "Report {nameUser}",
+  "report_{nameUser}": "Report {nameuser}",
   "away": "lontano",
   "my_anthem": "Mio inno",
   "what_is_the_reason_for_your_report?": "Qual è il motivo del tuo rapporto?",
@@ -88,11 +88,11 @@
   "new_connections": "Nuove connessioni",
   "messages": "Messaggi",
   "get_read_receipts": "Ottieni le ricevute di lettura",
-  "level_up_everyone_action_you_take_on_heartlink": "Livella tutti l'azione che intraprendi sul cuore del cuore",
   "get_boost_profile": "Ottieni il profilo Boost",
   "get_supper_like": "Metti a cena come",
   "silver_package": "Pacchetto d'argento",
   "gold_package": "Pacchetto d'oro",
+  "level_up_everyone_action_you_take_on_heartLink": "Livella tutti l'azione che intraprendi sul cuore del cuore",
   "get_read_receipt_package": "Ottieni il pacchetto di ricevuta di lettura",
   "stay_up_to_date": "Rimani aggiornato",
   "know_when_your_messages_have_been_read_with_read_receipt": "Sapere quando i tuoi messaggi sono stati letti con ricevuta di lettura",
@@ -101,13 +101,13 @@
   "recurring_billing,_cancel_anytime": "Fatturazione ricorrente, annulla in qualsiasi momento",
   "get_boost_package": "Ottieni il pacchetto Boost",
   "skip_the_queue": "Salta la coda",
-  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Sempre sul profilo più alto nella tua zona per 30 minuti per ottenere più corrispondenze",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Sempre al massimo del profilo nella tua zona per 30 minuti per ottenere più corrispondenze",
   "boost_my_profile": "Aumenta il mio profilo",
   "get_a_gold_package": "Ottieni un pacchetto d'oro",
   "5_free_supper_like_weekly": "5 cena gratuita come settimanalmente",
   "get_supper_likes_package": "Ottieni il pacchetto a cena piace",
   "stand_out_with_super_like": "Distinguere con Super Like",
-  "3x_chance_to_get_a_match": "3x possibilità di ottenere una partita",
+  "3x_chance_to_get_a_match": "3x possibilità di avere una partita",
   "get_supper_likes": "Prendi Mi piace alla cena",
   "get_silver_package": "Ottieni un pacchetto d'argento",
   "unlimited_likes": "Mi piace illimitato",
@@ -117,7 +117,7 @@
   "choose_who_sees_you": "Scegli chi ti vede",
   "only_be_shown_to_people_you've_liked": "Essere mostrato solo alle persone che ti piacevano",
   "like_profile_around_the_world": "Come il profilo in tutto il mondo",
-  "passport_to_anywhere": "Passaporto per ovunque",
+  "passport_to_anywhere": "Passaporto per qualsiasi luogo",
   "unlimited_rewinds": "Riavvolgimenti illimitati",
   "go_back_and_try_again": "Torna indietro e riprova",
   "turn_off_ads": "Spegni gli annunci",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Mostrami le migliori scelte",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "L'accensione questo ti permetterà di essere mostrato come una scelta migliore in primo piano ad altri utenti vicino a te",
   "activity_status": "Stato dell'attività",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Consenti ad altri membri di vedere se sei stato recentemente attivo entro le ultime 24 ore su Heartlink. Se lo hai spento, non saranno in grado di vedere il tuo stato di recente attivo",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Consenti ad altri membri di vedere se sei stato recentemente attivo entro le ultime 24 ore su Heartlink. Se lo hai spento, non saranno in grado di vedere il tuo stato di recente attivo",
   "app_settings": "Impostazioni dell'app",
   "show_distance_in": "Mostra la distanza in",
   "language": "Lingua",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Non mostrare la mia distanza",
   "show_{nameScream}_on_my_profile": "Mostra {namescream} sul mio profilo",
   "you_are_not_enter_the_phone_number": "Non sei inserire il numero di telefono",
-  "Interests": "Interessi",
+  "interests": "Interessi",
   "my_gender": "Il mio genere",
-  "my_orientation": "il mio orientamento"
+  "my_orientation": "il mio orientamento",
+  "version_x.y.z": "Versione X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Live at {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {unità} di distanza",
+  "verified": "Verificato",
+  "HeartLink": "Cuore di cuore",
+  "don't_worry_-_we_won't_tell_this_person": "Non preoccuparti, non lo diremo a questa persona",
+  "finding_people_near_you...": "Trovare persone vicino a te ...",
+  "let's_be_friend": "Diventiamo amici",
+  "find_someone_that_wants_to_be_friends": "Trova qualcuno che vuole essere amico",
+  "coffee_date": "Data del caffè",
+  "find_someone_to_get_coffee_with": "Trova qualcuno con cui prendere il caffè",
+  "looking_for_love": "In cerca di amore",
+  "blind_date": "Appuntamento al buio",
+  "open_hour_6pm_-_12pm_(local_time)": "Ora aperta 18:00 - 12:00 (ora locale)",
+  "share_idea": "Condividi l'idea",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Rispondi a domande difficili invece di aprire frasi! Le tue risposte appariranno sull'interfaccia della data cieca e possono essere utilizzate per iniziare una conversazione",
+  "get_ready": "Preparati",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Domande e tempo di chat sono limitati, quindi pensa e rispondi rapidamente",
+  "compatible_to_view_profiles": "Compatibile per visualizzare i profili",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Dopo la fine della chat, vedrai il profilo della persona se ci abbinano entrambi",
+  "i_can't_date_someone_who:": "Non posso uscire con qualcuno che:",
+  "smoker": "Fumatore",
+  "not_lovers": "Non amanti",
+  "no_romance": "Nessuna storia d'amore",
+  "love_novels": "Romanzi d'amore",
+  "answer_question": "Rispondi alla domanda",
+  "optimise_pairing": "Ottimizzare l'accoppiamento",
+  "connecting": "Connessione",
+  "the_best_dinner_is_at:": "La cena migliore è a:",
+  "on_the_tray_and_watch_tv": "Sul vassoio e guarda la TV",
+  "in_bed": "A letto",
+  "verified_photo": "Foto verificata",
+  "likes_you": "GLI PIACI",
+  "prioritized_likes": "Mi piace prioritario",
+  "everyone_you_like_will_see_you_soon": "Tutti quelli che ti piacciono ci vedranno presto",
+  "match_instantly_with_people_who_already_like_you": "Abbinati all'istante con persone che già ti piaci",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Compresi le migliori scelte, Mi piace illimitati, 1 ° miglior ogni mese, 5 Supper GRATUITA come ogni settimana, riavvolgimento e passaporto",
+  "message_before_matching": "Messaggio prima di abbinare",
+  "99+_people_already_like_you": "Oltre 99 persone già ti piacciono",
+  "see_who_likes_you_and_match_instantly": "Guarda chi piaci e abbinati all'istante",
+  "buy_more_top_picks": "Acquista più scelte migliori",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Ottieni il pieno accesso alle migliori scelte, come te, invia Mi piace illimitato e altro ancora",
+  "see_as_many_likes_as_you_want": "Guarda tutti i Mi piace che vuoi",
+  "1_free_boost_every_month": "1 spinta gratuita ogni mese",
+  "choose_who_see_you": "Scegli chi ti vede",
+  "5_free_supper_likes_very_week": "5 Supper gratuita ama la settimana molto",
+  "you're_3x_more_likely_to_get_a_match": "Hai più probabilità di avere una partita",
+  "online_now": "Online adesso",
+  "like": "COME",
+  "nope": "NO",
+  "supper_like": "Cena come"
 }
