--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -4,7 +4,7 @@
   "log_in_with_google": "Googleでログインします",
   "log_in_with_facebook": "Facebookでログインします",
   "log_in_with_phone_number": "電話番号でログインします",
-  "trouble_logging_in?": "ログインするのに苦労しますか？",
+  "trouble_logging_in?": "ログインするのに問題がありますか？",
   "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "「ログイン」をクリックすると、条件に同意します。データをどのように処理するかを学びます",
   "privacy_policy": "プライバシーポリシー",
   "and": "と",
@@ -12,7 +12,7 @@
   "my_number_is": "私の番号はです",
   "phone_number": "電話番号",
   "please_enter_a_valid_phone_number": "有効な電話番号を入力して下さい",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "「続行」をタップすると、HeartLinkは確認コードを含むテキストを送信します。メッセージとデータレートが適用されます。",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "「続行」をタップすると、HeartLinkは確認コードを含むテキストを送信します。メッセージとデータレートが適用されます。",
   "the_verified_phone_number_can_be_used_to_log_in.": "検証済みの電話番号を使用してログインできます。",
   "learn_what_happens_when_your_number_changes.": "あなたの番号が変わったときに何が起こるかを学びます。",
   "continue": "続く",
@@ -23,17 +23,17 @@
   "what's_your_email?": "あなたのメールは何ですか？",
   "don't_lose_access_to_your_account,_verify_your_email": "アカウントへのアクセスを失わないでください、メールを確認してください",
   "verify_instantly_by_connecting_your_google_account": "Googleアカウントを接続して即座に確認します",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "ハートリンクからニュース、更新、オファーを受け取りたい",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "ハートリンクからニュース、更新、オファーを受け取りたい",
   "enter_email": "メールアドレスを入力して",
-  "welcome_to_heartlink": "ハートリンクへようこそ",
-  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "私たちのルールに従って、もっと楽しくなり、一緒に素晴らしいコミュニティを構築してください",
+  "welcome_to_heartLink": "ハートリンクへようこそ",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "私たちのルールに従って、もっと楽しくなり、素晴らしいコミュニティを構築してください",
   "be_yourself": "素直になれ",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "あなたの写真、年齢、バイオがあなたが誰であるかに忠実であることを確認してください",
   "stay_safe": "おげんきで",
   "don't_be_too_quick_to_give_out_personal_information.": "個人情報を提供しすぎないでください。",
   "date_safety_guidelines": "日付安全ガイドライン",
-  "play_it_cool": "かっこよくプレイしてください",
-  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "他の人を尊重し、あなたが扱われたいと思うように扱う",
+  "play_it_cool": "かっこいいプレイ",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "他の人を尊重し、あなたが扱われたいと思うようにそれらを扱う",
   "be_proactive": "積極的に",
   "always_report_bad_behavior": "常に悪い行動を報告してください",
   "i_agree": "同意します",
@@ -43,7 +43,7 @@
   "apply": "申し込み",
   "my_name_is": "私の名前は",
   "your_name": "あなたの名前",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "これはハートリンクでどのように表示されるかであり、変更することはできません",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "これはハートリンクでどのように表示されるか、そしてあなたはそれを変更することができません",
   "my_birthday_is": "私の誕生日は",
   "your_age_will_be_public": "あなたの年齢は公開されます",
   "i_am_a": "私は",
@@ -57,15 +57,15 @@
   "my_photos_are": "私の写真はそうです",
   "add_at_least_2_photos_to_continue": "少なくとも2枚の写真を追加して続行します",
   "enable_location": "場所を有効にします",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "あなたはあなたの場所の注文がハートリンクを使用することを有効にする必要があります",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "あなたはあなたの場所の注文がハートリンクを使用することを有効にする必要があります",
   "allow_location": "場所を許可します",
   "tell_me_more": "もっと教えてください",
   "meet_people_nearby": "近くの人々に会います",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "あなたの場所は、お近くの潜在的な一致を示すために使用されます。",
-  "want_to_avoid_someone_you_know_on_heartlink?": "ハートリンクで知っている人を避けたいですか？",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "簡単です - この機能を使用して避けたい人を選ぶとき、デバイスの連絡先をハートリンクと共有する",
+  "want_to_avoid_someone_you_know_on_heartLink?": "ハートリンクで知っている人を避けたいですか？",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "簡単です - この機能を使用して避けたい人を選ぶとき、デバイスの連絡先をハートリンクと共有する",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "連絡先がお互いに会うのを止めるために、ブロックされた連絡先を保存してください。あなたはあなたの設定で私たちと共有するのをやめることができます。",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "ハートリンクが連絡先を処理する方法を含む詳細をご覧ください",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "ハートリンクが連絡先を処理する方法を含む詳細をご覧ください",
   "share_{nameUser}_profile": "共有{nameuser}プロファイル",
   "see_what_a_friend_thinks": "友達がどう思うか見てください",
   "report_{nameUser}": "レポート{nameuser}",
@@ -83,16 +83,16 @@
   "no_thanks": "結構です",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "あなたに興味のある人を見るために金にアップグレードする",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "まだ誰もあなたを好きではありません。心配しないでください、あなたが他の人にあなたのプロフィールを完成させてくださいあなたをより速く見つけるようにしてください",
-  "see_who_likes_you": "誰があなたを好きかを見てください",
+  "see_who_likes_you": "誰があなたが好きな人を見てください",
   "recommendations": "推奨事項",
   "new_connections": "新しい接続",
   "messages": "メッセージ",
   "get_read_receipts": "領収書を読んでください",
-  "level_up_everyone_action_you_take_on_heartlink": "ハートリンクで取るすべてのアクションをレベルアップします",
   "get_boost_profile": "ブーストプロファイルを取得します",
   "get_supper_like": "夕食を取得します",
   "silver_package": "シルバーパッケージ",
   "gold_package": "ゴールドパッケージ",
+  "level_up_everyone_action_you_take_on_heartLink": "ハートリンクで取るすべてのアクションをレベルアップします",
   "get_read_receipt_package": "領収書を読むパッケージを入手してください",
   "stay_up_to_date": "最新に保つ",
   "know_when_your_messages_have_been_read_with_read_receipt": "読み取り領収書でメッセージがいつ読まれたかを知る",
@@ -148,11 +148,11 @@
   "only_people_you_have_liked_will_see_me": "あなたが好きな人だけが私に会うでしょう",
   "only_wi-fi_only": "Wi-Fiのみ",
   "on_wi-fi_and_mobile_data": "Wi-Fiおよびモバイルデータについて",
-  "never_auto_play_videos": "動画を自動再生しないでください",
+  "never_auto_play_videos": "ビデオを自動再生しないでください",
   "show_me_top_picks": "トップピックを見せてください",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "これをオンにすると、近くの他のユーザーに注目のトップピックとして表示されることができます",
   "activity_status": "アクティビティステータス",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "ハートリンクで最後の24時間以内に最近アクティブになったかどうかを他のメンバーに確認できます。あなたがこれをオフにした場合、彼らはあなたの最近アクティブなステータスを見ることができません",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "ハートリンクで最後の24時間以内に最近アクティブになったかどうかを他のメンバーに確認できます。あなたがこれをオフにした場合、彼らはあなたの最近アクティブなステータスを見ることができません",
   "app_settings": "アプリ設定",
   "show_distance_in": "距離を表示します",
   "language": "言語",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "私の距離を見せないでください",
   "show_{nameScream}_on_my_profile": "私のプロフィールに{namescream}を表示します",
   "you_are_not_enter_the_phone_number": "電話番号を入力していません",
-  "Interests": "興味",
+  "interests": "興味",
   "my_gender": "私の性別",
-  "my_orientation": "私のオリエンテーション"
+  "my_orientation": "私のオリエンテーション",
+  "version_x.y.z": "バージョンX.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "{nameaddress}に住んでいます",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {unit} ofay",
+  "verified": "検証",
+  "HeartLink": "ハートリンク",
+  "don't_worry_-_we_won't_tell_this_person": "心配しないでください - 私たちはこの人に伝えません",
+  "finding_people_near_you...": "あなたの近くの人を見つける...",
+  "let's_be_friend": "友達になろう",
+  "find_someone_that_wants_to_be_friends": "友達になりたい人を見つけてください",
+  "coffee_date": "コーヒーの日付",
+  "find_someone_to_get_coffee_with": "一緒にコーヒーを飲む人を見つけてください",
+  "looking_for_love": "愛を探して",
+  "blind_date": "ブラインドデート",
+  "open_hour_6pm_-_12pm_(local_time)": "営業時間午後6時 - 午後12時（現地時間）",
+  "share_idea": "アイデアを共有します",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "文章を開くのではなく、難しい質問に答えてください！応答はブラインドデートインターフェイスに表示され、会話を開始するために使用できます",
+  "get_ready": "準備をしてください",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "質問とチャットの時間は限られているので、すぐに考えて答えます",
+  "compatible_to_view_profiles": "プロファイルを表示するのに互換性があります",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "チャットが終わった後、あなたが両方とも一致する場合、あなたはその人のプロフィールが表示されます",
+  "i_can't_date_someone_who:": "私は誰かとデートすることはできません：",
+  "smoker": "喫煙者",
+  "not_lovers": "恋人ではありません",
+  "no_romance": "ロマンスはありません",
+  "love_novels": "小説が大好きです",
+  "answer_question": "質問に答える",
+  "optimise_pairing": "ペアリングを最適化します",
+  "connecting": "接続",
+  "the_best_dinner_is_at:": "最高の夕食は次のとおりです。",
+  "on_the_tray_and_watch_tv": "トレイとテレビを見る",
+  "in_bed": "ベッドで",
+  "verified_photo": "検証済みの写真",
+  "likes_you": "あなたが好き",
+  "prioritized_likes": "優先順位付けされたいいね",
+  "everyone_you_like_will_see_you_soon": "あなたが好きな人は誰でもすぐにあなたに会います",
+  "match_instantly_with_people_who_already_like_you": "すでにあなたが好きな人とすぐに一致します",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "トップピック、無制限のいいね！、毎月1フリーブースト、毎週の5つの無料夕食、巻き戻しとパスポートを含む",
+  "message_before_matching": "一致する前のメッセージ",
+  "99+_people_already_like_you": "すでにあなたが好きな99人以上",
+  "see_who_likes_you_and_match_instantly": "誰があなたを好きで、すぐにマッチするのを見てください",
+  "buy_more_top_picks": "さらにトップピックを購入します",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "あなたのようなトップピックへのフルアクセスを取得し、無制限のいいね！",
+  "see_as_many_likes_as_you_want": "あなたが望むだけ多くの好きなものを見てください",
+  "1_free_boost_every_month": "毎月1つの無料ブースト",
+  "choose_who_see_you": "誰があなたに会うかを選んでください",
+  "5_free_supper_likes_very_week": "5無料の夕食は非常に週が好きです",
+  "you're_3x_more_likely_to_get_a_match": "あなたは3倍の試合をする可能性が高いです",
+  "online_now": "今オンラインです",
+  "like": "好き",
+  "nope": "いいえ",
+  "supper_like": "夕食のように"
 }
