--- a/src/locales/ms.json
+++ b/src/locales/ms.json
@@ -12,7 +12,7 @@
   "my_number_is": "Nombor saya adalah",
   "phone_number": "Nombor telefon",
   "please_enter_a_valid_phone_number": "Sila masukkan nombor telefon yang sah",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Apabila anda mengetuk 'Teruskan', HeartLink akan menghantar teks dengan kod pengesahan. Mesej dan kadar data pasangan dikenakan.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Apabila anda mengetuk 'Teruskan', HeartLink akan menghantar teks dengan kod pengesahan. Mesej dan kadar data pasangan dikenakan.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Nombor telefon yang disahkan boleh digunakan untuk log masuk.",
   "learn_what_happens_when_your_number_changes.": "Ketahui apa yang berlaku apabila nombor anda berubah.",
   "continue": "Teruskan",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Apa e -mel anda?",
   "don't_lose_access_to_your_account,_verify_your_email": "Jangan kehilangan akses ke akaun anda, sahkan e -mel anda",
   "verify_instantly_by_connecting_your_google_account": "Sahkan dengan serta -merta dengan menyambungkan akaun Google anda",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Saya mahu menerima berita, kemas kini dan tawaran dari HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Saya mahu menerima berita, kemas kini dan tawaran dari HeartLink",
   "enter_email": "Masukkan email",
-  "welcome_to_heartlink": "Selamat datang ke HeartLink",
+  "welcome_to_heartLink": "Selamat datang ke HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Sila ikuti peraturan kami untuk bersenang -senang dan membina komuniti yang hebat bersama",
   "be_yourself": "Jadi diri sendiri",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Pastikan gambar, umur dan bio anda benar kepada siapa anda",
@@ -43,7 +43,7 @@
   "apply": "Memohon",
   "my_name_is": "Nama saya ialah",
   "your_name": "Nama awak",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Ini adalah bagaimana ia akan muncul dalam keadaan tengah hari, dan anda tidak akan dapat mengubahnya",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Ini adalah bagaimana ia akan muncul dalam keadaan tengah hari, dan anda tidak akan dapat mengubahnya",
   "my_birthday_is": "Hari lahir saya",
   "your_age_will_be_public": "Umur anda akan awam",
   "i_am_a": "saya adalah",
@@ -57,15 +57,15 @@
   "my_photos_are": "Foto saya",
   "add_at_least_2_photos_to_continue": "Tambahkan sekurang -kurangnya 2 gambar untuk diteruskan",
   "enable_location": "Dayakan Lokasi",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Anda perlu membolehkan pesanan lokasi anda menggunakan jantung",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Anda perlu membolehkan pesanan lokasi anda menggunakan jantung",
   "allow_location": "Benarkan lokasi",
   "tell_me_more": "Beritahu saya lagi",
   "meet_people_nearby": "Berjumpa dengan orang yang berdekatan",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Lokasi anda akan digunakan untuk menunjukkan perlawanan yang berpotensi berhampiran anda.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Ingin mengelakkan seseorang yang anda kenal di HeartLink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Sangat mudah - kongsi hubungan peranti anda dengan HeartLink ketika menggunakan ciri ini untuk memilih siapa yang ingin anda elakkan",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Ingin mengelakkan seseorang yang anda kenal di HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Sangat mudah - kongsi hubungan peranti anda dengan HeartLink ketika menggunakan ciri ini untuk memilih siapa yang ingin anda elakkan",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Kami akan menyimpan kenalan tersekat anda untuk menghalang anda daripada melihat satu sama lain jika kenalan anda mempunyai akaun dengan infor yang sama yang anda berikan. Anda boleh berhenti berkongsi dengan kami dalam tetapan anda.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Ketahui lebih lanjut di sini, termasuk bagaimana HeartLink memproses kenalan anda",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Ketahui lebih lanjut di sini, termasuk bagaimana HeartLink memproses kenalan anda",
   "share_{nameUser}_profile": "Kongsi {nameuser} profil",
   "see_what_a_friend_thinks": "Lihat apa pendapat rakan",
   "report_{nameUser}": "Laporan {nameuser}",
@@ -88,14 +88,14 @@
   "new_connections": "Sambungan baru",
   "messages": "Mesej",
   "get_read_receipts": "Dapatkan resit baca",
-  "level_up_everyone_action_you_take_on_heartlink": "Tahap semua orang tindakan yang anda ambil pada HeartLink",
   "get_boost_profile": "Dapatkan profil Boost",
   "get_supper_like": "Dapatkan makan malam seperti",
   "silver_package": "Pakej Perak",
   "gold_package": "Pakej Emas",
+  "level_up_everyone_action_you_take_on_heartLink": "Tahap semua orang tindakan yang anda ambil pada HeartLink",
   "get_read_receipt_package": "Dapatkan Pakej Resit Baca",
   "stay_up_to_date": "Tinggal terkini",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Tahu bila mesej anda telah dibaca dengan resit baca",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Ketahui bila mesej anda telah dibaca dengan resit baca",
   "most_popular": "PALING POPULAR",
   "read_receipt": "Baca resit",
   "recurring_billing,_cancel_anytime": "Pengebilan berulang, batalkan bila -bila masa",
@@ -148,11 +148,11 @@
   "only_people_you_have_liked_will_see_me": "Hanya orang yang anda suka akan melihat saya",
   "only_wi-fi_only": "Hanya Wi-Fi sahaja",
   "on_wi-fi_and_mobile_data": "Pada Wi-Fi dan data mudah alih",
-  "never_auto_play_videos": "Tidak pernah bermain video automatik",
+  "never_auto_play_videos": "Jangan sesekali bermain video",
   "show_me_top_picks": "Tunjukkan kepada saya pilihan utama",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Menghidupkan ini akan membolehkan anda ditunjukkan sebagai pilihan utama yang dipaparkan kepada pengguna lain berhampiran anda",
   "activity_status": "Status aktiviti",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Benarkan ahli -ahli lain untuk melihat sama ada anda baru -baru ini aktif dalam 24h terakhir pada HeartLink. Sekiranya anda mematikan ini, mereka tidak akan dapat melihat status aktif anda yang baru -baru ini",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Benarkan ahli -ahli lain untuk melihat sama ada anda baru -baru ini aktif dalam 24h terakhir pada HeartLink. Sekiranya anda mematikan ini, mereka tidak akan dapat melihat status aktif anda yang baru -baru ini",
   "app_settings": "Tetapan aplikasi",
   "show_distance_in": "Tunjukkan jarak dalam",
   "language": "Bahasa",
@@ -172,8 +172,8 @@
   "about_me_-_maximize_500_words": "Mengenai saya - memaksimumkan 500 perkataan",
   "interest": "Minat",
   "out_of_5": "daripada 5",
-  "search_interest": "Minat cari",
-  "dating_purposes": "Tujuan dating",
+  "search_interest": "Minat carian",
+  "dating_purposes": "Tujuan temu janji",
   "i'm_looking_for": "saya sedang mencari",
   "empty": "kosong",
   "now_i'm_looking_for...": "Sekarang saya mencari ...",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Jangan tunjukkan jarak saya",
   "show_{nameScream}_on_my_profile": "Tunjukkan {namescream} pada profil saya",
   "you_are_not_enter_the_phone_number": "Anda tidak memasukkan nombor telefon",
-  "Interests": "Kepentingan",
+  "interests": "Kepentingan",
   "my_gender": "Jantina saya",
-  "my_orientation": "orientasi saya"
+  "my_orientation": "orientasi saya",
+  "version_x.y.z": "Versi X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Hidup di {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {Unit} Away",
+  "verified": "Disahkan",
+  "HeartLink": "Heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "Jangan risau - kami tidak akan memberitahu orang ini",
+  "finding_people_near_you...": "Mencari orang berhampiran anda ...",
+  "let's_be_friend": "Mari berkawan",
+  "find_someone_that_wants_to_be_friends": "Cari seseorang yang ingin berkawan",
+  "coffee_date": "Tarikh kopi",
+  "find_someone_to_get_coffee_with": "Cari seseorang untuk mendapatkan kopi dengan",
+  "looking_for_love": "Mencari cinta",
+  "blind_date": "Tarikh buta",
+  "open_hour_6pm_-_12pm_(local_time)": "Buka jam 6 petang - 12 malam (waktu tempatan)",
+  "share_idea": "Berkongsi idea",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Jawab soalan yang sukar dan bukannya membuka ayat! Tanggapan anda akan muncul di antara muka tarikh buta dan boleh digunakan untuk memulakan perbualan",
+  "get_ready": "Bersedia",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Soalan dan masa sembang terhad, jadi fikirkan dan jawab dengan cepat",
+  "compatible_to_view_profiles": "Serasi untuk melihat profil",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Setelah sembang selesai, anda akan melihat profil orang itu jika anda berdua sesuai",
+  "i_can't_date_someone_who:": "Saya tidak boleh berkencan dengan seseorang yang:",
+  "smoker": "Perokok",
+  "not_lovers": "Bukan kekasih",
+  "no_romance": "Tiada percintaan",
+  "love_novels": "Novel cinta",
+  "answer_question": "Jawab soalan",
+  "optimise_pairing": "Mengoptimumkan pasangan",
+  "connecting": "Menyambung",
+  "the_best_dinner_is_at:": "Makan malam terbaik adalah di:",
+  "on_the_tray_and_watch_tv": "Di dulang dan tonton TV",
+  "in_bed": "Atas katil",
+  "verified_photo": "Foto yang disahkan",
+  "likes_you": "Suka awak",
+  "prioritized_likes": "Suka suka",
+  "everyone_you_like_will_see_you_soon": "Setiap orang yang anda suka akan berjumpa dengan anda tidak lama lagi",
+  "match_instantly_with_people_who_already_like_you": "Sepadan dengan serta -merta dengan orang yang sudah menyukai anda",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Termasuk pilihan utama, suka tanpa had, rangsangan 1 bebas setiap bulan, 5 makan malam percuma seperti setiap minggu, mundur dan pasport",
+  "message_before_matching": "Mesej sebelum dipadankan",
+  "99+_people_already_like_you": "99+ orang sudah menyukai anda",
+  "see_who_likes_you_and_match_instantly": "Lihat siapa yang menyukai anda dan sepadan dengan serta -merta",
+  "buy_more_top_picks": "Beli lebih banyak pilihan atas",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Dapatkan akses penuh ke pilihan atas, seperti anda, hantar suka & banyak lagi yang tidak terhad",
+  "see_as_many_likes_as_you_want": "Lihat seperti yang anda mahukan",
+  "1_free_boost_every_month": "1 rangsangan percuma setiap bulan",
+  "choose_who_see_you": "Pilih Siapa Yang Melihat Anda",
+  "5_free_supper_likes_very_week": "5 Perjamuan Percuma Suka Minggu",
+  "you're_3x_more_likely_to_get_a_match": "Anda 3x lebih cenderung mendapat pertandingan",
+  "online_now": "Dalam talian sekarang",
+  "like": "Seperti",
+  "nope": "Nope",
+  "supper_like": "Makan malam seperti"
 }
