--- a/src/locales/nb.json
+++ b/src/locales/nb.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mitt nummer er",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "Vennligst oppgi et gyldig telefonnummer",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsett', vil HeartLink sende en tekst med bekreftelseskode. Melding og datahastigheter Mate gjelder.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsett', vil HeartLink sende en tekst med bekreftelseskode. Melding og datahastigheter Mate gjelder.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Det bekreftede telefonnummeret kan brukes til å logge inn.",
   "learn_what_happens_when_your_number_changes.": "Lær hva som skjer når nummeret ditt endres.",
   "continue": "Fortsette",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Hva er epost adressen din?",
   "don't_lose_access_to_your_account,_verify_your_email": "Ikke mist tilgang til kontoen din, bekreft e -posten din",
   "verify_instantly_by_connecting_your_google_account": "Kontroller øyeblikkelig ved å koble til Google -kontoen din",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Jeg vil motta nyheter, oppdateringer og tilbud fra Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Jeg vil motta nyheter, oppdateringer og tilbud fra Heartlink",
   "enter_email": "Skriv inn e -post",
-  "welcome_to_heartlink": "Velkommen til Heartlink",
+  "welcome_to_heartLink": "Velkommen til Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Følg våre regler for å ha det morsommere og bygge et flott samfunn sammen",
   "be_yourself": "Vær deg selv",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Forsikre deg om at bildene dine, alderen og bioen er tro mot den du er",
@@ -43,7 +43,7 @@
   "apply": "Søke om",
   "my_name_is": "Mitt navn er",
   "your_name": "Navnet ditt",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Slik vil det vises i Heartlink, og du vil ikke endre det",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Slik vil det vises i Heartlink, og du vil ikke endre det",
   "my_birthday_is": "Bursdagen min er",
   "your_age_will_be_public": "Din alder vil være offentlig",
   "i_am_a": "jeg er en",
@@ -57,15 +57,15 @@
   "my_photos_are": "Bildene mine er",
   "add_at_least_2_photos_to_continue": "Legg til minst 2 bilder for å fortsette",
   "enable_location": "Aktiver plassering",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Du må aktivere din plasseringsordre for å bruke Heartlinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Du må aktivere din plasseringsordre for å bruke Heartlinks",
   "allow_location": "Tillat beliggenhet",
   "tell_me_more": "Fortell meg mer",
   "meet_people_nearby": "Møt mennesker i nærheten",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Plasseringen din vil bli brukt til å vise potensielle kamper i nærheten.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Vil du unngå noen du kjenner på Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det er enkelt - del enhetens kontakt med HeartLink når du bruker denne funksjonen for å velge hvem du vil unngå",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Vil du unngå noen du kjenner på HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det er enkelt - del enhetens kontakt med HeartLink når du bruker denne funksjonen for å velge hvem du vil unngå",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Vi lagrer den blokkerte kontakten din for å hindre deg i å se hverandre hvis kontakten din har en konto med den samme informasjonen du gir. Du kan slutte å dele med oss ​​i innstillingene dine.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Lær mer her, inkludert hvordan Heartlink behandler kontaktene dine",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Lær mer her, inkludert hvordan Heartlink behandler kontaktene dine",
   "share_{nameUser}_profile": "Del {nameUser} profil",
   "see_what_a_friend_thinks": "Se hva en venn mener",
   "report_{nameUser}": "Rapporter {nameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "Nye tilkoblinger",
   "messages": "Meldinger",
   "get_read_receipts": "Les kvitteringer",
-  "level_up_everyone_action_you_take_on_heartlink": "Nivå opp alle handlinger du tar på Heartlink",
   "get_boost_profile": "Få Boost -profil",
   "get_supper_like": "Få kveldsmat som",
   "silver_package": "Sølvpakke",
   "gold_package": "Gullpakke",
+  "level_up_everyone_action_you_take_on_heartLink": "Nivå opp alle handlinger du tar på Heartlink",
   "get_read_receipt_package": "Les kvitteringspakke",
   "stay_up_to_date": "Hold deg oppdatert",
   "know_when_your_messages_have_been_read_with_read_receipt": "Vet når meldingene dine er lest med lese kvittering",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Vis meg toppvalg",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Å slå på dette vil tillate deg å bli vist som en omtalt toppvalg for andre brukere i nærheten av deg",
   "activity_status": "Aktivitetsstatus",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "La andre medlemmer se om du nylig var aktiv i løpet av de siste 24 -ene på Heartlink. Hvis du har slått av dette, vil de ikke kunne se din nylig aktive status",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "La andre medlemmer se om du nylig var aktiv i løpet av de siste 24 -ene på Heartlink. Hvis du har slått av dette, vil de ikke kunne se din nylig aktive status",
   "app_settings": "Appinnstillinger",
   "show_distance_in": "Vis avstand i",
   "language": "Språk",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Ikke vis min avstand",
   "show_{nameScream}_on_my_profile": "Vis {namescream} på profilen min",
   "you_are_not_enter_the_phone_number": "Du skriver ikke inn telefonnummeret",
-  "Interests": "Interesser",
+  "interests": "Interesser",
   "my_gender": "kjønnet mitt",
-  "my_orientation": "Orienteringen min"
+  "my_orientation": "Orienteringen min",
+  "version_x.y.z": "Versjon X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Bor på {nameAddress}",
+  "{numberKilometers}_{unit}_away": "{tallekilometre} {enhet} bort",
+  "verified": "Bekreftet",
+  "HeartLink": "Heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "Ikke bekymre deg - vi vil ikke fortelle denne personen",
+  "finding_people_near_you...": "Finne mennesker i nærheten ...",
+  "let's_be_friend": "La oss være venn",
+  "find_someone_that_wants_to_be_friends": "Finn noen som vil være venner",
+  "coffee_date": "Kaffedato",
+  "find_someone_to_get_coffee_with": "Finn noen å få kaffe med",
+  "looking_for_love": "På jakt etter kjærligheten",
+  "blind_date": "Blind date",
+  "open_hour_6pm_-_12pm_(local_time)": "Åpent time 18:00 - 12:00 (lokal tid)",
+  "share_idea": "Del ide",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Svar på tøffe spørsmål i stedet for å åpne setninger! Svarene dine vises på blinde date -grensesnittet og kan brukes til å starte en samtale",
+  "get_ready": "Gjør deg klar",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Spørsmål og chattid er begrenset, så tenk og svar raskt",
+  "compatible_to_view_profiles": "Kompatible for å se profiler",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Etter at chatten er over, vil du se personens profil hvis dere begge stemmer",
+  "i_can't_date_someone_who:": "Jeg kan ikke date noen som:",
+  "smoker": "Røyker",
+  "not_lovers": "Ikke elskere",
+  "no_romance": "Ingen romantikk",
+  "love_novels": "Elsker romaner",
+  "answer_question": "Svar på spørsmål",
+  "optimise_pairing": "Optimaliser sammenkobling",
+  "connecting": "Kobler til",
+  "the_best_dinner_is_at:": "Den beste middagen er på:",
+  "on_the_tray_and_watch_tv": "På brettet og se på TV",
+  "in_bed": "I seng",
+  "verified_photo": "Bekreftet bilde",
+  "likes_you": "LIKER DEG",
+  "prioritized_likes": "Prioriterte likes",
+  "everyone_you_like_will_see_you_soon": "Alle du liker vil se deg snart",
+  "match_instantly_with_people_who_already_like_you": "Match øyeblikkelig med folk som allerede liker deg",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inkludert toppvalg, ubegrensede likes, 1 gratis boost hver måned, 5 gratis kveldsmat som hver uke, spole tilbake og pass",
+  "message_before_matching": "Melding før matching",
+  "99+_people_already_like_you": "99+ mennesker liker deg allerede",
+  "see_who_likes_you_and_match_instantly": "Se hvem som liker deg og match øyeblikkelig",
+  "buy_more_top_picks": "Kjøp flere toppvalg",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Få full tilgang til toppvalg, som deg, send ubegrensede likes og mer",
+  "see_as_many_likes_as_you_want": "Se så mange likes du vil",
+  "1_free_boost_every_month": "1 gratis boost hver måned",
+  "choose_who_see_you": "Velg hvem som ser deg",
+  "5_free_supper_likes_very_week": "5 gratis kveldsmat liker veldig uken",
+  "you're_3x_more_likely_to_get_a_match": "Du er 3 ganger mer sannsynlig å få en kamp",
+  "online_now": "På nett nå",
+  "like": "SOM",
+  "nope": "NEI",
+  "supper_like": "Kveldsmat som"
 }
