--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -12,20 +12,20 @@
   "my_number_is": "Mijn nummer is",
   "phone_number": "Telefoonnummer",
   "please_enter_a_valid_phone_number": "Voer alstublieft een geldig telefoonnummer in",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Wanneer u tikt op 'Doorgaan', verzendt HeartLink een tekst met verificatiecode. Bericht- en gegevenspercentages Mate van toepassing.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Wanneer u tikt op 'Doorgaan', verzendt HeartLink een tekst met verificatiecode. Bericht- en gegevenspercentages Mate van toepassing.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Het geverifieerde telefoonnummer kan worden gebruikt om in te loggen.",
   "learn_what_happens_when_your_number_changes.": "Leer wat er gebeurt als uw nummer verandert.",
   "continue": "Doorgaan",
   "my_code_is": "Mijn code is",
-  "please_enter_code_sent_to": "Voer de code in die is verzonden naar",
+  "please_enter_code_sent_to": "Voer de code in die wordt verzonden naar",
   "resend_code": "Code nogmaals versturen",
   "invalid_code._please_try_again": "Ongeldige code. Probeer het opnieuw",
   "what's_your_email?": "Wat is jouw e-mail?",
   "don't_lose_access_to_your_account,_verify_your_email": "Verlies geen toegang tot uw account, verifieer uw e -mail",
   "verify_instantly_by_connecting_your_google_account": "Controleer onmiddellijk door uw Google -account te verbinden",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Ik wil nieuws, updates en aanbiedingen van Heartlink ontvangen",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Ik wil nieuws, updates en aanbiedingen van Heartlink ontvangen",
   "enter_email": "Voer email in",
-  "welcome_to_heartlink": "Welkom bij Heartlink",
+  "welcome_to_heartLink": "Welkom bij Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Volg onze regels om meer plezier te hebben en samen een geweldige gemeenschap op te bouwen",
   "be_yourself": "Blijf jezelf",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Zorg ervoor dat je foto's, leeftijd en bio trouw zijn aan wie je bent",
@@ -43,11 +43,11 @@
   "apply": "Toepassen",
   "my_name_is": "Mijn naam is",
   "your_name": "Uw naam",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Dit is hoe het zal verschijnen in Heartlink, en je zult het niet kunnen veranderen",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Dit is hoe het zal verschijnen in Heartlink, en je zult het niet kunnen veranderen",
   "my_birthday_is": "Mijn verjaardag is",
   "your_age_will_be_public": "Uw leeftijd zal openbaar zijn",
   "i_am_a": "ik ben een",
-  "show_{nameInformation}_on_my_profile": "Toon {nameInformation} op mijn profiel",
+  "show_{nameInformation}_on_my_profile": "Toon {NameInformation} op mijn profiel",
   "my_sexual_orientation_is": "Mijn seksuele geaardheid is",
   "select_up_to_3": "Selecteer maximaal 3",
   "skip": "Overslaan",
@@ -57,15 +57,15 @@
   "my_photos_are": "Mijn foto's zijn",
   "add_at_least_2_photos_to_continue": "Voeg minstens 2 foto's toe om door te gaan",
   "enable_location": "Locatie inschakelen",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "U moet uw locatiebevel in staat stellen om hartverschillen te gebruiken",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "U moet uw locatiebevel in staat stellen om hartverschillen te gebruiken",
   "allow_location": "Locatie toestaan",
   "tell_me_more": "Vertel me meer",
   "meet_people_nearby": "Ontmoet mensen in de buurt",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Uw locatie wordt gebruikt om potentiële wedstrijden bij u in de buurt te tonen.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Wilt u iemand vermijden die u kent op Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Het is eenvoudig - deel het contact van uw apparaat met Heartlink bij gebruik van deze functie om te kiezen wie u wilt vermijden",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Wilt u iemand vermijden die u kent op Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Het is eenvoudig - deel het contact van uw apparaat met Heartlink bij gebruik van deze functie om te kiezen wie u wilt vermijden",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "We slaan uw geblokkeerde contact op om te voorkomen dat u elkaar ziet als uw contact een account heeft met dezelfde infor die u verstrekt. U kunt stoppen met delen met ons in uw instellingen.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Meer informatie hier, inclusief hoe hartverklink uw contacten verwerkt",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Meer informatie hier, inclusief hoe hartverklink uw contacten verwerkt",
   "share_{nameUser}_profile": "Deel {nameUser} profiel",
   "see_what_a_friend_thinks": "Kijk wat een vriend denkt",
   "report_{nameUser}": "Rapport {nameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "Nieuwe verbindingen",
   "messages": "Berichten",
   "get_read_receipts": "Ontvang leesbonnen",
-  "level_up_everyone_action_you_take_on_heartlink": "Niveau een opeenstapeling van de actie die je onderneemt op hartlink",
   "get_boost_profile": "Ontvang een boostprofiel",
   "get_supper_like": "Krijg het avondeten zoals",
   "silver_package": "Zilverpakket",
   "gold_package": "Goudpakket",
+  "level_up_everyone_action_you_take_on_heartLink": "Niveau een opeenstapeling van de actie die je onderneemt op hartlink",
   "get_read_receipt_package": "Ontvang het gelezen ontvangstpakket",
   "stay_up_to_date": "Blijf op de hoogte",
   "know_when_your_messages_have_been_read_with_read_receipt": "Weet wanneer uw berichten zijn gelezen met leesbewijs",
@@ -102,7 +102,7 @@
   "get_boost_package": "Krijg een boostpakket",
   "skip_the_queue": "Sla de wachtrij over",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Altijd op het bovenste profiel in uw regio gedurende 30 minuten om meer wedstrijden te krijgen",
-  "boost_my_profile": "Boost mijn profiel",
+  "boost_my_profile": "Stimuleer mijn profiel",
   "get_a_gold_package": "Koop een goudpakket",
   "5_free_supper_like_weekly": "5 gratis avondmaal zoals wekelijks",
   "get_supper_likes_package": "Krijg het avondmaallikpakket",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Laat me topkeuzes zien",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Als u dit inschakelt, kunt u worden getoond als een aanbevolen topkeuze aan andere gebruikers bij u in de buurt",
   "activity_status": "Activiteitsstatus",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Sta andere leden toe om te zien of je recent actief was in de laatste 24 uur op Heartlink. Als u dit hebt uitgeschakeld, kunnen ze uw recent actieve status niet zien",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Sta andere leden toe om te zien of je recent actief was in de laatste 24 uur op Heartlink. Als u dit hebt uitgeschakeld, kunnen ze uw recent actieve status niet zien",
   "app_settings": "App instellingen",
   "show_distance_in": "Toon afstand in",
   "language": "Taal",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Laat mijn afstand niet zien",
   "show_{nameScream}_on_my_profile": "Toon {namescream} op mijn profiel",
   "you_are_not_enter_the_phone_number": "U bent niet in het telefoonnummer",
-  "Interests": "Belangen",
+  "interests": "Belangen",
   "my_gender": "Mijn geslacht",
-  "my_orientation": "Mijn oriëntatie"
+  "my_orientation": "Mijn oriëntatie",
+  "version_x.y.z": "Versie X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Leef bij {NameAddress}",
+  "{numberKilometers}_{unit}_away": "{Numberkilometers} {eenheid} weg",
+  "verified": "Geverifieerd",
+  "HeartLink": "Hartverschiet",
+  "don't_worry_-_we_won't_tell_this_person": "Maak je geen zorgen - we zullen deze persoon niet vertellen",
+  "finding_people_near_you...": "Mensen bij je in de buurt vinden ...",
+  "let's_be_friend": "Laten we vrienden zijn",
+  "find_someone_that_wants_to_be_friends": "Zoek iemand die vrienden wil zijn",
+  "coffee_date": "Koffiedatum",
+  "find_someone_to_get_coffee_with": "Zoek iemand om koffie mee te krijgen",
+  "looking_for_love": "Op zoek naar de liefde",
+  "blind_date": "Blind date",
+  "open_hour_6pm_-_12pm_(local_time)": "Open uur 18.00 - 12.00 uur (lokale tijd)",
+  "share_idea": "Deel idee",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Beantwoord moeilijke vragen in plaats van zinnen te openen! Uw antwoorden verschijnen op de blind date -interface en kunnen worden gebruikt om een ​​gesprek te starten",
+  "get_ready": "Maak je klaar",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Vragen en chattijd zijn beperkt, dus denk en antwoord snel",
+  "compatible_to_view_profiles": "Compatibel om profielen te bekijken",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Nadat de chat voorbij is, zie je het profiel van de persoon als jullie allebei matchen",
+  "i_can't_date_someone_who:": "Ik kan niet uitgaan met iemand die:",
+  "smoker": "Roker",
+  "not_lovers": "Geen geliefden",
+  "no_romance": "Geen romantiek",
+  "love_novels": "Hou van romans",
+  "answer_question": "Antwoord vraag",
+  "optimise_pairing": "Optimaliseer paren",
+  "connecting": "Verbinden",
+  "the_best_dinner_is_at:": "Het beste diner is op:",
+  "on_the_tray_and_watch_tv": "Op het dienblad en tv kijken",
+  "in_bed": "In bed",
+  "verified_photo": "Geverifieerde foto",
+  "likes_you": "VIND JE LEUK",
+  "prioritized_likes": "Prioritaire likes",
+  "everyone_you_like_will_see_you_soon": "Iedereen die je leuk vindt, zal je binnenkort zien",
+  "match_instantly_with_people_who_already_like_you": "Match direct met mensen die je al leuk vinden",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inclusief topkeuzes, onbeperkte likes, 1 free boost elke maand, 5 gratis avondmaal zoals elke week, terugspoelen en paspoort",
+  "message_before_matching": "Bericht voor het matchen",
+  "99+_people_already_like_you": "99+ mensen vinden je al leuk",
+  "see_who_likes_you_and_match_instantly": "Kijk wie je leuk vindt en match direct",
+  "buy_more_top_picks": "Koop meer topkeuzes",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Krijg volledige toegang tot topkeuzes, zoals jij, stuur onbeperkte likes en meer",
+  "see_as_many_likes_as_you_want": "Zie zoveel likes als je wilt",
+  "1_free_boost_every_month": "1 gratis boost elke maand",
+  "choose_who_see_you": "Kies wie je ziet",
+  "5_free_supper_likes_very_week": "5 gratis avondmaal houdt van heel week",
+  "you're_3x_more_likely_to_get_a_match": "Je hebt meer kans om een ​​match te krijgen",
+  "online_now": "Nu online",
+  "like": "LEUK VINDEN",
+  "nope": "NEE",
+  "supper_like": "Avondmaal lijken"
 }
