--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mój numer to",
   "phone_number": "Numer telefonu",
   "please_enter_a_valid_phone_number": "Proszę wpisać poprawny numer telefonu",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Po dotknięciu „Kontynuuj” HeartLink wyśle ​​tekst z kodem weryfikacji. Korzystanie z komunikatów i stawek danych mają zastosowanie.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Po dotknięciu „Kontynuuj” HeartLink wyśle ​​tekst z kodem weryfikacji. Korzystanie z komunikatów i stawek danych mają zastosowanie.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Do logowania można użyć zweryfikowanego numeru telefonu.",
   "learn_what_happens_when_your_number_changes.": "Dowiedz się, co się stanie, gdy zmieni się twój numer.",
   "continue": "Kontynuować",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Jaki jest Twój adres e-mail?",
   "don't_lose_access_to_your_account,_verify_your_email": "Nie trać dostępu do swojego konta, sprawdź swój e -mail",
   "verify_instantly_by_connecting_your_google_account": "Sprawdź natychmiast, podłączając swoje konto Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Chcę otrzymywać wiadomości, aktualizacje i oferty od Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Chcę otrzymywać wiadomości, aktualizacje i oferty od Heartlink",
   "enter_email": "Wprowadź e-mail",
-  "welcome_to_heartlink": "Witamy w Heartlink",
+  "welcome_to_heartLink": "Witamy w Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Postępuj zgodnie z naszymi zasadami, aby mieć więcej zabawy i wspólnie budować świetną społeczność",
   "be_yourself": "Bądź sobą",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Upewnij się, że Twoje zdjęcia, wiek i bio są zgodne z tym, kim jesteś",
@@ -43,7 +43,7 @@
   "apply": "Stosować",
   "my_name_is": "Nazywam się",
   "your_name": "Twoje imię",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "W ten sposób pojawi się w linku serca i nie będziesz w stanie tego zmienić",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "W ten sposób pojawi się w linku serca i nie będziesz w stanie tego zmienić",
   "my_birthday_is": "Moje urodziny są",
   "your_age_will_be_public": "Twój wiek będzie publiczny",
   "i_am_a": "Jestem",
@@ -57,15 +57,15 @@
   "my_photos_are": "Moje zdjęcia są",
   "add_at_least_2_photos_to_continue": "Dodaj co najmniej 2 zdjęcia, aby kontynuować",
   "enable_location": "Umożliwić lokację",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Musisz włączyć zamówienie lokalizacji, aby użyć linków serca",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Musisz włączyć zamówienie lokalizacji, aby użyć linków serca",
   "allow_location": "Zezwalaj na lokalizację",
   "tell_me_more": "Powiedz mi więcej",
   "meet_people_nearby": "Poznaj ludzi w pobliżu",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Twoja lokalizacja zostanie wykorzystana do pokazania potencjalnych dopasowań w pobliżu.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Chcesz uniknąć kogoś, kogo znasz na sercu?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Jest to łatwe - udostępnij kontakt swojego urządzenia z HeartLink podczas korzystania z tej funkcji, aby wybrać kogo chcesz uniknąć",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Chcesz uniknąć kogoś, kogo znasz na sercu?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Jest to łatwe - udostępnij kontakt swojego urządzenia z HeartLink podczas korzystania z tej funkcji, aby wybrać kogo chcesz uniknąć",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Przechowujemy Twój zablokowany kontakt, aby powstrzymać Cię przed widzeniem się, jeśli Twój kontakt ma konto z tym samym podawanym, co. Możesz przestać udostępniać z nami w swoich ustawieniach.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Dowiedz się więcej tutaj, w tym sposób przetwarzania kontaktów",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Dowiedz się więcej tutaj, w tym sposób przetwarzania kontaktów",
   "share_{nameUser}_profile": "Udostępnij {NameUser} Profil",
   "see_what_a_friend_thinks": "Zobacz, co myśli przyjaciel",
   "report_{nameUser}": "Raport {nameUser}",
@@ -88,17 +88,17 @@
   "new_connections": "Nowe połączenia",
   "messages": "Wiadomości",
   "get_read_receipts": "Uzyskaj odczyt paragonów",
-  "level_up_everyone_action_you_take_on_heartlink": "Wyrównaj wszystkich działań, które podejmujesz na serce",
   "get_boost_profile": "Uzyskaj profil wzmocnienia",
   "get_supper_like": "Zdobądź kolację jak",
   "silver_package": "Pakiet srebrny",
   "gold_package": "Pakiet złota",
+  "level_up_everyone_action_you_take_on_heartLink": "Wyrównaj wszystkich działań, które podejmujesz na serce",
   "get_read_receipt_package": "Pobierz Pakiet odczytu paragonu",
   "stay_up_to_date": "Być na bieżąco",
   "know_when_your_messages_have_been_read_with_read_receipt": "Wiedz, kiedy Twoje wiadomości zostały odczytane z odczytaniem",
   "most_popular": "NAJBARDZIEJ POPULARNY",
   "read_receipt": "Czytać przepis",
-  "recurring_billing,_cancel_anytime": "Powtarzające się rozliczenie, anuluj w dowolnym momencie",
+  "recurring_billing,_cancel_anytime": "Powtarzające się faktury, anuluj w dowolnym momencie",
   "get_boost_package": "Uzyskaj pakiet Boost",
   "skip_the_queue": "Pomiń kolejkę",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Zawsze na najwyższym profilu w Twojej okolicy przez 30 minut, aby uzyskać więcej meczów",
@@ -115,7 +115,7 @@
   "control_your_profile": "Kontroluj swój profil",
   "limit_what_others_see_with_dating_plus": "Ogranicz to, co inni widzą z randkowymi plus",
   "choose_who_sees_you": "Wybierz, kto cię widzi",
-  "only_be_shown_to_people_you've_liked": "Wyświetlaj się tylko osobom, które lubiłeś",
+  "only_be_shown_to_people_you've_liked": "Pokazano tylko osobom, które lubiłeś",
   "like_profile_around_the_world": "Jak profil na całym świecie",
   "passport_to_anywhere": "Paszport do dowolnego miejsca",
   "unlimited_rewinds": "Nieograniczone przewijanie",
@@ -150,9 +150,9 @@
   "on_wi-fi_and_mobile_data": "Na Wi-Fi i danych mobilnych",
   "never_auto_play_videos": "Nigdy nie automatycznie odtwarzaj filmy",
   "show_me_top_picks": "Pokaż mi najlepsze typy",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Włączenie tego pozwoli ci pokazać jako wyróżniony najlepszy wybór dla innych użytkowników w pobliżu",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Włączenie tego pozwoli ci pokazać jako wyróżniony najlepszy wybór do innych użytkowników w pobliżu",
   "activity_status": "Status aktywności",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Pozwól innym członkom sprawdzić, czy byłeś niedawno aktywny w ciągu ostatnich 24 godzin na Heartlink. Jeśli to wyłączyłeś, nie będą w stanie zobaczyć twojego niedawno aktywnego statusu",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Pozwól innym członkom sprawdzić, czy byłeś niedawno aktywny w ciągu ostatnich 24 godzin na Heartlink. Jeśli to wyłączyłeś, nie będą w stanie zobaczyć twojego niedawno aktywnego statusu",
   "app_settings": "Ustawienia aplikacji",
   "show_distance_in": "Pokaż dystans w",
   "language": "Język",
@@ -161,7 +161,7 @@
   "choose_the_theme_you_like_most": "Wybierz motyw, który lubisz najbardziej",
   "log_out": "WYLOGUJ",
   "delete_account": "USUŃ KONTO",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Dodaj wideo, zdjęcie lub logo, zbliżenie się o 4% do wypełnienia swojego profilu, a możesz nawet uzyskać więcej polubień",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Dodaj wideo, zdjęcie lub logo, zbliżenie się do wypełnienia swojego profilu, a możesz nawet uzyskać więcej polubień",
   "add_media": "Dodaj media",
   "upload_photo": "Prześlij zdjęcie",
   "upload_loop": "Pętla przesyłania",
@@ -171,7 +171,7 @@
   "about_me": "O MNIE",
   "about_me_-_maximize_500_words": "O mnie - zmaksymalizuj 500 słów",
   "interest": "ODSETKI",
-  "out_of_5": "na 5",
+  "out_of_5": "z 5",
   "search_interest": "Wyszukaj zainteresowanie",
   "dating_purposes": "Cele randkowe",
   "i'm_looking_for": "Szukam",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Nie pokazuj mojej odległości",
   "show_{nameScream}_on_my_profile": "Pokaż {nazwa Cream} na moim profilu",
   "you_are_not_enter_the_phone_number": "Nie wprowadź numeru telefonu",
-  "Interests": "Zainteresowania",
+  "interests": "Zainteresowania",
   "my_gender": "Moja płeć",
-  "my_orientation": "moja orientacja"
+  "my_orientation": "moja orientacja",
+  "version_x.y.z": "Wersja X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Na żywo w {NameAddress}",
+  "{numberKilometers}_{unit}_away": "{numerKilometers} {jednostka}",
+  "verified": "Zweryfikowane",
+  "HeartLink": "Link Heart",
+  "don't_worry_-_we_won't_tell_this_person": "Nie martw się - nie powiemy tej osobie",
+  "finding_people_near_you...": "Znalezienie ludzi w pobliżu ...",
+  "let's_be_friend": "Zostańmy przyjaciółmi",
+  "find_someone_that_wants_to_be_friends": "Znajdź kogoś, kto chce być przyjaciółmi",
+  "coffee_date": "Data kawy",
+  "find_someone_to_get_coffee_with": "Znajdź kogoś do kawy",
+  "looking_for_love": "Szukając miłości",
+  "blind_date": "Randka w ciemno",
+  "open_hour_6pm_-_12pm_(local_time)": "Godzina otwarta 18:00 - 12:00 (czas lokalny)",
+  "share_idea": "Podziel się pomysł",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Odpowiedz na trudne pytania zamiast otwierać zdania! Twoje odpowiedzi pojawią się na interfejsie Data Blind i mogą być użyte do rozpoczęcia rozmowy",
+  "get_ready": "Przygotuj się",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Pytania i czas czatu są ograniczone, więc pomyśl i odpowiedz szybko",
+  "compatible_to_view_profiles": "Kompatybilny do wyświetlania profili",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Po zakończeniu czatu zobaczysz profil osoby, jeśli oboje pasujesz",
+  "i_can't_date_someone_who:": "Nie mogę umówić się z kimś, kto:",
+  "smoker": "Palący",
+  "not_lovers": "Nie kochanków",
+  "no_romance": "Bez romansu",
+  "love_novels": "Uwielbiam powieści",
+  "answer_question": "Odpowiedz na pytanie",
+  "optimise_pairing": "Zoptymalizuj parowanie",
+  "connecting": "Złączony",
+  "the_best_dinner_is_at:": "Najlepszy obiad jest w:",
+  "on_the_tray_and_watch_tv": "Na tacy i oglądaj telewizję",
+  "in_bed": "W łóżku",
+  "verified_photo": "Zweryfikowane zdjęcie",
+  "likes_you": "LUBI CIĘ",
+  "prioritized_likes": "Priorytetyzowane polubienia",
+  "everyone_you_like_will_see_you_soon": "Wszyscy, których lubisz, zobaczą cię wkrótce",
+  "match_instantly_with_people_who_already_like_you": "Natychmiast dopasuj się do osób, które już cię lubią",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "W tym najlepsze typy, nieograniczone polubienia, 1 -free Boost co miesiąc, 5 darmowych kolacji jak co tydzień, przewijanie i paszport",
+  "message_before_matching": "Wiadomość przed dopasowaniem",
+  "99+_people_already_like_you": "99+ osób już lubi cię",
+  "see_who_likes_you_and_match_instantly": "Zobacz, kto cię lubi i dopasuj natychmiast",
+  "buy_more_top_picks": "Kup więcej najlepszych typów",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Uzyskaj pełny dostęp do najlepszych typów, takich jak ty, wysyłaj nieograniczone polubienia i więcej",
+  "see_as_many_likes_as_you_want": "Zobacz tyle polubień, ile chcesz",
+  "1_free_boost_every_month": "1 bezpłatny doładowanie co miesiąc",
+  "choose_who_see_you": "Wybierz, kto cię do zobaczenia",
+  "5_free_supper_likes_very_week": "5 darmowych kolacji lubi bardzo tydzień",
+  "you're_3x_more_likely_to_get_a_match": "Jesteś o 3x bardziej prawdopodobne, że dostaniesz dopasowanie",
+  "online_now": "Teraz online",
+  "like": "TAK JAK",
+  "nope": "NIE",
+  "supper_like": "Kolacja jak"
 }
