--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -12,7 +12,7 @@
   "my_number_is": "Meu número é",
   "phone_number": "Número de telefone",
   "please_enter_a_valid_phone_number": "Por favor insira um número de telefone válido",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Quando você toca em 'Continue', o HeartLink enviará um texto com o código de verificação. Mensagens e taxas de dados Mate Aplicar.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Quando você toca em 'Continue', o HeartLink enviará um texto com o código de verificação. Mensagens e taxas de dados Mate Aplicar.",
   "the_verified_phone_number_can_be_used_to_log_in.": "O número de telefone verificado pode ser usado para fazer login.",
   "learn_what_happens_when_your_number_changes.": "Aprenda o que acontece quando seu número mudar.",
   "continue": "Continuar",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Qual o seu email?",
   "don't_lose_access_to_your_account,_verify_your_email": "Não perca o acesso à sua conta, verifique seu e -mail",
   "verify_instantly_by_connecting_your_google_account": "Verifique instantaneamente conectando sua conta do Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Eu quero receber notícias, atualizações e ofertas do HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Eu quero receber notícias, atualizações e ofertas do HeartLink",
   "enter_email": "Digite email",
-  "welcome_to_heartlink": "Bem -vindo ao Heartlink",
+  "welcome_to_heartLink": "Bem -vindo ao Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Siga nossas regras para se divertir mais e construir uma grande comunidade juntos",
   "be_yourself": "Seja você mesmo",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Certifique -se de suas fotos, idade e biografia fiéis a quem você é",
@@ -43,11 +43,11 @@
   "apply": "Aplicar",
   "my_name_is": "Meu nome é",
   "your_name": "Seu nome",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "É assim que aparecerá no HeartLink, e você não poderá mudar",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "É assim que aparecerá no HeartLink, e você não poderá mudar",
   "my_birthday_is": "Meu aniversário é",
   "your_age_will_be_public": "Sua idade será pública",
   "i_am_a": "eu sou um",
-  "show_{nameInformation}_on_my_profile": "mostrar {nameinformation} no meu perfil",
+  "show_{nameInformation}_on_my_profile": "mostrar {NameInformation} no meu perfil",
   "my_sexual_orientation_is": "Minha orientação sexual é",
   "select_up_to_3": "Selecione até 3",
   "skip": "Pular",
@@ -57,15 +57,15 @@
   "my_photos_are": "Minhas fotos são",
   "add_at_least_2_photos_to_continue": "Adicione pelo menos 2 fotos para continuar",
   "enable_location": "Habilitar localização",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Você precisará permitir que seu pedido de localização use o HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Você precisará permitir que seu pedido de localização use o HeartLinks",
   "allow_location": "Permitir localização",
   "tell_me_more": "Me diga mais",
   "meet_people_nearby": "Conhecer pessoas por perto",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Seu local será usado para mostrar possíveis correspondências perto de você.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Quer evitar alguém que você conhece no HeartLink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "É fácil - compartilhe o contato do seu dispositivo com o HeartLink ao usar esse recurso para escolher quem você deseja evitar",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Quer evitar alguém que você conhece no HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "É fácil - compartilhe o contato do seu dispositivo com o HeartLink ao usar esse recurso para escolher quem você deseja evitar",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Armazetaremos seu contato bloqueado para impedir que você se veja se o seu contato tiver uma conta com o mesmo Infor que você fornece. Você pode parar de compartilhar conosco em suas configurações.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Saiba mais aqui, incluindo como o HeartLink processa seus contatos",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Saiba mais aqui, incluindo como o HeartLink processa seus contatos",
   "share_{nameUser}_profile": "Compartilhar {NameUser} perfil",
   "see_what_a_friend_thinks": "Veja o que um amigo pensa",
   "report_{nameUser}": "Relatório {NameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "Novas conexões",
   "messages": "Mensagens",
   "get_read_receipts": "Obtenha recibos de leitura",
-  "level_up_everyone_action_you_take_on_heartlink": "Level -up todos ações que você toma no HeartLink",
   "get_boost_profile": "Obtenha o perfil de impulso",
-  "get_supper_like": "Pegue o jantar como",
+  "get_supper_like": "Obtenha o jantar como",
   "silver_package": "Pacote de prata",
   "gold_package": "Pacote de ouro",
+  "level_up_everyone_action_you_take_on_heartLink": "Level -up todos ações que você toma no HeartLink",
   "get_read_receipt_package": "Obtenha o pacote de recibo de leitura",
   "stay_up_to_date": "Fique atualizado",
   "know_when_your_messages_have_been_read_with_read_receipt": "Saiba quando suas mensagens foram lidas com o recibo de leitura",
@@ -132,7 +132,7 @@
   "no_data": "Sem dados",
   "add_language": "Adicione a linguagem",
   "maximum_distance": "Distância máxima",
-  "only_show_people_in_this_range": "Só mostre as pessoas nesse intervalo",
+  "only_show_people_in_this_range": "Apenas mostre as pessoas nesta faixa",
   "age_range": "Faixa etária",
   "show_me": "Mostre-me",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Usamos essas preferências para encontrar correspondências. Algumas sugestões de correspondência podem não se enquadrar nos parâmetros desejados",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Mostre -me as melhores escolhas",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ativar isso, permitirá que você seja mostrado como uma escolha superior em destaque para outros usuários perto de você",
   "activity_status": "Status da atividade",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permita que outros membros vejam se você foi recentemente ativo nas últimas 24 horas no HeartLink. Se você desativou isso, eles não poderão ver seu status recentemente ativo",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permita que outros membros vejam se você foi recentemente ativo nas últimas 24 horas no HeartLink. Se você desativou isso, eles não poderão ver seu status recentemente ativo",
   "app_settings": "Configurações do aplicativo",
   "show_distance_in": "Mostre a distância em",
   "language": "Linguagem",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Não mostre minha distância",
   "show_{nameScream}_on_my_profile": "Mostre {namescream} no meu perfil",
   "you_are_not_enter_the_phone_number": "Você não entra no número de telefone",
-  "Interests": "Interesses",
+  "interests": "Interesses",
   "my_gender": "O meu sexo",
-  "my_orientation": "minha orientação"
+  "my_orientation": "minha orientação",
+  "version_x.y.z": "Versão X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Viva em {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {unidade} fora",
+  "verified": "Verificado",
+  "HeartLink": "Heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "Não se preocupe - não vamos contar a essa pessoa",
+  "finding_people_near_you...": "Encontrando pessoas perto de você ...",
+  "let's_be_friend": "Vamos ser amigos",
+  "find_someone_that_wants_to_be_friends": "Encontre alguém que quer ser amigo",
+  "coffee_date": "Data do café",
+  "find_someone_to_get_coffee_with": "Encontre alguém para tomar café",
+  "looking_for_love": "Procurando por amor",
+  "blind_date": "Encontro às cegas",
+  "open_hour_6pm_-_12pm_(local_time)": "Hora aberta 18:00 - 12:00 (horário local)",
+  "share_idea": "Compartilhe a ideia",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Responda a perguntas difíceis em vez de abrir frases! Suas respostas aparecerão na interface de data cega e podem ser usadas para iniciar uma conversa",
+  "get_ready": "Prepare-se",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Perguntas e tempo de bate -papo são limitados, então pense e responda rapidamente",
+  "compatible_to_view_profiles": "Compatível para ver os perfis",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Após o término da conversa, você verá o perfil da pessoa se vocês dois correspondem",
+  "i_can't_date_someone_who:": "Não posso namorar alguém que:",
+  "smoker": "Fumante",
+  "not_lovers": "Não amantes",
+  "no_romance": "Sem romance",
+  "love_novels": "Romances de amor",
+  "answer_question": "Responda a pergunta",
+  "optimise_pairing": "Otimize o emparelhamento",
+  "connecting": "Conectando",
+  "the_best_dinner_is_at:": "O melhor jantar é em:",
+  "on_the_tray_and_watch_tv": "Na bandeja e assistir TV",
+  "in_bed": "Na cama",
+  "verified_photo": "Foto verificada",
+  "likes_you": "GOSTA DE VOCÊ",
+  "prioritized_likes": "Curtidas priorizadas",
+  "everyone_you_like_will_see_you_soon": "Todos que você gosta vão te ver em breve",
+  "match_instantly_with_people_who_already_like_you": "Combine instantaneamente com pessoas que já gostam de você",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Incluindo as principais escolhas, curtidas ilimitadas, impulso de 1Free todos os meses, 5 ceia grátis como toda semana, rebobinando e passaporte",
+  "message_before_matching": "Mensagem antes de corresponder",
+  "99+_people_already_like_you": "Mais de 99 pessoas já gostam de você",
+  "see_who_likes_you_and_match_instantly": "Veja quem gosta de você e combine instantaneamente",
+  "buy_more_top_picks": "Compre mais escolhas principais",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Obtenha acesso total às principais escolhas, como você, envie gostos ilimitados e mais",
+  "see_as_many_likes_as_you_want": "Veja quantos gostos que quiser",
+  "1_free_boost_every_month": "1 impulso grátis todos os meses",
+  "choose_who_see_you": "Escolha quem te ver",
+  "5_free_supper_likes_very_week": "5 Ceia gratuita gosta de uma semana muito",
+  "you're_3x_more_likely_to_get_a_match": "Você tem mais chances de conseguir uma partida",
+  "online_now": "Online agora",
+  "like": "COMO",
+  "nope": "NÃO",
+  "supper_like": "Ceia como"
 }
