--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -12,7 +12,7 @@
   "my_number_is": "Numarul meu este",
   "phone_number": "Număr de telefon",
   "please_enter_a_valid_phone_number": "Va rugam sa introduceti un numar de telefon valid",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Când atingeți „Continuați”, HeartLink va trimite un text cu cod de verificare. Mesajele și ratele de date se aplică.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Când atingeți „Continuați”, HeartLink va trimite un text cu cod de verificare. Mesajele și ratele de date se aplică.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Numărul de telefon verificat poate fi utilizat pentru a vă conecta.",
   "learn_what_happens_when_your_number_changes.": "Aflați ce se întâmplă când numărul dvs. se schimbă.",
   "continue": "Continua",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Care este emailul tau?",
   "don't_lose_access_to_your_account,_verify_your_email": "Nu pierdeți accesul la contul dvs., verificați -vă e -mailul",
   "verify_instantly_by_connecting_your_google_account": "Verificați instantaneu conectând contul dvs. Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Vreau să primesc știri, actualizări și oferte de la HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Vreau să primesc știri, actualizări și oferte de la HeartLink",
   "enter_email": "Introduceți adresa de email",
-  "welcome_to_heartlink": "Bine ați venit la HeartLink",
+  "welcome_to_heartLink": "Bine ați venit la HeartLink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Vă rugăm să urmați regulile noastre pentru a ne distra mai mult și pentru a construi o comunitate excelentă împreună",
   "be_yourself": "Fii tu însuți",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Asigurați -vă că fotografiile, vârsta și bio -ul dvs. este adevărat pentru cine sunteți",
@@ -43,7 +43,7 @@
   "apply": "aplica",
   "my_name_is": "Numele meu este",
   "your_name": "Numele dumneavoastră",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Așa va apărea în HeartLink și nu veți putea să -l schimbați",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Așa va apărea în HeartLink și nu veți putea să -l schimbați",
   "my_birthday_is": "Ziua mea de naștere este",
   "your_age_will_be_public": "Vârsta ta va fi publică",
   "i_am_a": "sunt un",
@@ -57,16 +57,16 @@
   "my_photos_are": "Fotografiile mele sunt",
   "add_at_least_2_photos_to_continue": "Adăugați cel puțin 2 fotografii pentru a continua",
   "enable_location": "Activați locația",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Va trebui să activați comanda de locație pentru a utiliza HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Va trebui să activați comanda de locație pentru a utiliza HeartLinks",
   "allow_location": "Permiteți locația",
   "tell_me_more": "Spune-mi mai multe",
   "meet_people_nearby": "Întâlnește oameni în apropiere",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Locația dvs. va fi folosită pentru a arăta potențialele meciuri lângă dvs.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Vrei să eviți pe cineva pe care îl cunoști pe HeartLink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Este ușor - împărtășiți contactul dispozitivului cu HeartLink atunci când utilizați această caracteristică pentru a alege pe cine doriți să evitați",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Vrei să eviți pe cineva pe care îl cunoști pe HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Este ușor - împărtășiți contactul dispozitivului cu HeartLink atunci când utilizați această caracteristică pentru a alege pe cine doriți să evitați",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Vom stoca contactul blocat pentru a vă opri să vă vedeți dacă contactul dvs. are un cont cu același Infor pe care îl oferiți. Puteți opri împărtășirea cu noi în setările dvs.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Aflați mai multe aici, inclusiv modul în care se prelucrează legătura HeartLink Contacte",
-  "share_{nameUser}_profile": "Partajează {Nameuser} Profil",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Aflați mai multe aici, inclusiv modul în care se prelucrează legătura HeartLink Contacte",
+  "share_{nameUser}_profile": "Partajează {NameSer} profil",
   "see_what_a_friend_thinks": "Vedeți ce crede un prieten",
   "report_{nameUser}": "Raport {nameusUser}",
   "away": "departe",
@@ -88,11 +88,11 @@
   "new_connections": "Conexiuni noi",
   "messages": "Mesaje",
   "get_read_receipts": "Obțineți chitanțe de citire",
-  "level_up_everyone_action_you_take_on_heartlink": "Nivelați -vă pe toată lumea acțiunea pe care o luați pe HeartLink",
   "get_boost_profile": "Obțineți profilul Boost",
   "get_supper_like": "Obțineți cina ca",
   "silver_package": "Pachet de argint",
   "gold_package": "Pachet de aur",
+  "level_up_everyone_action_you_take_on_heartLink": "Nivelați -vă pe toată lumea acțiunea pe care o luați pe HeartLink",
   "get_read_receipt_package": "Obțineți pachetul de primire citiți",
   "stay_up_to_date": "Sa fii la curent",
   "know_when_your_messages_have_been_read_with_read_receipt": "Știți când mesajele dvs. au fost citite cu chitanță de citire",
@@ -105,10 +105,10 @@
   "boost_my_profile": "Îmbunătățiți -mi profilul",
   "get_a_gold_package": "Obțineți un pachet de aur",
   "5_free_supper_like_weekly": "5 cină liberă ca săptămânal",
-  "get_supper_likes_package": "Obțineți pachetul de like -uri pentru cină",
+  "get_supper_likes_package": "Obțineți pachetul de like -uri de cină",
   "stand_out_with_super_like": "Ieși în evidență cu super -like",
   "3x_chance_to_get_a_match": "3x șansă de a obține un meci",
-  "get_supper_likes": "Obțineți cina Like -uri",
+  "get_supper_likes": "Ia -i cină",
   "get_silver_package": "Obțineți un pachet de argint",
   "unlimited_likes": "Like -uri nelimitate",
   "send_as_many_likes_as_you_want": "Trimiteți cât de multe like -uri doriți",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Arată -mi alegeri de top",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Pornirea acestui lucru vă va permite să fiți afișat ca o selecție de top prezentată altor utilizatori din apropierea dvs.",
   "activity_status": "Starea activității",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permiteți altor membri să vadă dacă ați activat recent în ultimele 24 de ore pe HeartLink. Dacă ați oprit acest lucru, nu vor putea vedea starea dvs. activă recent",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Permiteți altor membri să vadă dacă ați activat recent în ultimele 24 de ore pe HeartLink. Dacă ați oprit acest lucru, nu vor putea vedea starea dvs. activă recent",
   "app_settings": "Setări aplicație",
   "show_distance_in": "Afișați distanța în",
   "language": "Limba",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Nu -mi arăta distanța",
   "show_{nameScream}_on_my_profile": "Afișați {namescream} pe profilul meu",
   "you_are_not_enter_the_phone_number": "Nu introduceți numărul de telefon",
-  "Interests": "Interese",
+  "interests": "Interese",
   "my_gender": "Genul meu",
-  "my_orientation": "Orientarea mea"
+  "my_orientation": "Orientarea mea",
+  "version_x.y.z": "Versiunea X.Y.Z",
+  "km": "km",
+  "mi": "MI",
+  "live_at_{nameAddress}": "Trăiește la {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {unitate} departe",
+  "verified": "Verificat",
+  "HeartLink": "Lanta de inimă",
+  "don't_worry_-_we_won't_tell_this_person": "Nu vă faceți griji - nu vom spune această persoană",
+  "finding_people_near_you...": "Găsirea oamenilor lângă tine ...",
+  "let's_be_friend": "Hai sa fim prieteni",
+  "find_someone_that_wants_to_be_friends": "Găsiți pe cineva care vrea să fie prieteni",
+  "coffee_date": "Data cafelei",
+  "find_someone_to_get_coffee_with": "Găsiți pe cineva cu care să luați cafea",
+  "looking_for_love": "Căutând dragoste",
+  "blind_date": "Întâlnire pe nevăzute",
+  "open_hour_6pm_-_12pm_(local_time)": "Ora deschisă 18:00 - 12:00 (ora locală)",
+  "share_idea": "Împărtășește idee",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Răspundeți la întrebări dure în loc să deschideți propoziții! Răspunsurile dvs. vor apărea pe interfața Blind Data și pot fi utilizate pentru a începe o conversație",
+  "get_ready": "Pregateste-te",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Întrebările și timpul de chat sunt limitate, așa că gândiți -vă și răspundeți rapid",
+  "compatible_to_view_profiles": "Compatibil pentru a vizualiza profiluri",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "După ce chat -ul s -a terminat, veți vedea profilul persoanei dacă amândoi se potrivesc",
+  "i_can't_date_someone_who:": "Nu pot să mă întâlnesc cu cineva care:",
+  "smoker": "Fumător",
+  "not_lovers": "Nu iubitori",
+  "no_romance": "Fără romantism",
+  "love_novels": "Romane de dragoste",
+  "answer_question": "Răspuns întrebare",
+  "optimise_pairing": "Optimizați împerecherea",
+  "connecting": "Conectarea",
+  "the_best_dinner_is_at:": "Cea mai bună cină este la:",
+  "on_the_tray_and_watch_tv": "Pe tavă și se uită la televizor",
+  "in_bed": "În pat",
+  "verified_photo": "Fotografie verificată",
+  "likes_you": "TE PLACE",
+  "prioritized_likes": "Prioritizate like -uri",
+  "everyone_you_like_will_see_you_soon": "Toți cei care îți plac te vor vedea în curând",
+  "match_instantly_with_people_who_already_like_you": "Se potrivește instantaneu cu oameni care deja vă plac",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inclusiv alegeri de top, like -uri nelimitate, impulsuri de 1Free în fiecare lună, 5 cină liberă ca în fiecare săptămână, derulare și pașaport",
+  "message_before_matching": "Mesaj înainte de potrivire",
+  "99+_people_already_like_you": "99+ persoane deja ca tine",
+  "see_who_likes_you_and_match_instantly": "Vedeți cine vă place și potriviți -vă instantaneu",
+  "buy_more_top_picks": "Cumpărați mai multe alegeri de top",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Obțineți acces complet la alegeri de top, ca tine, trimiteți like -uri nelimitate și multe altele",
+  "see_as_many_likes_as_you_want": "Vedeți cât mai multe like -uri",
+  "1_free_boost_every_month": "1 impuls gratuit în fiecare lună",
+  "choose_who_see_you": "Alegeți cine te văd",
+  "5_free_supper_likes_very_week": "5 Cina liberă îi place foarte mult săptămâna",
+  "you're_3x_more_likely_to_get_a_match": "Ai 3 ori mai multe șanse să obții un meci",
+  "online_now": "Online acum",
+  "like": "CA",
+  "nope": "NU",
+  "supper_like": "Cina ca"
 }
