--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,7 +12,7 @@
   "my_number_is": "Мой номер",
   "phone_number": "Номер телефона",
   "please_enter_a_valid_phone_number": "Пожалуйста, введите действующий телефонный номер",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Когда вы нажимаете «Продолжить», Heartlink отправит текст с кодом проверки. Применить к тарифам сообщений и тарифам.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Когда вы нажимаете «Продолжить», Heartlink отправит текст с кодом проверки. Применить к тарифам сообщений и тарифам.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Проверенный номер телефона можно использовать для входа в систему.",
   "learn_what_happens_when_your_number_changes.": "Узнайте, что происходит, когда ваш номер меняется.",
   "continue": "Продолжать",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Какой у тебя адрес электронной почты?",
   "don't_lose_access_to_your_account,_verify_your_email": "Не теряйте доступ к своей учетной записи, проверьте свою электронную почту",
   "verify_instantly_by_connecting_your_google_account": "Мгновенно подтвердите, подключив свою учетную запись Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Я хочу получить новости, обновления и предложения от Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Я хочу получить новости, обновления и предложения от Heartlink",
   "enter_email": "Введите адрес электронной почты",
-  "welcome_to_heartlink": "Добро пожаловать в Heartlink",
+  "welcome_to_heartLink": "Добро пожаловать в Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Пожалуйста, следуйте нашим правилам, чтобы повеселиться и построить отличное сообщество вместе",
   "be_yourself": "Будь собой",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Убедитесь, что ваши фотографии, возраст и биография верны тем, кто вы есть",
@@ -43,7 +43,7 @@
   "apply": "Применять",
   "my_name_is": "Меня зовут",
   "your_name": "Ваше имя",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Вот как это появится в Heartlink, и вы не сможете его изменить",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Вот как это появится в Heartlink, и вы не сможете его изменить",
   "my_birthday_is": "Мой день рождения",
   "your_age_will_be_public": "Ваш возраст будет публичным",
   "i_am_a": "Я",
@@ -57,15 +57,15 @@
   "my_photos_are": "Мои фотографии",
   "add_at_least_2_photos_to_continue": "Добавьте как минимум 2 фотографии, чтобы продолжить",
   "enable_location": "Включить местоположение",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Вам нужно будет позволить вашему заказа на местоположение использовать HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Вам нужно будет позволить вашему заказа на местоположение использовать HeartLinks",
   "allow_location": "Разрешить местоположение",
   "tell_me_more": "Расскажи мне больше",
   "meet_people_nearby": "Познакомьтесь с людьми поблизости",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Вы место будет использовано, чтобы показать потенциальные совпадения рядом с вами.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Хотите избежать кого -то, кого вы знаете на Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Это легко - поделитесь контактом вашего устройства с HeartLink при использовании этой функции, чтобы выбрать, кого вы хотите избежать",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Хотите избежать того, кого вы знаете на Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Это легко - поделитесь контактом вашего устройства с HeartLink при использовании этой функции, чтобы выбрать, кого вы хотите избежать",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Мы храним ваш заблокированный контакт, чтобы помешать вам увидеть друг друга, если в вашем контакте есть учетная запись с той же информацией, которую вы предоставляете. Вы можете перестать делиться с нами в ваших настройках.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Узнайте больше здесь, в том числе, как HeartLink обрабатывает ваши контакты",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Узнайте больше здесь, в том числе, как HeartLink обрабатывает ваши контакты",
   "share_{nameUser}_profile": "Share {nameUser} профиль",
   "see_what_a_friend_thinks": "Посмотрите, что думает друг",
   "report_{nameUser}": "Отчет {nameuser}",
@@ -88,12 +88,12 @@
   "new_connections": "Новые соединения",
   "messages": "Сообщения",
   "get_read_receipts": "Получите квитанции",
-  "level_up_everyone_action_you_take_on_heartlink": "Уровень всех действий, которые вы предпринимаете на Heartlink",
   "get_boost_profile": "Получить профиль Boost",
   "get_supper_like": "Получите ужин вроде",
   "silver_package": "Серебряный пакет",
   "gold_package": "Золотой пакет",
-  "get_read_receipt_package": "Получите пакет квитанции о прочтении",
+  "level_up_everyone_action_you_take_on_heartLink": "Уровень всех действий, которые вы предпринимаете на Heartlink",
+  "get_read_receipt_package": "Получить пакет квитанций",
   "stay_up_to_date": "Будьте в курсе",
   "know_when_your_messages_have_been_read_with_read_receipt": "Знайте, когда ваши сообщения были прочитаны с помощью квитанции о чтении",
   "most_popular": "САМЫЙ ПОПУЛЯРНЫЙ",
@@ -103,7 +103,7 @@
   "skip_the_queue": "Пропустите очередь",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Всегда в верхнем профиле в вашем районе в течение 30 минут, чтобы получить больше совпадений",
   "boost_my_profile": "Повысить мой профиль",
-  "get_a_gold_package": "Получите золотой пакет",
+  "get_a_gold_package": "Получить золотой пакет",
   "5_free_supper_like_weekly": "5 свободный ужин, как еженедельно",
   "get_supper_likes_package": "Получить пакет ужина любит",
   "stand_out_with_super_like": "Отличаться от супер",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Покажи мне лучшие выборы",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Включение этого позволит вам показать в качестве фигурного выбора другим пользователям рядом с вами",
   "activity_status": "Статус деятельности",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Позвольте другим участникам увидеть, были ли вы недавно активными в течение последних 24 часов на Heartlink. Если вы выключили это, они не смогут увидеть ваш недавно активного статуса",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Позвольте другим участникам увидеть, были ли вы недавно активными в течение последних 24 часов на Heartlink. Если вы выключили это, они не смогут увидеть ваш недавно активного статуса",
   "app_settings": "Настройки приложения",
   "show_distance_in": "Показать расстояние в",
   "language": "Язык",
@@ -161,7 +161,7 @@
   "choose_the_theme_you_like_most": "Выберите тему, которая вам больше всего нравится",
   "log_out": "ВЫЙТИ",
   "delete_account": "УДАЛИТЬ АККАУНТ",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Добавить видео, картинку или логотип, на 4% ближе к завершению вашего профиля, и вы даже можете получить больше лайков",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Добавить видео, картинку или логотип, чтобы на 4% ближе к завершению вашего профиля, и вы даже можете получить больше лайков",
   "add_media": "Добавить СМИ",
   "upload_photo": "Загрузить фото",
   "upload_loop": "Загрузить петлю",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Не показывай мое расстояние",
   "show_{nameScream}_on_my_profile": "Показать {namescream} в моем профиле",
   "you_are_not_enter_the_phone_number": "Вы не вводите номер телефона",
-  "Interests": "Интересы",
+  "interests": "Интересы",
   "my_gender": "Мой пол",
-  "my_orientation": "моя ориентация"
+  "my_orientation": "моя ориентация",
+  "version_x.y.z": "Версия X.Y.Z.",
+  "km": "км",
+  "mi": "миора",
+  "live_at_{nameAddress}": "Живи в {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {Unit} прочь",
+  "verified": "Проверенный",
+  "HeartLink": "Сердцевязки",
+  "don't_worry_-_we_won't_tell_this_person": "Не волнуйся - мы не скажем этому человеку",
+  "finding_people_near_you...": "Поиск людей рядом с вами ...",
+  "let's_be_friend": "Давай будем друзьями",
+  "find_someone_that_wants_to_be_friends": "Найдите кого -нибудь, кто хочет дружить",
+  "coffee_date": "Кофе дата",
+  "find_someone_to_get_coffee_with": "Найдите кого -нибудь, чтобы выпить кофе с",
+  "looking_for_love": "В поисках любви",
+  "blind_date": "Свидание в слепую",
+  "open_hour_6pm_-_12pm_(local_time)": "Открытый час 6 вечера - 12 вечера (местное время)",
+  "share_idea": "Поделиться идеей",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Ответьте на сложные вопросы вместо открытия предложений! Ваши ответы появятся на интерфейсе свидания слепых и могут быть использованы для начала разговора",
+  "get_ready": "Приготовься",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Вопросы и время чата ограничены, так что подумайте и ответьте быстро",
+  "compatible_to_view_profiles": "Совместим для просмотра профилей",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "После того, как чат закончится, вы увидите профиль человека, если вы оба соответствуете",
+  "i_can't_date_someone_who:": "Я не могу встречаться с кем -то, кто:",
+  "smoker": "Курильщик",
+  "not_lovers": "Не любовники",
+  "no_romance": "Нет романтики",
+  "love_novels": "Любовные романы",
+  "answer_question": "Отвечать на вопрос",
+  "optimise_pairing": "Оптимизировать сочетание",
+  "connecting": "Соединение",
+  "the_best_dinner_is_at:": "Лучший ужин - на:",
+  "on_the_tray_and_watch_tv": "На подносе и смотрите телевизор",
+  "in_bed": "В постели",
+  "verified_photo": "Проверенная фотография",
+  "likes_you": "ВЫ НРАВИТЕСЬ",
+  "prioritized_likes": "Приоритетные лайки",
+  "everyone_you_like_will_see_you_soon": "Все, что вам нравится, скоро увидят вас",
+  "match_instantly_with_people_who_already_like_you": "Мгновенно сопоставьте с людьми, которые уже нравятся вам",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Включая лучшие выборы, неограниченные лайки, 1 безразличный рост каждый месяц, 5 бесплатный ужин, как каждую неделю, перемотка и паспорт",
+  "message_before_matching": "Сообщение перед совпадением",
+  "99+_people_already_like_you": "99+ человек уже любят вас",
+  "see_who_likes_you_and_match_instantly": "Посмотрите, кто любит вас, и мгновенно соответствует",
+  "buy_more_top_picks": "Купить больше лучших выборов",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Получите полный доступ к лучшим выборам, как вы, отправьте неограниченное количество лайков и многое другое",
+  "see_as_many_likes_as_you_want": "Смотрите столько лайков, сколько хотите",
+  "1_free_boost_every_month": "1 бесплатный повышение каждый месяц",
+  "choose_who_see_you": "Выберите, кто тебя увидит",
+  "5_free_supper_likes_very_week": "5 Свободный ужин любит очень неделю",
+  "you're_3x_more_likely_to_get_a_match": "У тебя в 3 раза больше шансов получить матч",
+  "online_now": "Сейчас в сети",
+  "like": "НРАВИТЬСЯ",
+  "nope": "НЕА",
+  "supper_like": "Ужин, как"
 }
