--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -12,7 +12,7 @@
   "my_number_is": "Moje číslo je",
   "phone_number": "Telefónne číslo",
   "please_enter_a_valid_phone_number": "Prosím zadajte platné telefónne číslo",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Keď klepnete na 'Pokračovanie', Heartlink pošle text s overovacím kódom. Platia sa správy a dátové sadzby.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Keď klepnete na 'Pokračovanie', Heartlink pošle text s overovacím kódom. Platia sa správy a dátové sadzby.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Na prihlásenie sa dá použiť overené telefónne číslo.",
   "learn_what_happens_when_your_number_changes.": "Dozviete sa, čo sa stane, keď sa vaše číslo zmení.",
   "continue": "ďalej",
@@ -23,9 +23,9 @@
   "what's_your_email?": "aký máš email?",
   "don't_lose_access_to_your_account,_verify_your_email": "Nestrácajte prístup k svojmu účtu, overte si svoj e -mail",
   "verify_instantly_by_connecting_your_google_account": "Okamžite overte pripojením účtu Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Chcem dostávať správy, aktualizácie a ponuky od Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Chcem dostávať správy, aktualizácie a ponuky od Heartlink",
   "enter_email": "Zadajte e -mail",
-  "welcome_to_heartlink": "Vitajte v Heartlink",
+  "welcome_to_heartLink": "Vitajte v Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Postupujte podľa našich pravidiel, aby ste si viac zabavili a vytvorili spolu veľkú komunitu",
   "be_yourself": "Buď sám sebou",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Uistite sa, že vaše fotografie, vek a životopis sú verné tomu, kto ste",
@@ -43,11 +43,11 @@
   "apply": "Uplatňovať",
   "my_name_is": "Moje meno je",
   "your_name": "Tvoje meno",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Takto sa objaví v srdcovom odkaze a nebudete schopní ho zmeniť",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Takto sa objaví v srdcovom odkaze a nebudete schopní ho zmeniť",
   "my_birthday_is": "Moje narodeniny sú",
   "your_age_will_be_public": "Váš vek bude verejný",
   "i_am_a": "Som",
-  "show_{nameInformation}_on_my_profile": "Show {NameInformation} v mojom profile",
+  "show_{nameInformation}_on_my_profile": "show {nameInformation} v mojom profile",
   "my_sexual_orientation_is": "Moja sexuálna orientácia je",
   "select_up_to_3": "Vyberte až 3",
   "skip": "Preskočiť",
@@ -55,17 +55,17 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Dajte všetkým vedieť, o čom vás nadchne, pridaním do svojho profilu",
   "show_me_gender": "Ukáž mi pohlavie",
   "my_photos_are": "Moje fotografie sú",
-  "add_at_least_2_photos_to_continue": "Pridajte najmenej 2 fotografie, aby ste mohli pokračovať",
+  "add_at_least_2_photos_to_continue": "Pridajte najmenej 2 fotografie, aby ste pokračovali",
   "enable_location": "Povoliť umiestnenie",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Budete musieť povoliť, aby sa váš poradie umiestnili na používanie srdcových odkazov",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Budete musieť povoliť, aby sa váš poradie umiestnili na používanie srdcových odkazov",
   "allow_location": "Povoliť umiestnenie",
   "tell_me_more": "Povedz mi viac",
   "meet_people_nearby": "Zoznámte sa s ľuďmi v okolí",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Poloha sa použije na zobrazenie potenciálnych zápasov vo vašom okolí.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Chcete sa vyhnúť niekomu, koho poznáte na Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Je to ľahké - pri použití tejto funkcie zdieľajte kontakt svojho zariadenia so spoločnosťou Heartlink, aby ste si vybrali, komu sa chcete vyhnúť",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Chcete sa vyhnúť niekomu, koho poznáte na Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Je to ľahké - pri použití tejto funkcie zdieľajte kontakt svojho zariadenia so spoločnosťou Heartlink, aby ste si vybrali, komu sa chcete vyhnúť",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Uložíme váš blokovaný kontakt, aby sme vám zabránili v tom, aby ste sa navzájom videli, ak má váš kontakt účet s rovnakým podporom, aký poskytnete. Vo svojich nastaveniach môžete s nami prestať zdieľať.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Viac informácií nájdete tu, vrátane toho, ako vaše kontakty spracúvajú Heartlink",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Viac informácií nájdete tu, vrátane toho, ako vaše kontakty spracúvajú Heartlink",
   "share_{nameUser}_profile": "Zdieľať {NameUser} profil",
   "see_what_a_friend_thinks": "Zistite, čo si myslí priateľ",
   "report_{nameUser}": "Správa {NameUser}",
@@ -88,13 +88,13 @@
   "new_connections": "Nové spojenia",
   "messages": "Správy",
   "get_read_receipts": "Získajte čítanie potvrdení",
-  "level_up_everyone_action_you_take_on_heartlink": "Osoby na viac akcie, ktoré podniknete na Heartlink",
   "get_boost_profile": "Získajte profil zosilnenia",
   "get_supper_like": "Získajte večere ako",
   "silver_package": "Balenie striebra",
   "gold_package": "Balenie zlata",
+  "level_up_everyone_action_you_take_on_heartLink": "Osoby na viac akcie, ktoré podniknete na Heartlink",
   "get_read_receipt_package": "Získajte balík na prečítanie potvrdenia",
-  "stay_up_to_date": "Zostaňte v obraze",
+  "stay_up_to_date": "Zostaňte v aktuálnom stave",
   "know_when_your_messages_have_been_read_with_read_receipt": "Vedieť, kedy boli vaše správy čítané s potvrdením o čítaní",
   "most_popular": "NAJPOPULÁRNEJŠÍ",
   "read_receipt": "Potvrdenie",
@@ -138,7 +138,7 @@
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Tieto preferencie používame na nájdenie zápasov. Niektoré návrhy zápasu nemusia spadať do požadovaných parametrov",
   "control_who_you_see": "Ovládať, koho vidíš",
   "sliver_package": "Balenie",
-  "balance_recommendations": "Odporúčania vyváženia",
+  "balance_recommendations": "Rovnovážne odporúčania",
   "see_the_most_relevant_people_to_you_(default_settings)": "Pozrite sa na vás najrelevantnejších ľudí (predvolené nastavenia)",
   "recently_active": "Nedávno aktívny",
   "see_the_most_recently_active_people_first": "Pozrite sa najskôr najskôr aktívnych ľudí",
@@ -150,11 +150,11 @@
   "on_wi-fi_and_mobile_data": "Na Wi-Fi a mobilné údaje",
   "never_auto_play_videos": "Nikdy automaticky prehrávajte videá",
   "show_me_top_picks": "Ukáž mi najlepšie výbery",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Zapnutie vám umožní byť zobrazený ako uvedený vrchol pre ostatných používateľov vo vašom okolí",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Zapnutie vám umožní byť zobrazený ako uvedený najlepší výber pre ostatných používateľov vo vašom okolí",
   "activity_status": "Status aktivity",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Umožnite ostatným členom zistiť, či ste nedávno aktívni za posledných 24 hodín na Heartlink. Ak ste to vypli, nebudú môcť vidieť váš nedávno aktívny stav",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Umožnite ostatným členom zistiť, či ste nedávno aktívni za posledných 24 hodín na Heartlink. Ak ste to vypli, nebudú môcť vidieť váš nedávno aktívny stav",
   "app_settings": "Nastavenia aplikácie",
-  "show_distance_in": "Ukázať vzdialenosť v",
+  "show_distance_in": "Ukázať vzdialenosť",
   "language": "Jazyk",
   "chose_the_language_you_want_to_display": "Vyberte jazyk, ktorý chcete zobraziť",
   "dark_theme": "Téma",
@@ -220,7 +220,7 @@
   "add_company": "Pridať spoločnosť",
   "school": "Školský",
   "add_school": "Pridať školu",
-  "update_information_school": "Aktualizovať informačnú školu",
+  "update_information_school": "Aktualizujte informačnú školu",
   "school_name": "Meno školy",
   "living_in": "ŽIŤ V",
   "show_instagram_photos": "Zobraziť fotografie Instagramu",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Nezobrazujte moju vzdialenosť",
   "show_{nameScream}_on_my_profile": "Zobraziť {namescream} v mojom profile",
   "you_are_not_enter_the_phone_number": "Nezadajte telefónne číslo",
-  "Interests": "Záujmy",
+  "interests": "Záujmy",
   "my_gender": "moje pohlavie",
-  "my_orientation": "moja orientácia"
+  "my_orientation": "moja orientácia",
+  "version_x.y.z": "Verzia X.Y.Z",
+  "km": "km",
+  "mi": "mikrofón",
+  "live_at_{nameAddress}": "Live at {NameDress}",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {jednotka} ďalej",
+  "verified": "Overený",
+  "HeartLink": "Srdcový odkaz",
+  "don't_worry_-_we_won't_tell_this_person": "Nerobte si starosti - nebudeme to povedať",
+  "finding_people_near_you...": "Nájdenie ľudí vo vašom okolí ...",
+  "let's_be_friend": "Buďme priatelia",
+  "find_someone_that_wants_to_be_friends": "Nájdite niekoho, kto chce byť priateľmi",
+  "coffee_date": "Káva",
+  "find_someone_to_get_coffee_with": "Nájdite niekoho, kto by si dal kávu",
+  "looking_for_love": "Hľadanie lásky",
+  "blind_date": "Rande na slepo",
+  "open_hour_6pm_-_12pm_(local_time)": "Otvorená hodina 18:00 - 12:00 (miestny čas)",
+  "share_idea": "Zdieľať nápad",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Odpovedzte na ťažké otázky namiesto otvárania viet! Vaše odpovede sa zobrazia na rozhraní slepého dátumu a môžu sa použiť na spustenie konverzácie",
+  "get_ready": "Pripraviť sa",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Otázky a čas rozhovoru sú obmedzené, takže rýchlo premýšľajte a odpovedzte",
+  "compatible_to_view_profiles": "Kompatibilný pre prezeranie profilov",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Po skončení rozhovoru uvidíte profil osoby, ak sa obaja zhodujete",
+  "i_can't_date_someone_who:": "Nemôžem randiť s niekým, kto:",
+  "smoker": "Fajčiar",
+  "not_lovers": "Nie milenci",
+  "no_romance": "Žiadna romantika",
+  "love_novels": "Milostné romány",
+  "answer_question": "Odpoveď",
+  "optimise_pairing": "Optimalizovať párovanie",
+  "connecting": "Spojovací",
+  "the_best_dinner_is_at:": "Najlepšia večera je na:",
+  "on_the_tray_and_watch_tv": "Na podnose a sledujte televíziu",
+  "in_bed": "V posteli",
+  "verified_photo": "Overená fotografia",
+  "likes_you": "MÁ ŤA RÁD",
+  "prioritized_likes": "Uprednostňované hodnoty",
+  "everyone_you_like_will_see_you_soon": "Každý, koho máte radi, vás čoskoro uvidia",
+  "match_instantly_with_people_who_already_like_you": "Okamžite sa zhodujte s ľuďmi, ktorí už máte radi",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Vrátane najlepších tipov, neobmedzených rád, 1 bezplatné zvýšenie každý mesiac, 5 bezplatná večera ako každý týždeň, prevíjajte a pas",
+  "message_before_matching": "Správa pred porovnaním",
+  "99+_people_already_like_you": "99+ ľudí už máte radi",
+  "see_who_likes_you_and_match_instantly": "Zistite, kto vás má rád a okamžite sa zhodujte",
+  "buy_more_top_picks": "Kúpte si viac najlepších tipov",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Získajte úplný prístup k najlepším výberom, ako ste vy, posielajte neobmedzené hodnoty a ďalšie",
+  "see_as_many_likes_as_you_want": "Vidíte toľko rád, koľko chcete",
+  "1_free_boost_every_month": "1 bezplatná podpora každý mesiac",
+  "choose_who_see_you": "Vyberte si, kto ťa vidí",
+  "5_free_supper_likes_very_week": "5 bezplatných večere má rád veľmi týždeň",
+  "you're_3x_more_likely_to_get_a_match": "Je o 3x väčšia pravdepodobnosť, že získate zápas",
+  "online_now": "Online teraz",
+  "like": "PÁČI SA MI TO",
+  "nope": "NIE",
+  "supper_like": "Večera"
 }
