--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mitt nummer är",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "var vänlig och slå in ett giltigt telefonnummer",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "När du trycker på \"Fortsätt\" skickar HeartLink en text med verifieringskod. Meddelande och datahastigheter Mate gäller.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "När du trycker på \"Fortsätt\" skickar HeartLink en text med verifieringskod. Meddelande och datahastigheter Mat gäller.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Det verifierade telefonnumret kan användas för att logga in.",
   "learn_what_happens_when_your_number_changes.": "Lär dig vad som händer när ditt nummer ändras.",
   "continue": "Fortsätta",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Vad har du för mejladress?",
   "don't_lose_access_to_your_account,_verify_your_email": "Förlora inte åtkomsten till ditt konto, verifiera din e -post",
   "verify_instantly_by_connecting_your_google_account": "Verifiera direkt genom att ansluta ditt Google -konto",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Jag vill få nyheter, uppdateringar och erbjudanden från HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Jag vill få nyheter, uppdateringar och erbjudanden från HeartLink",
   "enter_email": "Skriv in e-mail",
-  "welcome_to_heartlink": "Välkommen till Heartlink",
+  "welcome_to_heartLink": "Välkommen till Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Följ våra regler för att ha roligare och bygga ett stort samhälle tillsammans",
   "be_yourself": "Var dig själv",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Se till att dina foton, ålder och bio är trogen vem du är",
@@ -43,7 +43,7 @@
   "apply": "Tillämpa",
   "my_name_is": "Mitt namn är",
   "your_name": "Ditt namn",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Så här kommer det att visas i HeartLink, och du kan inte ändra det",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Så här kommer det att visas i HeartLink, och du kan inte ändra det",
   "my_birthday_is": "Min födelsedag är",
   "your_age_will_be_public": "Din ålder kommer att vara offentlig",
   "i_am_a": "jag är en",
@@ -57,15 +57,15 @@
   "my_photos_are": "Mina bilder är",
   "add_at_least_2_photos_to_continue": "Lägg till minst 2 foton för att fortsätta",
   "enable_location": "Aktivera plats",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Du måste aktivera din platsorder för att använda HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Du måste aktivera din platsorder för att använda HeartLinks",
   "allow_location": "Tillåt plats",
   "tell_me_more": "Berätta mer",
   "meet_people_nearby": "Träffa människor i närheten",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Din plats kommer att användas för att visa potentiella matcher nära dig.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Vill du undvika någon du känner på Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det är enkelt - dela enhetens kontakt med HeartLink när du använder den här funktionen för att välja vem du vill undvika",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Vill du undvika någon du känner på Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det är enkelt - dela enhetens kontakt med HeartLink när du använder den här funktionen för att välja vem du vill undvika",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Vi lagrar din blockerade kontakt för att hindra dig från att träffa varandra om din kontakt har ett konto med samma information som du tillhandahåller. Du kan sluta dela med oss ​​i dina inställningar.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Lär dig mer här, inklusive hur hjärtlänk bearbetar dina kontakter",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Lär dig mer här, inklusive hur hjärtlänk bearbetar dina kontakter",
   "share_{nameUser}_profile": "Dela {nameUser} profil",
   "see_what_a_friend_thinks": "Se vad en vän tycker",
   "report_{nameUser}": "Rapport {nameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "Nya anslutningar",
   "messages": "Meddelanden",
   "get_read_receipts": "Få läsningskvitton",
-  "level_up_everyone_action_you_take_on_heartlink": "Nivå upp alla åtgärder du tar på sig Heartlink",
   "get_boost_profile": "Få boostprofil",
   "get_supper_like": "Få kvällsmat som",
   "silver_package": "Silverpaket",
   "gold_package": "Guldpaket",
+  "level_up_everyone_action_you_take_on_heartLink": "Nivå upp alla åtgärder du tar på sig Heartlink",
   "get_read_receipt_package": "Få läsningskvittonpaket",
   "stay_up_to_date": "Hålla sig uppdaterad",
   "know_when_your_messages_have_been_read_with_read_receipt": "Vet när dina meddelanden har lästs med läskvitto",
@@ -139,7 +139,7 @@
   "control_who_you_see": "Kontrollera vem du ser",
   "sliver_package": "Skivpaket",
   "balance_recommendations": "Balansrekommendationer",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevanta personerna till dig (standardinställningar)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Se de mest relevanta personerna för dig (standardinställningar)",
   "recently_active": "Nyligen aktiv",
   "see_the_most_recently_active_people_first": "Se de senast aktiva människorna först",
   "standard": "Standard",
@@ -150,13 +150,13 @@
   "on_wi-fi_and_mobile_data": "På Wi-Fi och mobildata",
   "never_auto_play_videos": "Aldrig automatiskt spela videor",
   "show_me_top_picks": "Visa mig toppval",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Att slå på detta gör att du kan visas som en framtida toppval till andra användare nära dig",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Att slå på detta gör att du kan visas som en presenterad toppval till andra användare nära dig",
   "activity_status": "Aktivitetsstatus",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Låt andra medlemmar se om du nyligen var aktiv under den senaste 24 timmar på Heartlink. Om du har stängt av detta kommer de inte att kunna se din nyligen aktiva status",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Låt andra medlemmar se om du nyligen var aktiv under den senaste 24 timmar på Heartlink. Om du har stängt av detta kommer de inte att kunna se din nyligen aktiva status",
   "app_settings": "App inställningar",
   "show_distance_in": "Visa avstånd",
   "language": "Språk",
-  "chose_the_language_you_want_to_display": "Välj det språk du vill visa",
+  "chose_the_language_you_want_to_display": "Valde det språk du vill visa",
   "dark_theme": "Mörkt tema",
   "choose_the_theme_you_like_most": "Välj det tema du gillar mest",
   "log_out": "LOGGA UT",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Visa inte mitt avstånd",
   "show_{nameScream}_on_my_profile": "Visa {namescream} på min profil",
   "you_are_not_enter_the_phone_number": "Du anger inte telefonnumret",
-  "Interests": "Intressen",
+  "interests": "Intressen",
   "my_gender": "mitt kön",
-  "my_orientation": "Min orientering"
+  "my_orientation": "Min orientering",
+  "version_x.y.z": "Version X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Live på {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {enhet} bort",
+  "verified": "Verifierad",
+  "HeartLink": "Hjärtlänk",
+  "don't_worry_-_we_won't_tell_this_person": "Oroa dig inte - vi kommer inte att berätta för den här personen",
+  "finding_people_near_you...": "Hitta människor nära dig ...",
+  "let's_be_friend": "Låt oss vara vän",
+  "find_someone_that_wants_to_be_friends": "Hitta någon som vill vara vänner",
+  "coffee_date": "Kaffedatum",
+  "find_someone_to_get_coffee_with": "Hitta någon att få kaffe med",
+  "looking_for_love": "Söker kärlek",
+  "blind_date": "Blind date",
+  "open_hour_6pm_-_12pm_(local_time)": "Öppen timme 18:00 - 12:00 (lokal tid)",
+  "share_idea": "Dela idé",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Svara på tuffa frågor istället för att öppna meningar! Dina svar kommer att visas på gränssnittet Blind Date och kan användas för att starta en konversation",
+  "get_ready": "Göra sig klar",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Frågor och chatttid är begränsade, så tänk och svara snabbt",
+  "compatible_to_view_profiles": "Kompatibelt för att se profiler",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "När chatten är över ser du personens profil om ni båda matchar",
+  "i_can't_date_someone_who:": "Jag kan inte träffa någon som:",
+  "smoker": "Rökare",
+  "not_lovers": "Inte älskare",
+  "no_romance": "Ingen romantik",
+  "love_novels": "Älskar romaner",
+  "answer_question": "Svar fråga",
+  "optimise_pairing": "Optimera parning",
+  "connecting": "Ansluter",
+  "the_best_dinner_is_at:": "Den bästa middagen är på:",
+  "on_the_tray_and_watch_tv": "På brickan och titta på TV",
+  "in_bed": "I sängen",
+  "verified_photo": "Verifierad foto",
+  "likes_you": "GILLAR DIG",
+  "prioritized_likes": "Prioriterade gillar",
+  "everyone_you_like_will_see_you_soon": "Alla du gillar kommer snart att se dig",
+  "match_instantly_with_people_who_already_like_you": "Matcha direkt med människor som redan gillar dig",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inklusive toppval, obegränsade likes, 1Free Boost varje månad, 5 gratis kvällsmat som varje vecka, spolning och pass",
+  "message_before_matching": "Meddelande före matchning",
+  "99+_people_already_like_you": "99+ människor gillar redan du",
+  "see_who_likes_you_and_match_instantly": "Se vem som gillar dig och matchar direkt",
+  "buy_more_top_picks": "Köp fler toppval",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Få full åtkomst till toppval, som du, skicka obegränsade likes & mer",
+  "see_as_many_likes_as_you_want": "Se så många gillar du vill",
+  "1_free_boost_every_month": "1 gratis boost varje månad",
+  "choose_who_see_you": "Välj vem som ser dig",
+  "5_free_supper_likes_very_week": "5 gratis kvällsmat gillar mycket vecka",
+  "you're_3x_more_likely_to_get_a_match": "Du är 3X mer benägna att få en match",
+  "online_now": "Online nu",
+  "like": "TYCKA OM",
+  "nope": "Napp",
+  "supper_like": "Kvällsmat"
 }
