--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -12,7 +12,7 @@
   "my_number_is": "หมายเลขของฉันคือ",
   "phone_number": "หมายเลขโทรศัพท์",
   "please_enter_a_valid_phone_number": "กรุณากรอกหมายเลขโทรศัพท์ที่ถูกต้อง",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "เมื่อคุณแตะ 'ดำเนินการต่อ' HeartLink จะส่งข้อความพร้อมรหัสการยืนยัน ใช้ข้อความและอัตราข้อมูล",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "เมื่อคุณแตะ 'ดำเนินการต่อ' HeartLink จะส่งข้อความพร้อมรหัสการยืนยัน ใช้ข้อความและอัตราข้อมูล",
   "the_verified_phone_number_can_be_used_to_log_in.": "หมายเลขโทรศัพท์ที่ผ่านการตรวจสอบสามารถใช้ในการเข้าสู่ระบบ",
   "learn_what_happens_when_your_number_changes.": "เรียนรู้ว่าจะเกิดอะไรขึ้นเมื่อหมายเลขของคุณเปลี่ยนไป",
   "continue": "ดำเนินการต่อ",
@@ -23,9 +23,9 @@
   "what's_your_email?": "อีเมลของคุณคืออะไร?",
   "don't_lose_access_to_your_account,_verify_your_email": "อย่าสูญเสียการเข้าถึงบัญชีของคุณยืนยันอีเมลของคุณ",
   "verify_instantly_by_connecting_your_google_account": "ตรวจสอบทันทีโดยเชื่อมต่อบัญชี Google ของคุณ",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "ฉันต้องการรับข่าวสารอัปเดตและข้อเสนอจาก HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "ฉันต้องการรับข่าวสารอัปเดตและข้อเสนอจาก HeartLink",
   "enter_email": "กรอกอีเมล",
-  "welcome_to_heartlink": "ยินดีต้อนรับสู่ Heartlink",
+  "welcome_to_heartLink": "ยินดีต้อนรับสู่ Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "โปรดปฏิบัติตามกฎของเราเพื่อให้มีความสนุกสนานมากขึ้นและสร้างชุมชนที่ยอดเยี่ยมด้วยกัน",
   "be_yourself": "เป็นตัวของตัวเอง",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "ตรวจสอบให้แน่ใจว่าภาพถ่ายอายุและชีวภาพของคุณเป็นจริงกับสิ่งที่คุณเป็น",
@@ -43,7 +43,7 @@
   "apply": "นำมาใช้",
   "my_name_is": "ชื่อของฉันคือ",
   "your_name": "ชื่อของคุณ",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "นี่คือวิธีที่จะปรากฏใน HeartLink และคุณจะไม่สามารถเปลี่ยนแปลงได้",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "นี่คือวิธีที่จะปรากฏใน HeartLink และคุณจะไม่สามารถเปลี่ยนแปลงได้",
   "my_birthday_is": "วันเกิดของฉันคือ",
   "your_age_will_be_public": "อายุของคุณจะเป็นสาธารณะ",
   "i_am_a": "ฉันคือ",
@@ -57,15 +57,15 @@
   "my_photos_are": "รูปของฉันคือ",
   "add_at_least_2_photos_to_continue": "เพิ่มอย่างน้อย 2 รูปเพื่อดำเนินการต่อ",
   "enable_location": "เปิดใช้งานตำแหน่ง",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "คุณจะต้องเปิดใช้งานคำสั่งซื้อตำแหน่งของคุณเพื่อใช้ heartlinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "คุณจะต้องเปิดใช้งานคำสั่งซื้อตำแหน่งของคุณเพื่อใช้ heartlinks",
   "allow_location": "อนุญาตให้สถานที่",
   "tell_me_more": "บอกรายละเอียดฉันเพิ่มเตืม",
   "meet_people_nearby": "พบปะผู้คนในบริเวณใกล้เคียง",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "ตำแหน่งของคุณจะถูกใช้เพื่อแสดงการแข่งขันที่อาจเกิดขึ้นใกล้คุณ",
-  "want_to_avoid_someone_you_know_on_heartlink?": "ต้องการหลีกเลี่ยงคนที่คุณรู้จักใน HeartLink หรือไม่?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "เป็นเรื่องง่าย - แชร์การติดต่ออุปกรณ์ของคุณกับ Heartlink เมื่อใช้คุณสมบัตินี้เพื่อเลือกคนที่คุณต้องการหลีกเลี่ยง",
+  "want_to_avoid_someone_you_know_on_heartLink?": "ต้องการหลีกเลี่ยงคนที่คุณรู้จักใน HeartLink หรือไม่?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "เป็นเรื่องง่าย - แชร์การติดต่ออุปกรณ์ของคุณกับ Heartlink เมื่อใช้คุณสมบัตินี้เพื่อเลือกคนที่คุณต้องการหลีกเลี่ยง",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "เราจะจัดเก็บผู้ติดต่อที่ถูกบล็อกของคุณเพื่อหยุดคุณไม่เห็นกันและกันหากผู้ติดต่อของคุณมีบัญชีที่มี infor เดียวกันที่คุณให้ไว้ คุณสามารถหยุดการแบ่งปันกับเราในการตั้งค่าของคุณ",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "เรียนรู้เพิ่มเติมที่นี่รวมถึงวิธีการดำเนินการที่ติดต่อของคุณ",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "เรียนรู้เพิ่มเติมที่นี่รวมถึงวิธีการดำเนินการที่ติดต่อของคุณ",
   "share_{nameUser}_profile": "แชร์โปรไฟล์ {nameUser}",
   "see_what_a_friend_thinks": "ดูว่าเพื่อนคิดอย่างไร",
   "report_{nameUser}": "รายงาน {nameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "การเชื่อมต่อใหม่",
   "messages": "ข้อความ",
   "get_read_receipts": "รับใบเสร็จอ่าน",
-  "level_up_everyone_action_you_take_on_heartlink": "ยกระดับการกระทำของทุกคนที่คุณทำใน HeartLink",
   "get_boost_profile": "รับโปรไฟล์ Boost",
   "get_supper_like": "รับอาหารมื้อเย็นเช่น",
   "silver_package": "แพ็คเกจเงิน",
   "gold_package": "แพ็คเกจทองคำ",
+  "level_up_everyone_action_you_take_on_heartLink": "ยกระดับการกระทำของทุกคนที่คุณทำใน HeartLink",
   "get_read_receipt_package": "รับแพ็คเกจใบเสร็จรับเงิน",
   "stay_up_to_date": "ติดตามข่าวสารล่าสุด",
   "know_when_your_messages_have_been_read_with_read_receipt": "รู้ว่าเมื่อไหร่ที่ข้อความของคุณได้รับการอ่านพร้อมใบเสร็จอ่านอ่าน",
@@ -141,9 +141,9 @@
   "balance_recommendations": "คำแนะนำสมดุล",
   "see_the_most_relevant_people_to_you_(default_settings)": "ดูคนที่เกี่ยวข้องมากที่สุดกับคุณ (การตั้งค่าเริ่มต้น)",
   "recently_active": "ใช้งานได้เมื่อเร็ว ๆ นี้",
-  "see_the_most_recently_active_people_first": "ดูคนที่กระตือรือร้นล่าสุดก่อน",
+  "see_the_most_recently_active_people_first": "ดูคนที่ใช้งานล่าสุดก่อน",
   "standard": "มาตรฐาน",
-  "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "จะแสดงต่อบุคคลบางประเภทสำหรับคำแนะนำส่วนบุคคลเท่านั้น",
+  "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "จะแสดงเฉพาะบุคคลบางประเภทสำหรับคำแนะนำส่วนบุคคล",
   "only_people_i've_liked": "มีเพียงคนที่ฉันชอบเท่านั้น",
   "only_people_you_have_liked_will_see_me": "มีเพียงคนที่คุณชอบเท่านั้นที่จะเห็นฉัน",
   "only_wi-fi_only": "Wi-Fi เท่านั้น",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "แสดงตัวเลือกยอดนิยม",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "การเปิดใช้งานนี้จะช่วยให้คุณแสดงเป็นตัวเลือกยอดนิยมสำหรับผู้ใช้รายอื่นที่อยู่ใกล้คุณ",
   "activity_status": "สถานะกิจกรรม",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "อนุญาตให้สมาชิกคนอื่น ๆ ดูว่าคุณเพิ่งเปิดใช้งานภายใน 24 ชั่วโมงที่ผ่านมาบน Heartlink หรือไม่ หากคุณปิดสิ่งนี้พวกเขาจะไม่สามารถเห็นสถานะที่ใช้งานได้เมื่อเร็ว ๆ นี้",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "อนุญาตให้สมาชิกคนอื่น ๆ ดูว่าคุณเพิ่งเปิดใช้งานภายใน 24 ชั่วโมงที่ผ่านมาบน Heartlink หรือไม่ หากคุณปิดสิ่งนี้พวกเขาจะไม่สามารถเห็นสถานะที่ใช้งานได้เมื่อเร็ว ๆ นี้",
   "app_settings": "การตั้งค่าแอป",
   "show_distance_in": "แสดงระยะทางใน",
   "language": "ภาษา",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "อย่าแสดงระยะทางของฉัน",
   "show_{nameScream}_on_my_profile": "แสดง {namescream} ในโปรไฟล์ของฉัน",
   "you_are_not_enter_the_phone_number": "คุณไม่ได้ป้อนหมายเลขโทรศัพท์",
-  "Interests": "ความสนใจ",
+  "interests": "ความสนใจ",
   "my_gender": "เพศของฉัน",
-  "my_orientation": "การปฐมนิเทศของฉัน"
+  "my_orientation": "การปฐมนิเทศของฉัน",
+  "version_x.y.z": "เวอร์ชัน x.y.z",
+  "km": "กม.",
+  "mi": "MI",
+  "live_at_{nameAddress}": "อยู่ที่ {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {หน่วย} ออกไป",
+  "verified": "ตรวจสอบแล้ว",
+  "HeartLink": "heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "ไม่ต้องกังวล - เราจะไม่บอกคนนี้",
+  "finding_people_near_you...": "หาคนที่อยู่ใกล้คุณ ...",
+  "let's_be_friend": "มาเป็นเพื่อนกันเถอะ",
+  "find_someone_that_wants_to_be_friends": "หาคนที่อยากเป็นเพื่อน",
+  "coffee_date": "วันที่กาแฟ",
+  "find_someone_to_get_coffee_with": "หาคนที่จะดื่มกาแฟด้วย",
+  "looking_for_love": "กำลังมองหาความรัก",
+  "blind_date": "นัดบอด",
+  "open_hour_6pm_-_12pm_(local_time)": "เปิดชั่วโมงเวลา 18.00 น. - 12.00 น. (เวลาท้องถิ่น)",
+  "share_idea": "แบ่งปันความคิด",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "ตอบคำถามที่ยากลำบากแทนการเปิดประโยค! คำตอบของคุณจะปรากฏในอินเทอร์เฟซวันที่ตาบอดและสามารถใช้เพื่อเริ่มการสนทนา",
+  "get_ready": "เตรียมพร้อม",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "คำถามและเวลาแชทมี จำกัด ดังนั้นคิดและตอบอย่างรวดเร็ว",
+  "compatible_to_view_profiles": "เข้ากันได้เพื่อดูโปรไฟล์",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "หลังจากการแชทสิ้นสุดลงคุณจะเห็นโปรไฟล์ของบุคคลนั้นหากคุณทั้งคู่ตรงกัน",
+  "i_can't_date_someone_who:": "ฉันไม่สามารถเดทกับคนที่:",
+  "smoker": "ผู้สูบบุหรี่",
+  "not_lovers": "ไม่ใช่คนรัก",
+  "no_romance": "ไม่มีความโรแมนติก",
+  "love_novels": "นวนิยายรัก",
+  "answer_question": "ตอบคำถาม",
+  "optimise_pairing": "เพิ่มประสิทธิภาพการจับคู่",
+  "connecting": "การเชื่อมต่อ",
+  "the_best_dinner_is_at:": "อาหารเย็นที่ดีที่สุดอยู่ที่:",
+  "on_the_tray_and_watch_tv": "บนถาดและดูทีวี",
+  "in_bed": "นอนอยู่บนเตียง",
+  "verified_photo": "ภาพถ่ายที่ผ่านการตรวจสอบแล้ว",
+  "likes_you": "ชอบคุณ",
+  "prioritized_likes": "ไลค์ลำดับความสำคัญ",
+  "everyone_you_like_will_see_you_soon": "ทุกคนที่คุณชอบจะพบคุณเร็ว ๆ นี้",
+  "match_instantly_with_people_who_already_like_you": "จับคู่กับคนที่ชอบคุณอยู่แล้วทันที",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "รวมถึงตัวเลือกด้านบน, ไลค์ไม่ จำกัด , 1 ฟรีเพิ่มทุกเดือน, อาหารมื้อเย็นฟรี 5 รายการเช่นทุกสัปดาห์, ย้อนกลับและหนังสือเดินทาง",
+  "message_before_matching": "ข้อความก่อนจับคู่",
+  "99+_people_already_like_you": "99+ คนชอบคุณแล้ว",
+  "see_who_likes_you_and_match_instantly": "ดูว่าใครชอบคุณและจับคู่ทันที",
+  "buy_more_top_picks": "ซื้อตัวเลือกยอดนิยมเพิ่มเติม",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "รับการเข้าถึงตัวเลือกยอดนิยมอย่างคุณส่งไลค์ไม่ จำกัด และอื่น ๆ",
+  "see_as_many_likes_as_you_want": "เห็นชอบมากเท่าที่คุณต้องการ",
+  "1_free_boost_every_month": "1 เพิ่มฟรีทุกเดือน",
+  "choose_who_see_you": "เลือกใครเห็นคุณ",
+  "5_free_supper_likes_very_week": "5 อาหารมื้อเย็นฟรี 5 สัปดาห์",
+  "you're_3x_more_likely_to_get_a_match": "คุณมีแนวโน้มที่จะได้รับการจับคู่มากกว่า 3x",
+  "online_now": "ออนไลน์ตอนนี้",
+  "like": "ชอบ",
+  "nope": "ไม่",
+  "supper_like": "อาหารมื้อเย็นชอบ"
 }
