--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -12,7 +12,7 @@
   "my_number_is": "Benim numaram",
   "phone_number": "Telefon numarası",
   "please_enter_a_valid_phone_number": "Geçerli bir telefon numarası giriniz",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "'Devam'a dokunduğunuzda, HeartLink doğrulama kodu içeren bir metin gönderir. Mesaj ve veri hızları eş uygulanır.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "'Devam'a dokunduğunuzda, HeartLink doğrulama kodu içeren bir metin gönderir. Mesaj ve veri hızları eş uygulanır.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Doğrulanmış telefon numarası giriş yapmak için kullanılabilir.",
   "learn_what_happens_when_your_number_changes.": "Numaranız değiştiğinde ne olacağını öğrenin.",
   "continue": "Devam etmek",
@@ -23,9 +23,9 @@
   "what's_your_email?": "E -postanız nedir?",
   "don't_lose_access_to_your_account,_verify_your_email": "Hesabınıza erişimi kaybetmeyin, e -postanızı doğrulayın",
   "verify_instantly_by_connecting_your_google_account": "Google hesabınızı bağlayarak anında doğrulayın",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "HeartLink'ten haber, güncelleme ve teklif almak istiyorum",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "HeartLink'ten haber, güncelleme ve teklif almak istiyorum",
   "enter_email": "E -posta girin",
-  "welcome_to_heartlink": "HeartLink'e Hoş Geldiniz",
+  "welcome_to_heartLink": "HeartLink'e Hoş Geldiniz",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Daha fazla eğlenmek ve birlikte harika bir topluluk oluşturmak için lütfen kurallarımıza uyun",
   "be_yourself": "Kendin ol",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Fotoğraflarınızın, yaş ve biyografilerinizin kim olduğunuza göre emin olun",
@@ -43,7 +43,7 @@
   "apply": "Uygula",
   "my_name_is": "Benim ismim",
   "your_name": "Adınız",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "HeartLink'te böyle görünecek ve onu değiştiremeyeceksiniz",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "HeartLink'te böyle görünecek ve onu değiştiremeyeceksiniz",
   "my_birthday_is": "Benim doğum günüm",
   "your_age_will_be_public": "Yaşınız halka açık olacak",
   "i_am_a": "Ben bir",
@@ -57,15 +57,15 @@
   "my_photos_are": "Fotoğraflarım",
   "add_at_least_2_photos_to_continue": "Devam etmek için en az 2 fotoğraf ekleyin",
   "enable_location": "Yeri etkinleştir",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "HeartLinks'i kullanmak için konum siparişinizin etkinleştirmeniz gerekecek",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "HeartLinks'i kullanmak için konum siparişinizin etkinleştirmeniz gerekecek",
   "allow_location": "Konuma izin ver",
   "tell_me_more": "Bana daha fazlasını anlat",
   "meet_people_nearby": "Yakındaki insanlarla tanışın",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Konumunuz, yakınınızdaki potansiyel maçları göstermek için kullanılacaktır.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "HeartLink'te tanıdığınız birinden kaçınmak ister misiniz?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Kolaydır - Kaçınmak istediğiniz kimi seçmek için bu özelliği kullanırken cihazınızın HeartLink ile iletişimini paylaşın",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "İletişiminizin sağladığınız Infor ile bir hesabı varsa, birbirinizi görmenizi engellemek için engellenen kişinizi saklayacağız. Ayarlarınızda bizimle paylaşmayı bırakabilirsiniz.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "HeartLink'in kişilerinizi nasıl işlediğini de içeren daha fazla bilgi edinin",
+  "want_to_avoid_someone_you_know_on_heartLink?": "HeartLink'te tanıdığınız birinden kaçınmak ister misiniz?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Kolaydır - Kaçınmak istediğiniz kimi seçmek için bu özelliği kullanırken cihazınızın HeartLink ile iletişimini paylaşın",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "İletişiminizin sağladığınız Infor ile bir hesabı varsa, birbirinizi görmenizi engellemek için tıkanmış kişinizi saklayacağız. Ayarlarınızda bizimle paylaşmayı bırakabilirsiniz.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "HeartLink'in kişilerinizi nasıl işlediğini de içeren daha fazla bilgi edinin",
   "share_{nameUser}_profile": "Paylaş {NameUser} Profili",
   "see_what_a_friend_thinks": "Bir arkadaşın ne düşündüğünü gör",
   "report_{nameUser}": "Rapor {NameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "Yeni Bağlantılar",
   "messages": "Mesaj",
   "get_read_receipts": "Okuma Makbuzları Alın",
-  "level_up_everyone_action_you_take_on_heartlink": "HeartLink'te aldığınız herkesi dengeleyin",
   "get_boost_profile": "Boost Profili Alın",
   "get_supper_like": "Akşam yemeği gibi",
   "silver_package": "Gümüş paket",
   "gold_package": "Altın paketi",
+  "level_up_everyone_action_you_take_on_heartLink": "HeartLink'te aldığınız herkesi dengeleyin",
   "get_read_receipt_package": "Okuma Makbuzu Paketi Alın",
   "stay_up_to_date": "Güncel kal",
   "know_when_your_messages_have_been_read_with_read_receipt": "Mesajlarınızın okunan makbuzla ne zaman okunduğunu bilin",
@@ -105,7 +105,7 @@
   "boost_my_profile": "Profilimi artır",
   "get_a_gold_package": "Altın Paketi Alın",
   "5_free_supper_like_weekly": "Haftalık gibi 5 ücretsiz akşam yemeği",
-  "get_supper_likes_package": "Akşam Yemeği Paketi Al",
+  "get_supper_likes_package": "Akşam Yemeği Paketi Sever",
   "stand_out_with_super_like": "Süper gibi öne çık",
   "3x_chance_to_get_a_match": "Bir maç alma şansı 3x",
   "get_supper_likes": "Akşam Yemeği Sevin",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Bana en iyi seçimleri göster",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Bunu açmak, yakınınızdaki diğer kullanıcılara öne çıkan en iyi seçim olarak gösterilmenizi sağlayacaktır.",
   "activity_status": "Etkinlik Durumu",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Diğer üyelerin son 24 saat içinde HeartLink'te yakın zamanda aktif olup olmadığınızı görmelerine izin verin. Bunu kapattıysanız, yakın zamanda aktif durumunuzu göremezler.",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Diğer üyelerin son 24 saat içinde HeartLink'te yakın zamanda aktif olup olmadığınızı görmelerine izin verin. Bunu kapattıysanız, yakın zamanda aktif durumunuzu göremezler.",
   "app_settings": "Uygulama ayarları",
   "show_distance_in": "İçindeki mesafeyi göster",
   "language": "Dil",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Mesafemi gösterme",
   "show_{nameScream}_on_my_profile": "Profilimde {NamesCream} göster",
   "you_are_not_enter_the_phone_number": "Telefon numarasını girmiyorsun",
-  "Interests": "İlgi alanları",
+  "interests": "İlgi alanları",
   "my_gender": "Cinsiyetim",
-  "my_orientation": "benim yönelim"
+  "my_orientation": "benim yönelim",
+  "version_x.y.z": "Sürüm X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "{Nameaddress}",
+  "{numberKilometers}_{unit}_away": "{NumberKilometers} {Unit} Away",
+  "verified": "Doğrulanmış",
+  "HeartLink": "Heartlink",
+  "don't_worry_-_we_won't_tell_this_person": "Endişelenme - bu kişiye söylemeyeceğiz",
+  "finding_people_near_you...": "Yakınınızdaki insanları bulmak ...",
+  "let's_be_friend": "Arkadaş olalım",
+  "find_someone_that_wants_to_be_friends": "Arkadaş olmak isteyen birini bul",
+  "coffee_date": "Kahve tarihi",
+  "find_someone_to_get_coffee_with": "Kahve alacak birini bul",
+  "looking_for_love": "Aşkı aramak",
+  "blind_date": "Kör Randevu",
+  "open_hour_6pm_-_12pm_(local_time)": "Açık saat 18:00 - 12:00 (yerel saat)",
+  "share_idea": "Paylaş fikri",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Cümleleri açmak yerine zor soruları cevaplayın! Yanıtlarınız kör tarih arayüzünde görünecek ve bir konuşma başlatmak için kullanılabilir",
+  "get_ready": "Hazırlanmak",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Sorular ve sohbet zamanı sınırlıdır, bu yüzden hızlı bir şekilde düşünün ve cevaplayın",
+  "compatible_to_view_profiles": "Profilleri görüntülemek için uyumlu",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Sohbet bittikten sonra, ikiniz de eşleşirseniz kişinin profilini göreceksiniz",
+  "i_can't_date_someone_who:": "Biriyle çıkamam:",
+  "smoker": "Sigara içen kimse",
+  "not_lovers": "Sevenler değil",
+  "no_romance": "Romantizm yok",
+  "love_novels": "Aşk romanları",
+  "answer_question": "Soruyu cevapla",
+  "optimise_pairing": "Eşleştirmeyi optimize et",
+  "connecting": "Bağlanıyor",
+  "the_best_dinner_is_at:": "En iyi akşam yemeği:",
+  "on_the_tray_and_watch_tv": "Tepside ve TV izle",
+  "in_bed": "Yatakta",
+  "verified_photo": "Doğrulanmış fotoğraf",
+  "likes_you": "SENİN GİBİ",
+  "prioritized_likes": "Öncelikli beğeniler",
+  "everyone_you_like_will_see_you_soon": "Sevdiğin herkes yakında görüşecek",
+  "match_instantly_with_people_who_already_like_you": "Zaten senden hoşlanan insanlarla anında eşleştir",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "En iyi seçimler, sınırsız beğeniler, her ay 1Free Boost, her hafta gibi 5 ücretsiz akşam yemeği, geri sarma ve pasaport dahil",
+  "message_before_matching": "Eşleşmeden önce mesaj",
+  "99+_people_already_like_you": "99+ kişi zaten senden hoşlanıyor",
+  "see_who_likes_you_and_match_instantly": "Seni kimin sevdiğini görün ve anında eşleştirin",
+  "buy_more_top_picks": "Daha Fazla Üst Seçim Satın Alın",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Sizin gibi en iyi seçimlere tam erişim sağlayın, Sınırsız beğeni gönderin ve daha fazlası",
+  "see_as_many_likes_as_you_want": "İstediğiniz kadar çok beğeni görün",
+  "1_free_boost_every_month": "Her ay 1 ücretsiz destek",
+  "choose_who_see_you": "Seni Kimin Gördüğünü Seçin",
+  "5_free_supper_likes_very_week": "5 Ücretsiz akşam yemeği çok haftayı seviyor",
+  "you're_3x_more_likely_to_get_a_match": "Bir maç alma olasılığınız 3 kat daha fazladır",
+  "online_now": "Şu an çevrim içi",
+  "like": "BEĞENMEK",
+  "nope": "HAYIR",
+  "supper_like": "Akşam Yemeği"
 }
