--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -12,7 +12,7 @@
   "my_number_is": "Мій номер",
   "phone_number": "Номер телефону",
   "please_enter_a_valid_phone_number": "Будь ласка введіть дійсний номер телефону",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Коли ви натискаєте \"продовження\", Heartlink надішле текст із кодом підтвердження. Застосовується повідомлення про повідомлення та швидкість передачі даних.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Коли ви натискаєте \"продовження\", Heartlink надішле текст із кодом підтвердження. Застосовується повідомлення та швидкість передачі даних.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Перевірений номер телефону можна використовувати для входу.",
   "learn_what_happens_when_your_number_changes.": "Дізнайтеся, що відбувається, коли змінюється ваш номер.",
   "continue": "Продовжувати",
@@ -23,9 +23,9 @@
   "what's_your_email?": "Який ваш електронний лист?",
   "don't_lose_access_to_your_account,_verify_your_email": "Не втрачайте доступ до свого облікового запису, перевірте свою електронну пошту",
   "verify_instantly_by_connecting_your_google_account": "Перевірте миттєво, підключивши свій обліковий запис Google",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Я хочу отримувати новини, оновлення та пропозиції від Heartlink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Я хочу отримувати новини, оновлення та пропозиції від Heartlink",
   "enter_email": "Введіть електронну пошту",
-  "welcome_to_heartlink": "Ласкаво просимо до Heartlink",
+  "welcome_to_heartLink": "Ласкаво просимо до Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Будь ласка, дотримуйтесь наших правил, щоб розважитися та побудувати чудову спільноту разом",
   "be_yourself": "Будь собою",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Переконайтеся, що ваші фотографії, вік та біографії вірні, хто ви є",
@@ -43,7 +43,7 @@
   "apply": "Застосовувати",
   "my_name_is": "Мене звати",
   "your_name": "Твоє ім'я",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Ось як воно з’явиться в Heartlink, і ви не зможете його змінити",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Ось як воно з’явиться в Heartlink, і ви не зможете його змінити",
   "my_birthday_is": "Мій день народження",
   "your_age_will_be_public": "Ваш вік буде публічним",
   "i_am_a": "я є",
@@ -57,15 +57,15 @@
   "my_photos_are": "Мої фотографії є",
   "add_at_least_2_photos_to_continue": "Додайте щонайменше 2 фотографії для продовження",
   "enable_location": "Увімкнути місце розташування",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Вам потрібно буде ввімкнути ваше місцезнаходження, щоб використовувати серцеві посилання",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Вам потрібно буде ввімкнути ваше місцезнаходження, щоб використовувати серцеві посилання",
   "allow_location": "Дозволити місце розташування",
   "tell_me_more": "Розкажи мені більше",
   "meet_people_nearby": "Зустріньте людей поблизу",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Ви місце розташування будуть використані для показу потенційних матчів поблизу вас.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Хочете уникнути когось, кого ви знаєте на Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Це легко - поділіться контактом свого пристрою з серцевою лінією при використанні цієї функції, щоб вибрати кого ви хочете уникнути",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Ми зберігаємо ваш заблокований контакт, щоб не допустити бачити один одного, якщо ваш контакт має обліковий запис із тією ж інформацією, яку ви надаєте. Ви можете перестати ділитися з нами у своїх налаштуваннях.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Дізнайтеся більше тут, включаючи те, як Heartlink обробляє ваші контакти",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Хочете уникнути когось, кого ви знаєте на Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Це легко - поділіться контактом свого пристрою з серцевою лінією при використанні цієї функції, щоб вибрати кого ви хочете уникнути",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Ми зберігаємо ваш заблокований контакт, щоб заважати бачити один одного, якщо у вашому контакті є рахунок з тією ж інформацією, яку ви надаєте. Ви можете перестати ділитися з нами у своїх налаштуваннях.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Дізнайтеся більше тут, включаючи те, як Heartlink обробляє ваші контакти",
   "share_{nameUser}_profile": "Поділитися {nameUser}",
   "see_what_a_friend_thinks": "Подивіться, що думає друг",
   "report_{nameUser}": "Звіт {nameUser}",
@@ -88,11 +88,11 @@
   "new_connections": "Нові зв’язки",
   "messages": "Повідомлення",
   "get_read_receipts": "Читайте квитанції",
-  "level_up_everyone_action_you_take_on_heartlink": "Вирівнюйте всі дії, які ви берете на серце",
-  "get_boost_profile": "Отримайте профіль підсилення",
+  "get_boost_profile": "Отримайте профіль Boost",
   "get_supper_like": "Отримайте вечерю, як",
   "silver_package": "Срібний пакет",
   "gold_package": "Золотий пакет",
+  "level_up_everyone_action_you_take_on_heartLink": "Вирівнюйте всі дії, які ви берете на серце",
   "get_read_receipt_package": "Отримайте пакет квитанції про читання",
   "stay_up_to_date": "Будьте в курсі",
   "know_when_your_messages_have_been_read_with_read_receipt": "Знайте, коли ваші повідомлення були прочитані з читанням квитанції",
@@ -118,7 +118,7 @@
   "only_be_shown_to_people_you've_liked": "Показати лише людям, яким вам сподобалися",
   "like_profile_around_the_world": "Як профіль у всьому світі",
   "passport_to_anywhere": "Паспорт до будь -якого місця",
-  "unlimited_rewinds": "Необмежена кількість перемотування",
+  "unlimited_rewinds": "Необмежені перемотування",
   "go_back_and_try_again": "Поверніться назад і спробуйте ще раз",
   "turn_off_ads": "Вимкніть рекламу",
   "have_fun_without_interruptions": "Веселіться без перебоїв",
@@ -150,9 +150,9 @@
   "on_wi-fi_and_mobile_data": "На Wi-Fi та мобільних даних",
   "never_auto_play_videos": "Ніколи автоматично відтворювати відео",
   "show_me_top_picks": "Покажіть мені найкращі вибори",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Увімкнути це дозволить вам показати як популярний верхній вибір для інших користувачів поблизу вас",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Увімкнення цього дозволить вам показати як популярний верхній вибір для інших користувачів поблизу вас",
   "activity_status": "Статус активності",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Дозвольте іншим членам побачити, чи нещодавно ви були активними протягом останніх 24 годин на Heartlink. Якщо ви вимкнули це, вони не зможуть побачити ваш нещодавно активний статус",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Дозвольте іншим членам побачити, чи нещодавно ви були активними протягом останніх 24 годин на Heartlink. Якщо ви вимкнули це, вони не зможуть побачити ваш нещодавно активний статус",
   "app_settings": "Налаштування додатків",
   "show_distance_in": "Показувати відстань у",
   "language": "Мова",
@@ -167,7 +167,7 @@
   "upload_loop": "Завантажити цикл",
   "capture_from_camera": "Захоплення з камери",
   "photo": "Фото",
-  "done": "Виконаний",
+  "done": "Зроблений",
   "about_me": "ПРО МЕНЕ",
   "about_me_-_maximize_500_words": "Про мене - максимізуйте 500 слів",
   "interest": "Інтерес",
@@ -209,7 +209,7 @@
   "life_style": "Стиль життя",
   "pets_free": "Домашні тварини безкоштовно",
   "drink_beer": "Пити пиво",
-  "are_you_a_smoker": "Ти курець",
+  "are_you_a_smoker": "Ви курець",
   "practice": "Практикувати",
   "diet": "Дієта",
   "social_media": "Соц.медіа",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Не показуйте мою відстань",
   "show_{nameScream}_on_my_profile": "Показати {samescream} у моєму профілі",
   "you_are_not_enter_the_phone_number": "Ви не вводите номер телефону",
-  "Interests": "Інтереси",
+  "interests": "Інтереси",
   "my_gender": "Моя стать",
-  "my_orientation": "Моя орієнтація"
+  "my_orientation": "Моя орієнтація",
+  "version_x.y.z": "Версія X.Y.Z",
+  "km": "км",
+  "mi": "мимо",
+  "live_at_{nameAddress}": "Жити на {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {одиниця}",
+  "verified": "Перевірений",
+  "HeartLink": "Серцева лінія",
+  "don't_worry_-_we_won't_tell_this_person": "Не хвилюйся - ми не скажемо цій людині",
+  "finding_people_near_you...": "Пошук людей поблизу вас ...",
+  "let's_be_friend": "Будьмо другом",
+  "find_someone_that_wants_to_be_friends": "Знайдіть когось, хто хоче бути друзями",
+  "coffee_date": "Дата кави",
+  "find_someone_to_get_coffee_with": "Знайдіть когось, щоб отримати каву",
+  "looking_for_love": "Шукаю кохання",
+  "blind_date": "Побачення всліпу",
+  "open_hour_6pm_-_12pm_(local_time)": "Година відкритості 18:00 - 12:00 (місцевий час)",
+  "share_idea": "Поділіться ідеєю",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Дайте відповіді на жорсткі запитання замість відкриття речення! Ваші відповіді з’являться на інтерфейсі побачень сліпи і можуть бути використані для початку розмови",
+  "get_ready": "Готуйся",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Питання та час чату обмежені, тому подумайте та відповідайте швидко",
+  "compatible_to_view_profiles": "Сумісний для перегляду профілів",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Після закінчення чату ви побачите профіль людини, якщо ви обоє відповідаєте",
+  "i_can't_date_someone_who:": "Я не можу побачити когось, хто:",
+  "smoker": "Курець",
+  "not_lovers": "Не закохані",
+  "no_romance": "Немає романтики",
+  "love_novels": "Любіть романи",
+  "answer_question": "Відповісти на питання",
+  "optimise_pairing": "Оптимізувати спарювання",
+  "connecting": "З'єднання",
+  "the_best_dinner_is_at:": "Найкраща вечеря - це:",
+  "on_the_tray_and_watch_tv": "На лотку і дивитися телевізор",
+  "in_bed": "В ліжку",
+  "verified_photo": "Перевірене фото",
+  "likes_you": "Вам подобається",
+  "prioritized_likes": "Пріоритетні лайки",
+  "everyone_you_like_will_see_you_soon": "Кожен, що вам подобається, побачиться найближчим часом",
+  "match_instantly_with_people_who_already_like_you": "Миттєво відповідати людям, які вже подобаються ти",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Включаючи топ -вибори, необмежені лайки, 1 -фіре збільшення щомісяця, 5 безкоштовних вечері, як щотижня, перемотування та паспорт",
+  "message_before_matching": "Повідомлення перед відповідністю",
+  "99+_people_already_like_you": "99+ людей вже подобаються",
+  "see_who_likes_you_and_match_instantly": "Подивіться, хто вам подобається і миттєво відповідає",
+  "buy_more_top_picks": "Купуйте більше найкращих виборів",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Отримайте повний доступ до топ -виборів, як ви, надішліть необмежену кількість лайків та багато іншого",
+  "see_as_many_likes_as_you_want": "Побачте якомога більше лайків",
+  "1_free_boost_every_month": "1 безкоштовний приріст щомісяця",
+  "choose_who_see_you": "Виберіть, хто бачиш вас",
+  "5_free_supper_likes_very_week": "5 безкоштовна вечеря любить дуже тиждень",
+  "you're_3x_more_likely_to_get_a_match": "Ви 3 рази більше шансів отримати матч",
+  "online_now": "В Інтернеті зараз",
+  "like": "ЛЮБЛЮ",
+  "nope": "Нія",
+  "supper_like": "Вечеря як"
 }
