--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -138,7 +138,7 @@
   "about_me": "VỀ TÔI",
   "about_me_-_maximize_500_words": "Về tôi - tối đa hóa 500 từ",
   "interest": "QUAN TÂM",
-  "5_out_of_5": "5 trên 5",
+  "out_of_5": "5 trên 5",
   "search_interest": "Tìm kiếm lãi",
   "dating_purposes": "Mục đích hẹn hò",
   "i'm_looking_for": "Tôi đang tìm kiếm",
