--- a/src/locales/zh-rCN.json
+++ b/src/locales/zh-rCN.json
@@ -12,7 +12,7 @@
   "my_number_is": "我的电话号码是",
   "phone_number": "电话号码",
   "please_enter_a_valid_phone_number": "请输入一个有效的电话号码",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "当您点击“继续”时，HeartLink将发送带有验证代码的文本。消息和数据率伴侣适用。",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "当您点击“继续”时，HeartLink将发送带有验证代码的文本。消息和数据率伴侣适用。",
   "the_verified_phone_number_can_be_used_to_log_in.": "经过验证的电话号码可用于登录。",
   "learn_what_happens_when_your_number_changes.": "了解当您的数字更改时会发生什么。",
   "continue": "继续",
@@ -23,12 +23,12 @@
   "what's_your_email?": "您的电子邮件是什么？",
   "don't_lose_access_to_your_account,_verify_your_email": "不要失去访问您的帐户，请验证您的电子邮件",
   "verify_instantly_by_connecting_your_google_account": "通过连接Google帐户立即验证",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "我想收到新闻，更新和heartlink的报价",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "我想从Heartlink那里收到新闻，更新和报价",
   "enter_email": "输入电子邮件",
-  "welcome_to_heartlink": "欢迎来到Heartlink",
+  "welcome_to_heartLink": "欢迎来到Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "请遵守我们的规则，以获得更多乐趣，并共同建立一个伟大的社区",
   "be_yourself": "做你自己",
-  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "确保您的照片，年龄和生物忠于您的身份",
+  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "确保您的照片，年龄和生物对自己是谁",
   "stay_safe": "注意安全",
   "don't_be_too_quick_to_give_out_personal_information.": "不要太快地提供个人信息。",
   "date_safety_guidelines": "日期安全指南",
@@ -43,7 +43,7 @@
   "apply": "申请",
   "my_name_is": "我的名字是",
   "your_name": "你的名字",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "这就是它会出现在心脏链接中的方式，您将无法更改它",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "这就是它会出现在心脏链接中的方式，您将无法更改它",
   "my_birthday_is": "我的生日是",
   "your_age_will_be_public": "您的年龄将是公开的",
   "i_am_a": "我是一个",
@@ -55,17 +55,17 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "通过将其添加到您的个人资料中，让所有人都知道您对您的热情",
   "show_me_gender": "告诉我性别",
   "my_photos_are": "我的照片是",
-  "add_at_least_2_photos_to_continue": "添加至少2张照片以继续",
+  "add_at_least_2_photos_to_continue": "至少添加2张照片继续",
   "enable_location": "启用位置",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "您将需要启用您的位置订单才能使用HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "您将需要启用您的位置订单才能使用HeartLinks",
   "allow_location": "允许位置",
   "tell_me_more": "告诉我更多",
   "meet_people_nearby": "认识附近的人",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "您的位置将用于显示您附近的潜在比赛。",
-  "want_to_avoid_someone_you_know_on_heartlink?": "想避免在心链接上认识的人吗？",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "这很容易 - 在使用此功能选择您想避免的人时，请分享设备与HeartLink的联系",
+  "want_to_avoid_someone_you_know_on_heartLink?": "想避免在心链接上认识的人吗？",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "这很容易 - 在使用此功能选择您想要避免的人时，请分享设备与HeartLink的联系",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "如果您的联系人的帐户与您提供的相同的Infor，我们将存储您的封锁联系人，以阻止您彼此见面。您可以在您的设置中停止与我们共享。",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "在这里了解更多信息，包括如何进行心脏链接处理您的联系人",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "在这里了解更多信息，包括如何进行心脏链接处理您的联系人",
   "share_{nameUser}_profile": "共享{nameuser}个人资料",
   "see_what_a_friend_thinks": "看看朋友的想法",
   "report_{nameUser}": "报告{nameuser}",
@@ -88,11 +88,11 @@
   "new_connections": "新连接",
   "messages": "消息",
   "get_read_receipts": "获取阅读收据",
-  "level_up_everyone_action_you_take_on_heartlink": "升级每个人的动作您采取心动链接",
   "get_boost_profile": "获取Boost配置文件",
   "get_supper_like": "吃晚饭",
   "silver_package": "银包",
   "gold_package": "黄金包",
+  "level_up_everyone_action_you_take_on_heartLink": "升级每个人的动作您采取心动链接",
   "get_read_receipt_package": "获取读取收据包",
   "stay_up_to_date": "保持最新",
   "know_when_your_messages_have_been_read_with_read_receipt": "知道何时阅读您的邮件，然后阅读收据",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "告诉我最佳选择",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "打开此操作将使您作为特色的顶级选择向您附近的其他用户展示",
   "activity_status": "活动状态",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "允许其他成员查看您最近在Heartlink上的最后24小时内是否活跃。如果您关闭了此问题，他们将无法看到您最近活跃的状态",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "允许其他成员查看您最近在Heartlink上的最后24小时内是否活跃。如果您关闭了此问题，他们将无法看到您最近活跃的状态",
   "app_settings": "应用设置",
   "show_distance_in": "显示距离",
   "language": "语言",
@@ -231,13 +231,66 @@
   "gender": "性别",
   "sexual_orientation": "性取向",
   "show_my_sexual_orientation_on_profile": "在个人资料上显示我的性取向",
-  "select_to_3": "选择3",
+  "select_to_3": "选择到3",
   "control_profile": "控制配置文件",
   "don't_show_my_age": "不要显示我的年龄",
   "don't_show_my_distance": "不要显示我的距离",
   "show_{nameScream}_on_my_profile": "在我的个人资料上显示{namescream}",
   "you_are_not_enter_the_phone_number": "您没有输入电话号码",
-  "Interests": "利益",
+  "interests": "利益",
   "my_gender": "我的性别",
-  "my_orientation": "我的方向"
+  "my_orientation": "我的方向",
+  "version_x.y.z": "版本X.Y.Z",
+  "km": "公里",
+  "mi": "mi",
+  "live_at_{nameAddress}": "住在{nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}远离",
+  "verified": "经过验证",
+  "HeartLink": "心链接",
+  "don't_worry_-_we_won't_tell_this_person": "别担心 - 我们不会告诉这个人",
+  "finding_people_near_you...": "在你附近找到人...",
+  "let's_be_friend": "我们交朋友吧",
+  "find_someone_that_wants_to_be_friends": "找到一个想成为朋友的人",
+  "coffee_date": "咖啡日期",
+  "find_someone_to_get_coffee_with": "找人和",
+  "looking_for_love": "寻找爱情",
+  "blind_date": "相亲",
+  "open_hour_6pm_-_12pm_(local_time)": "开放小时6pm-下午12点（当地时间）",
+  "share_idea": "分享想法",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "回答棘手的问题，而不是打开句子！您的响应将出现在盲人界面上，可用于开始对话",
+  "get_ready": "做好准备",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "问题和聊天时间有限，因此请快速思考和回答",
+  "compatible_to_view_profiles": "兼容查看配置文件",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "聊天结束后，如果您俩都匹配，您将看到该人的个人资料",
+  "i_can't_date_someone_who:": "我不能和一个人约会：",
+  "smoker": "吸烟者",
+  "not_lovers": "不是恋人",
+  "no_romance": "没有浪漫",
+  "love_novels": "爱小说",
+  "answer_question": "回答问题",
+  "optimise_pairing": "优化配对",
+  "connecting": "连接",
+  "the_best_dinner_is_at:": "最好的晚餐是：",
+  "on_the_tray_and_watch_tv": "在托盘上看电视",
+  "in_bed": "在床上",
+  "verified_photo": "经过验证的照片",
+  "likes_you": "喜欢你",
+  "prioritized_likes": "优先喜欢",
+  "everyone_you_like_will_see_you_soon": "您喜欢的每个人都会很快见到你",
+  "match_instantly_with_people_who_already_like_you": "立即与已经喜欢你的人搭配",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "包括最佳选择，无限的喜欢，每个月的1free Boost，每周5个免费晚餐，Rewind和Passport",
+  "message_before_matching": "匹配之前的消息",
+  "99+_people_already_like_you": "99多人已经喜欢你",
+  "see_who_likes_you_and_match_instantly": "看看谁喜欢你，立即匹配",
+  "buy_more_top_picks": "购买更多首选",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "像您一样，可以完全访问首选，发送无限的赞和更多",
+  "see_as_many_likes_as_you_want": "看到您想要的尽可能多的喜欢",
+  "1_free_boost_every_month": "每月1个免费提升",
+  "choose_who_see_you": "选择谁看到你",
+  "5_free_supper_likes_very_week": "5个免费的晚餐喜欢一周",
+  "you're_3x_more_likely_to_get_a_match": "您参加比赛的可能性更高",
+  "online_now": "现在在线",
+  "like": "喜欢",
+  "nope": "没有",
+  "supper_like": "晚餐喜欢"
 }
