--- a/src/locales/zh-rTW.json
+++ b/src/locales/zh-rTW.json
@@ -12,7 +12,7 @@
   "my_number_is": "我的電話號碼是",
   "phone_number": "電話號碼",
   "please_enter_a_valid_phone_number": "請輸入一個有效的電話號碼",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "當您點擊“繼續”時，HeartLink將發送帶有驗證代碼的文本。消息和數據率伴侶適用。",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "當您點擊“繼續”時，HeartLink將發送帶有驗證代碼的文本。消息和數據速率適用。",
   "the_verified_phone_number_can_be_used_to_log_in.": "經過驗證的電話號碼可用於登錄。",
   "learn_what_happens_when_your_number_changes.": "了解當您的數字更改時會發生什麼。",
   "continue": "繼續",
@@ -23,12 +23,12 @@
   "what's_your_email?": "您的電子郵件是什麼？",
   "don't_lose_access_to_your_account,_verify_your_email": "不要失去訪問您的帳戶，請驗證您的電子郵件",
   "verify_instantly_by_connecting_your_google_account": "通過連接Google帳戶立即驗證",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "我想收到新聞，更新和heartlink的報價",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "我想收到新聞，更新和heartlink的報價",
   "enter_email": "輸入電子郵件",
-  "welcome_to_heartlink": "歡迎來到Heartlink",
+  "welcome_to_heartLink": "歡迎來到Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "請遵守我們的規則，以獲得更多樂趣，並共同建立一個偉大的社區",
   "be_yourself": "做你自己",
-  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "確保您的照片，年齡和生物對自己是誰",
+  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "確保您的照片，年齡和生物忠於您的身份",
   "stay_safe": "注意安全",
   "don't_be_too_quick_to_give_out_personal_information.": "不要太快地提供個人信息。",
   "date_safety_guidelines": "日期安全指南",
@@ -43,7 +43,7 @@
   "apply": "申請",
   "my_name_is": "我的名字是",
   "your_name": "你的名字",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "這就是它會出現在心臟鏈接中的方式，您將無法更改它",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "這就是它將出現在心臟鏈接中的方式，您將無法更改它",
   "my_birthday_is": "我的生日是",
   "your_age_will_be_public": "您的年齡將是公開的",
   "i_am_a": "我是一個",
@@ -55,17 +55,17 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "通過將其添加到您的個人資料中，讓所有人都知道您對您的熱情",
   "show_me_gender": "告訴我性別",
   "my_photos_are": "我的照片是",
-  "add_at_least_2_photos_to_continue": "添加至少2張照片以繼續",
+  "add_at_least_2_photos_to_continue": "至少添加2張照片繼續",
   "enable_location": "啟用位置",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "您將需要啟用您的位置訂單才能使用HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "您將需要啟用您的位置訂單才能使用HeartLinks",
   "allow_location": "允許位置",
   "tell_me_more": "告訴我更多",
   "meet_people_nearby": "認識附近的人",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "您的位置將用於顯示您附近的潛在比賽。",
-  "want_to_avoid_someone_you_know_on_heartlink?": "想避免在心鏈接上認識的人嗎？",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "這很容易 - 在使用此功能選擇您想避免的人時，請分享設備與HeartLink的聯繫",
+  "want_to_avoid_someone_you_know_on_heartLink?": "想避免在心鏈接上認識的人嗎？",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "這很容易 - 在使用此功能選擇您想避免的人時，請分享設備與HeartLink的聯繫",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "如果您的聯繫人的帳戶與您提供的相同的Infor，我們將存儲您的封鎖聯繫人，以阻止您彼此見面。您可以在您的設置中停止與我們共享。",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "在這裡了解更多信息，包括如何進行心臟鏈接處理您的聯繫人",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "在這裡了解更多信息，包括如何進行心臟鏈接處理您的聯繫人",
   "share_{nameUser}_profile": "共享{nameuser}個人資料",
   "see_what_a_friend_thinks": "看看朋友的想法",
   "report_{nameUser}": "報告{nameuser}",
@@ -88,11 +88,11 @@
   "new_connections": "新連接",
   "messages": "消息",
   "get_read_receipts": "獲取閱讀收據",
-  "level_up_everyone_action_you_take_on_heartlink": "升級每個人的動作，您採取心動鏈接",
   "get_boost_profile": "獲取Boost配置文件",
   "get_supper_like": "吃晚飯",
   "silver_package": "銀包",
   "gold_package": "黃金包",
+  "level_up_everyone_action_you_take_on_heartLink": "升級每個人的動作您採取心動鏈接",
   "get_read_receipt_package": "獲取讀取收據包",
   "stay_up_to_date": "保持最新",
   "know_when_your_messages_have_been_read_with_read_receipt": "知道何時閱讀您的郵件，然後閱讀收據",
@@ -136,7 +136,7 @@
   "age_range": "年齡範圍",
   "show_me": "給我看看",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "我們使用這些偏好來查找匹配項。一些匹配建議可能不屬於您所需的參數",
-  "control_who_you_see": "控制你看到的人",
+  "control_who_you_see": "控制您看到的人",
   "sliver_package": "SLIVER包",
   "balance_recommendations": "平衡建議",
   "see_the_most_relevant_people_to_you_(default_settings)": "查看您最相關的人（默認設置）",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "告訴我最佳選擇",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "打開此操作將使您作為特色的頂級選擇向您附近的其他用戶展示",
   "activity_status": "活動狀態",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "允許其他成員查看您最近在Heartlink上的最後24小時內是否活躍。如果您關閉了此問題，他們將無法看到您最近活躍的狀態",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "允許其他成員查看您最近在Heartlink上的最後24小時內是否活躍。如果您關閉了此問題，他們將無法看到您最近活躍的狀態",
   "app_settings": "應用設置",
   "show_distance_in": "顯示距離",
   "language": "語言",
@@ -188,7 +188,7 @@
   "do_you_want_to_have_children?": "你想生孩子嗎？",
   "have_you_been_vaccinated_yet?": "您已經接種疫苗了嗎？",
   "what_is_your_personality_type?": "您的性格類型是什麼？",
-  "what_is_your_communication_style?": "您的溝通風格是什麼？",
+  "what_is_your_communication_style?": "您的溝通方式是什麼？",
   "when_love,_what_do_you_like_to_receive?": "當愛什麼時候，您喜歡收到什麼？",
   "style_of_life": "生活方式",
   "do_you_have_pets": "你有寵物嗎",
@@ -202,7 +202,7 @@
   "zodiac": "十二生肖",
   "future_family": "未來的家庭",
   "education": "教育",
-  "vaccine_for_covid": "疫苗用於共vid",
+  "vaccine_for_covid": "疫苗用於共卷",
   "personality_type": "個性類型",
   "communication_style": "溝通方式",
   "love_languages": "愛語言",
@@ -235,9 +235,62 @@
   "control_profile": "控製配置文件",
   "don't_show_my_age": "不要顯示我的年齡",
   "don't_show_my_distance": "不要顯示我的距離",
-  "show_{nameScream}_on_my_profile": "在我的個人資料上顯示{namescream}",
-  "you_are_not_enter_the_phone_number": "您不是輸入電話號碼",
-  "Interests": "利益",
+  "show_{nameScream}_on_my_profile": "在我的個人資料上顯示{namesCream}",
+  "you_are_not_enter_the_phone_number": "您沒有輸入電話號碼",
+  "interests": "利益",
   "my_gender": "我的性別",
-  "my_orientation": "我的方向"
+  "my_orientation": "我的方向",
+  "version_x.y.z": "版本X.Y.Z",
+  "km": "公里",
+  "mi": "mi",
+  "live_at_{nameAddress}": "住在{nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}遠離",
+  "verified": "經過驗證",
+  "HeartLink": "心鏈接",
+  "don't_worry_-_we_won't_tell_this_person": "別擔心 - 我們不會告訴這個人",
+  "finding_people_near_you...": "在你附近找到人...",
+  "let's_be_friend": "我們交朋友吧",
+  "find_someone_that_wants_to_be_friends": "找到一個想成為朋友的人",
+  "coffee_date": "咖啡日期",
+  "find_someone_to_get_coffee_with": "找人和",
+  "looking_for_love": "尋找愛情",
+  "blind_date": "相親",
+  "open_hour_6pm_-_12pm_(local_time)": "開放小時6pm-下午12點（當地時間）",
+  "share_idea": "分享想法",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "回答棘手的問題，而不是打開句子！您的響應將出現在盲人界面上，可用於開始對話",
+  "get_ready": "做好準備",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "問題和聊天時間有限，因此請快速思考和回答",
+  "compatible_to_view_profiles": "兼容查看配置文件",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "聊天結束後，如果您倆都匹配，您將看到該人的個人資料",
+  "i_can't_date_someone_who:": "我不能和一個人約會：",
+  "smoker": "吸煙者",
+  "not_lovers": "不是戀人",
+  "no_romance": "沒有浪漫",
+  "love_novels": "愛小說",
+  "answer_question": "回答問題",
+  "optimise_pairing": "優化配對",
+  "connecting": "連接",
+  "the_best_dinner_is_at:": "最好的晚餐是：",
+  "on_the_tray_and_watch_tv": "在托盤上看電視",
+  "in_bed": "在床上",
+  "verified_photo": "經過驗證的照片",
+  "likes_you": "喜歡你",
+  "prioritized_likes": "優先喜歡",
+  "everyone_you_like_will_see_you_soon": "您喜歡的每個人都會很快見到你",
+  "match_instantly_with_people_who_already_like_you": "立即與已經喜歡你的人搭配",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "包括最佳選擇，無限的喜歡，每個月的1free Boost，每週5個免費晚餐，Rewind和Passport",
+  "message_before_matching": "匹配之前的消息",
+  "99+_people_already_like_you": "99多人已經喜歡你",
+  "see_who_likes_you_and_match_instantly": "看看誰喜歡你，立即匹配",
+  "buy_more_top_picks": "購買更多首選",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "像您一樣，可以完全訪問首選，發送無限的讚和更多",
+  "see_as_many_likes_as_you_want": "看到您想要的盡可能多的喜歡",
+  "1_free_boost_every_month": "每月1個免費提升",
+  "choose_who_see_you": "選擇誰看到你",
+  "5_free_supper_likes_very_week": "5個免費的晚餐喜歡一周",
+  "you're_3x_more_likely_to_get_a_match": "您參加比賽的可能性更高",
+  "online_now": "現在在線",
+  "like": "喜歡",
+  "nope": "沒有",
+  "supper_like": "晚餐喜歡"
 }
