--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -12,7 +12,7 @@
   "my_number_is": "내 번호는",
   "phone_number": "전화 번호",
   "please_enter_a_valid_phone_number": "유효한 전화 번호를 입력하세요",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "'계속'을 누르면 HeartLink는 확인 코드와 함께 텍스트를 보냅니다. 메시지 및 데이터 요금 메이트가 적용됩니다.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "'계속'을 누르면 HeartLink는 확인 코드와 함께 텍스트를 보냅니다. 메시지 및 데이터 요금 메이트가 적용됩니다.",
   "the_verified_phone_number_can_be_used_to_log_in.": "확인 된 전화 번호를 사용하여 로그인 할 수 있습니다.",
   "learn_what_happens_when_your_number_changes.": "번호가 변경되면 어떻게되는지 알아보십시오.",
   "continue": "계속하다",
@@ -21,12 +21,12 @@
   "resend_code": "코드를 재현하십시오",
   "invalid_code._please_try_again": "유효하지 않은 코드. 다시 시도하십시오",
   "what's_your_email?": "귀하의 이메일은 무엇입니까?",
-  "don't_lose_access_to_your_account,_verify_your_email": "계정에 대한 액세스 권한을 잃지 말고 이메일을 확인하십시오.",
+  "don't_lose_access_to_your_account,_verify_your_email": "계정에 대한 액세스 권한을 잃지 말고 이메일 확인",
   "verify_instantly_by_connecting_your_google_account": "Google 계정을 연결하여 즉시 확인하십시오",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Heartlink에서 뉴스, 업데이트 및 제안을 받고 싶습니다.",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Heartlink에서 뉴스, 업데이트 및 제안을 받고 싶습니다.",
   "enter_email": "이메일을 입력하십시오",
-  "welcome_to_heartlink": "Heartlink에 오신 것을 환영합니다",
-  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "우리의 규칙을 따르십시오. 더 재미있게 보내고 함께 훌륭한 커뮤니티를 구축하십시오.",
+  "welcome_to_heartLink": "Heartlink에 오신 것을 환영합니다",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "우리의 규칙을 따르십시오. 더 재미있게 보내고 함께 훌륭한 커뮤니티를 구축하십시오",
   "be_yourself": "자신이 되십시오",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "당신의 사진, 나이 및 바이오가 당신이 누구인지 확인하십시오.",
   "stay_safe": "안전히 계세요",
@@ -43,7 +43,7 @@
   "apply": "적용하다",
   "my_name_is": "내 이름은",
   "your_name": "당신의 이름",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "이것이 하트 링크에 ​​나타나는 방법이며 변경할 수 없습니다.",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "이것이 하트 링크에 ​​나타나는 방법이며 변경할 수 없습니다.",
   "my_birthday_is": "내 생일은",
   "your_age_will_be_public": "당신의 나이는 공개 될 것입니다",
   "i_am_a": "나는",
@@ -52,20 +52,20 @@
   "select_up_to_3": "최대 3을 선택하십시오",
   "skip": "건너뛰다",
   "my_interests_are": "내 관심사입니다",
-  "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "프로필에 추가하여 모든 사람에게 열정이있는 것을 알려주십시오.",
+  "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "프로필에 추가하여 모든 사람에게 열정이 무엇인지 알려주십시오.",
   "show_me_gender": "성별을 보여주세요",
   "my_photos_are": "내 사진은",
   "add_at_least_2_photos_to_continue": "계속하려면 2 개 이상의 사진을 추가하십시오",
-  "enable_location": "위치를 활성화하십시오",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "하트 링크를 사용하려면 위치 주문을 활성화해야합니다.",
+  "enable_location": "위치 활성화",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "하트 링크를 사용하려면 위치 주문을 활성화해야합니다.",
   "allow_location": "위치를 허용합니다",
   "tell_me_more": "더 말 해주세요",
   "meet_people_nearby": "근처의 사람들을 만나십시오",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "귀하의 위치는 근처에 잠재적 인 경기를 보여주는 데 사용됩니다.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "하트 링크에서 아는 사람을 피하고 싶습니까?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "쉽습니다 -이 기능을 사용하여 피하고 싶은 사람을 선택할 때 장치의 Heartlink와의 접촉을 공유하십시오.",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Heartlink에서 아는 사람을 피하고 싶습니까?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "쉽습니다 -이 기능을 사용하여 피하고 싶은 사람을 선택할 때 장치의 Heartlink와의 접촉을 공유하십시오.",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "귀하의 연락처에 귀하가 제공하는 동일한 정보가있는 계정이 있으면 서로를 보지 못하도록 차단 된 연락처를 저장하겠습니다. 당신은 당신의 설정에서 우리와 공유를 중지 할 수 있습니다.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Heartlink가 연락처를 처리하는 방법을 포함하여 여기에서 자세히 알아보십시오.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Heartlink가 연락처를 처리하는 방법을 포함하여 여기에서 자세히 알아보십시오.",
   "share_{nameUser}_profile": "{nameuser} 프로파일을 공유하십시오",
   "see_what_a_friend_thinks": "친구가 어떻게 생각하는지보십시오",
   "report_{nameUser}": "보고서 {nameuser}",
@@ -88,11 +88,11 @@
   "new_connections": "새로운 연결",
   "messages": "메시지",
   "get_read_receipts": "영수증을 읽으십시오",
-  "level_up_everyone_action_you_take_on_heartlink": "당신이 하트 링크를 취하는 모든 사람의 행동을 평평하게하십시오",
   "get_boost_profile": "부스트 프로필을 얻으십시오",
-  "get_supper_like": "만찬을 받으십시오",
+  "get_supper_like": "만찬을 좋아합니다",
   "silver_package": "실버 패키지",
   "gold_package": "금 패키지",
+  "level_up_everyone_action_you_take_on_heartLink": "당신이 하트 링크에서 취하는 모든 사람의 행동을 평평하게하십시오",
   "get_read_receipt_package": "읽기 영수증 패키지를 받으십시오",
   "stay_up_to_date": "최신 상태를 유지하십시오",
   "know_when_your_messages_have_been_read_with_read_receipt": "읽기 영수증으로 메시지를 읽은시기를 알고 있습니다.",
@@ -101,7 +101,7 @@
   "recurring_billing,_cancel_anytime": "반복 청구, 언제든지 취소",
   "get_boost_package": "부스트 패키지를 얻으십시오",
   "skip_the_queue": "대기열을 건너 뜁니다",
-  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "더 많은 성냥을 얻기 위해 항상 30 분 동안 해당 지역의 최상위 프로필에",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "더 많은 성냥을 얻기 위해 30 분 동안 항상 해당 지역의 최상위 프로필",
   "boost_my_profile": "내 프로필을 높이십시오",
   "get_a_gold_package": "금 패키지를 얻으십시오",
   "5_free_supper_like_weekly": "5 주간과 같은 5 개의 무료 저녁",
@@ -146,13 +146,13 @@
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "개별 권장 사항을 위해 특정 유형의 사람들에게만 표시됩니다.",
   "only_people_i've_liked": "내가 좋아하는 사람들 만",
   "only_people_you_have_liked_will_see_me": "당신이 좋아하는 사람들만이 나를 볼 것입니다",
-  "only_wi-fi_only": "만 Wi-Fi 만",
+  "only_wi-fi_only": "Wi-Fi 만",
   "on_wi-fi_and_mobile_data": "Wi-Fi 및 모바일 데이터",
   "never_auto_play_videos": "동영상을 자동 재생하지 마십시오",
   "show_me_top_picks": "최고의 선택을 보여주세요",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "이것을 켜면 가까운 다른 사용자들에게 추천 최고 선택으로 표시 될 수 있습니다.",
   "activity_status": "활동 상태",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "지난 24 시간 내에 HeartLink에서 최근에 활동했는지 다른 회원이 확인할 수 있도록하십시오. 당신이 이것을 끄면 최근에 활성 상태를 볼 수 없습니다.",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "지난 24 시간 내에 HeartLink에서 최근에 활동했는지 다른 회원이 확인할 수 있도록하십시오. 당신이 이것을 끄면 최근에 활성 상태를 볼 수 없습니다.",
   "app_settings": "앱 설정",
   "show_distance_in": "거리를 보여줍니다",
   "language": "언어",
@@ -185,7 +185,7 @@
   "add_more_info_so_people_can_see_your_amazing_pictures": "사람들이 놀라운 사진을 볼 수 있도록 더 많은 정보를 추가하십시오.",
   "what_is_your_zodiac_sign?": "당신의 별자리는 무엇입니까?",
   "your_education_level?": "교육 수준?",
-  "do_you_want_to_have_children?": "아이를 갖고 싶습니까?",
+  "do_you_want_to_have_children?": "자녀를 갖고 싶습니까?",
   "have_you_been_vaccinated_yet?": "아직 예방 접종을 받았습니까?",
   "what_is_your_personality_type?": "당신의 성격 유형은 무엇입니까?",
   "what_is_your_communication_style?": "커뮤니케이션 스타일은 무엇입니까?",
@@ -223,7 +223,7 @@
   "update_information_school": "정보 학교 업데이트",
   "school_name": "학교 이름",
   "living_in": "살고 있습니다",
-  "show_instagram_photos": "인스 타 그램 사진을 보여줍니다",
+  "show_instagram_photos": "Instagram 사진을 보여줍니다",
   "connect_instagram": "Instagram을 연결하십시오",
   "choose_an_anthem": "애국가를 선택하십시오",
   "my_top_spotify_artists": "내 최고의 Spotify 아티스트",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "내 거리를 보여주지 마십시오",
   "show_{nameScream}_on_my_profile": "내 프로필에 {namescream}을 표시합니다",
   "you_are_not_enter_the_phone_number": "전화 번호를 입력하지 않습니다",
-  "Interests": "이해",
+  "interests": "이해",
   "my_gender": "내 성별",
-  "my_orientation": "내 오리엔테이션"
+  "my_orientation": "내 오리엔테이션",
+  "version_x.y.z": "버전 X.Y.Z",
+  "km": "km",
+  "mi": "미",
+  "live_at_{nameAddress}": "{nameaddress}에 살고 있습니다.",
+  "{numberKilometers}_{unit}_away": "{numberkilometers} {unit} 멀리",
+  "verified": "확인",
+  "HeartLink": "하트 링크",
+  "don't_worry_-_we_won't_tell_this_person": "걱정하지 마세요 - 우리는이 사람에게 말하지 않을 것입니다",
+  "finding_people_near_you...": "가까운 사람들을 찾는 ...",
+  "let's_be_friend": "우리 친구하자",
+  "find_someone_that_wants_to_be_friends": "친구가되고 싶은 사람을 찾으십시오",
+  "coffee_date": "커피 날짜",
+  "find_someone_to_get_coffee_with": "커피를 마실 사람을 찾으십시오",
+  "looking_for_love": "사랑을 찾고 있습니다",
+  "blind_date": "소개팅",
+  "open_hour_6pm_-_12pm_(local_time)": "오픈 아워 오후 6시 -12pm (현지 시간)",
+  "share_idea": "아이디어를 공유하십시오",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "문장을 여는 대신 힘든 질문에 대답하십시오! 귀하의 응답은 블라인드 데이트 인터페이스에 표시되며 대화를 시작하는 데 사용될 수 있습니다.",
+  "get_ready": "준비해",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "질문과 채팅 시간은 제한되어 있으므로 빨리 생각하고 대답하십시오.",
+  "compatible_to_view_profiles": "프로파일을 볼 수 있습니다",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "채팅이 끝나면 둘 다 일치하면 사람의 프로필이 표시됩니다.",
+  "i_can't_date_someone_who:": "나는 누군가와 데이트 할 수 없다 :",
+  "smoker": "흡연자",
+  "not_lovers": "연인이 아닙니다",
+  "no_romance": "로맨스가 없습니다",
+  "love_novels": "사랑 소설",
+  "answer_question": "답변 질문",
+  "optimise_pairing": "페어링 최적화",
+  "connecting": "연결",
+  "the_best_dinner_is_at:": "최고의 저녁 식사는 다음과 같습니다.",
+  "on_the_tray_and_watch_tv": "트레이에서 TV를보십시오",
+  "in_bed": "침대에서",
+  "verified_photo": "확인 된 사진",
+  "likes_you": "당신을 좋아합니다",
+  "prioritized_likes": "우선 순위가 좋아합니다",
+  "everyone_you_like_will_see_you_soon": "당신이 좋아하는 모든 사람이 곧 당신을 뵙겠습니다",
+  "match_instantly_with_people_who_already_like_you": "이미 당신을 좋아하는 사람들과 즉시 일치하십시오",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "최고 픽, 무제한 좋아요, 매달 1 피트 부스트, 매주 5 개의 무료 저녁, 되감기 및 여권 포함",
+  "message_before_matching": "일치하기 전에 메시지",
+  "99+_people_already_like_you": "99 명 이상의 사람들이 이미 당신을 좋아합니다",
+  "see_who_likes_you_and_match_instantly": "당신을 좋아하는 사람을보고 즉시 일치하십시오",
+  "buy_more_top_picks": "더 많은 최고 선택을 구입하십시오",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "당신과 같은 상위 픽에 완전히 액세스 할 수 있습니다.",
+  "see_as_many_likes_as_you_want": "원하는만큼 좋아하는 것을보십시오",
+  "1_free_boost_every_month": "매달 1 번 무료 부스트",
+  "choose_who_see_you": "당신을 보는 사람을 선택하십시오",
+  "5_free_supper_likes_very_week": "5 개의 무료 만찬은 매우 일주일을 좋아합니다",
+  "you're_3x_more_likely_to_get_a_match": "당신은 3 배 더 경기를 할 가능성이 더 높습니다",
+  "online_now": "지금 온라인",
+  "like": "좋다",
+  "nope": "아니요",
+  "supper_like": "저녁 식사와 같은"
 }
