--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -12,7 +12,7 @@
   "my_number_is": "Số của tôi là",
   "phone_number": "Số điện thoại",
   "please_enter_a_valid_phone_number": "Xin vui lòng nhập một số điện thoại hợp lệ",
-  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Khi bạn nhấn 'Tiếp tục', HeartLink sẽ gửi một văn bản với mã xác minh. Thông điệp và tốc độ dữ liệu áp dụng.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Khi bạn nhấn 'Tiếp tục', HeartLink sẽ gửi một văn bản với mã xác minh. Tốc độ thông điệp và dữ liệu áp dụng.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Số điện thoại được xác minh có thể được sử dụng để đăng nhập.",
   "learn_what_happens_when_your_number_changes.": "Tìm hiểu những gì xảy ra khi số của bạn thay đổi.",
   "continue": "Tiếp tục",
@@ -21,11 +21,11 @@
   "resend_code": "Mã gửi lại",
   "invalid_code._please_try_again": "Mã không hợp lệ. Vui lòng thử lại",
   "what's_your_email?": "Email của bạn là gì?",
-  "don't_lose_access_to_your_account,_verify_your_email": "Không mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
+  "don't_lose_access_to_your_account,_verify_your_email": "Đừng mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
   "verify_instantly_by_connecting_your_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
-  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Tôi muốn nhận tin tức, cập nhật và cung cấp từ HeartLink",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Tôi muốn nhận tin tức, cập nhật và cung cấp từ HeartLink",
   "enter_email": "Nhập email",
-  "welcome_to_heartlink": "Chào mừng bạn đến với Heartlink",
+  "welcome_to_heartLink": "Chào mừng bạn đến với Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Hãy làm theo các quy tắc của chúng tôi để có nhiều niềm vui hơn và cùng nhau xây dựng một cộng đồng tuyệt vời",
   "be_yourself": "Là chính mình",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Hãy chắc chắn rằng ảnh, tuổi và tiểu sử của bạn đúng với con người bạn",
@@ -43,7 +43,7 @@
   "apply": "Áp dụng",
   "my_name_is": "Tên tôi là",
   "your_name": "Tên của bạn",
-  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Đây là cách nó sẽ xuất hiện trong Heartlink và bạn sẽ không thể thay đổi nó",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Đây là cách nó sẽ xuất hiện trong Heartlink và bạn sẽ không thể thay đổi nó",
   "my_birthday_is": "Ngày sinh nhật tôi là",
   "your_age_will_be_public": "Tuổi của bạn sẽ được công khai",
   "i_am_a": "tôi là",
@@ -57,15 +57,15 @@
   "my_photos_are": "Ảnh của tôi là",
   "add_at_least_2_photos_to_continue": "Thêm ít nhất 2 ảnh để tiếp tục",
   "enable_location": "Cho phép vị trí",
-  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Bạn sẽ cần kích hoạt thứ tự vị trí của mình để sử dụng HeartLinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Bạn sẽ cần kích hoạt thứ tự vị trí của mình để sử dụng HeartLinks",
   "allow_location": "Cho phép vị trí",
   "tell_me_more": "Nói cho tôi biết thêm",
   "meet_people_nearby": "Gặp gỡ những người gần đó",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Vị trí của bạn sẽ được sử dụng để hiển thị các trận đấu tiềm năng gần bạn.",
-  "want_to_avoid_someone_you_know_on_heartlink?": "Bạn muốn tránh một người mà bạn biết trên Heartlink?",
-  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Thật dễ dàng - Chia sẻ liên hệ của thiết bị với Heartlink khi sử dụng tính năng này để chọn người bạn muốn tránh",
+  "want_to_avoid_someone_you_know_on_heartLink?": "Bạn muốn tránh một người mà bạn biết trên Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Thật dễ dàng - Chia sẻ liên hệ của thiết bị với Heartlink khi sử dụng tính năng này để chọn người bạn muốn tránh",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Chúng tôi sẽ lưu trữ liên hệ bị chặn của bạn để ngăn bạn nhìn thấy nhau nếu liên hệ của bạn có tài khoản có cùng một thông tin bạn cung cấp. Bạn có thể ngừng chia sẻ với chúng tôi trong cài đặt của bạn.",
-  "learn_more_here,_including_how_heartlink_process_your_contacts": "Tìm hiểu thêm ở đây, bao gồm cả cách thức xử lý trái tim của các liên hệ của bạn",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Tìm hiểu thêm ở đây, bao gồm cả cách thức xử lý trái tim của các liên hệ của bạn",
   "share_{nameUser}_profile": "Chia sẻ {nameuser} Hồ sơ",
   "see_what_a_friend_thinks": "Xem những gì một người bạn nghĩ",
   "report_{nameUser}": "Báo cáo {nameuser}",
@@ -88,12 +88,12 @@
   "new_connections": "Kết nối mới",
   "messages": "Tin nhắn",
   "get_read_receipts": "Nhận biên lai đọc",
-  "level_up_everyone_action_you_take_on_heartlink": "Cấp độ cho mọi người hành động bạn đảm nhận trên trái tim",
   "get_boost_profile": "Nhận hồ sơ tăng cường",
   "get_supper_like": "Nhận bữa ăn tối như",
   "silver_package": "Gói bạc",
   "gold_package": "Gói vàng",
-  "get_read_receipt_package": "Nhận gói biên lai đọc",
+  "level_up_everyone_action_you_take_on_heartLink": "Cấp độ cho mọi người hành động bạn đảm nhận trên trái tim",
+  "get_read_receipt_package": "Nhận gói biên nhận đọc",
   "stay_up_to_date": "Ở lại đến ngày",
   "know_when_your_messages_have_been_read_with_read_receipt": "Biết khi nào tin nhắn của bạn đã được đọc với biên lai đọc",
   "most_popular": "PHỔ BIẾN NHẤT",
@@ -152,7 +152,7 @@
   "show_me_top_picks": "Cho tôi xem những lựa chọn hàng đầu",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Bật này sẽ cho phép bạn được hiển thị như một lựa chọn hàng đầu đặc trưng cho những người dùng khác gần bạn",
   "activity_status": "Trạng thái hoạt động",
-  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Cho phép các thành viên khác xem gần đây bạn đã hoạt động trong 24 giờ cuối cùng trên Heartlink. Nếu bạn đã tắt điều này, họ sẽ không thể thấy trạng thái hoạt động gần đây của bạn",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Cho phép các thành viên khác xem gần đây bạn đã hoạt động trong 24 giờ cuối cùng trên Heartlink. Nếu bạn đã tắt điều này, họ sẽ không thể thấy trạng thái hoạt động gần đây của bạn",
   "app_settings": "Cài đặt ứng dụng",
   "show_distance_in": "Hiển thị khoảng cách trong",
   "language": "Ngôn ngữ",
@@ -182,7 +182,7 @@
   "the_language_i_know": "Ngôn ngữ tôi biết",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Chọn tối đa 5 ngôn ngữ bạn biết và thêm vào hồ sơ của bạn",
   "basic_information": "THÔNG TIN CƠ BẢN",
-  "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin thêm để mọi người có thể xem hình ảnh tuyệt vời của bạn",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin để mọi người có thể xem hình ảnh tuyệt vời của bạn",
   "what_is_your_zodiac_sign?": "Cung hoàng đạo của bạn là gì?",
   "your_education_level?": "Trình độ học vấn của bạn?",
   "do_you_want_to_have_children?": "Bạn muốn có con không?",
@@ -237,7 +237,60 @@
   "don't_show_my_distance": "Đừng hiển thị khoảng cách của tôi",
   "show_{nameScream}_on_my_profile": "Hiển thị {nameCream} trên hồ sơ của tôi",
   "you_are_not_enter_the_phone_number": "Bạn không nhập số điện thoại",
-  "Interests": "Lợi ích",
+  "interests": "Lợi ích",
   "my_gender": "Giới tính của tôi",
-  "my_orientation": "định hướng của tôi"
+  "my_orientation": "định hướng của tôi",
+  "version_x.y.z": "Phiên bản X.Y.Z",
+  "km": "km",
+  "mi": "mi",
+  "live_at_{nameAddress}": "Trực tiếp tại {nameaddress}",
+  "{numberKilometers}_{unit}_away": "{numberKilometer} {đơn vị}",
+  "verified": "Đã xác minh",
+  "HeartLink": "Liên kết trái tim",
+  "don't_worry_-_we_won't_tell_this_person": "Đừng lo lắng - chúng tôi sẽ không nói với người này",
+  "finding_people_near_you...": "Tìm mọi người gần bạn ...",
+  "let's_be_friend": "Hãy là bạn",
+  "find_someone_that_wants_to_be_friends": "Tìm một người muốn làm bạn",
+  "coffee_date": "Ngày cà phê",
+  "find_someone_to_get_coffee_with": "Tìm ai đó để lấy cà phê với",
+  "looking_for_love": "Tìm kiếm tình yêu",
+  "blind_date": "Hẹn hò giấu mặt",
+  "open_hour_6pm_-_12pm_(local_time)": "Giờ mở 6 giờ tối - 12 giờ tối (giờ địa phương)",
+  "share_idea": "Chia sẻ ý tưởng",
+  "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Trả lời câu hỏi khó thay vì mở câu! Phản hồi của bạn sẽ xuất hiện trên giao diện ngày mù và có thể được sử dụng để bắt đầu cuộc trò chuyện",
+  "get_ready": "Chuẩn bị",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Câu hỏi và thời gian trò chuyện bị hạn chế, vì vậy hãy suy nghĩ và trả lời nhanh chóng",
+  "compatible_to_view_profiles": "Tương thích để xem hồ sơ",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Sau khi cuộc trò chuyện kết thúc, bạn sẽ thấy hồ sơ của người đó nếu cả hai bạn khớp",
+  "i_can't_date_someone_who:": "Tôi không thể hẹn hò với ai đó:",
+  "smoker": "Người hút thuốc",
+  "not_lovers": "Không phải người yêu",
+  "no_romance": "Không lãng mạn",
+  "love_novels": "Tiểu thuyết tình yêu",
+  "answer_question": "Trả lời câu hỏi",
+  "optimise_pairing": "Tối ưu hóa ghép đôi",
+  "connecting": "Đang kết nối",
+  "the_best_dinner_is_at:": "Bữa tối ngon nhất là tại:",
+  "on_the_tray_and_watch_tv": "Trên khay và xem TV",
+  "in_bed": "Trên giường",
+  "verified_photo": "Ảnh xác minh",
+  "likes_you": "THÍCH BẠN",
+  "prioritized_likes": "Thích ưu tiên",
+  "everyone_you_like_will_see_you_soon": "Mọi người bạn thích sẽ sớm gặp lại bạn",
+  "match_instantly_with_people_who_already_like_you": "Phù hợp ngay lập tức với những người đã thích bạn",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Bao gồm các lựa chọn hàng đầu, lượt thích không giới hạn, tăng 1 free mỗi tháng, 5 bữa ăn tối miễn phí như mỗi tuần, tua lại và hộ chiếu",
+  "message_before_matching": "Tin nhắn trước khi khớp",
+  "99+_people_already_like_you": "Hơn 99 người đã thích bạn",
+  "see_who_likes_you_and_match_instantly": "Xem ai thích bạn và phù hợp ngay lập tức",
+  "buy_more_top_picks": "Mua thêm lựa chọn hàng đầu",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Nhận toàn bộ quyền truy cập vào các lựa chọn hàng đầu, như bạn, gửi những lượt thích không giới hạn và hơn thế nữa",
+  "see_as_many_likes_as_you_want": "Xem bao nhiêu lượt thích như bạn muốn",
+  "1_free_boost_every_month": "1 Boost miễn phí mỗi tháng",
+  "choose_who_see_you": "Chọn ai nhìn thấy bạn",
+  "5_free_supper_likes_very_week": "5 Thích bữa tối miễn phí rất nhiều tuần",
+  "you're_3x_more_likely_to_get_a_match": "Bạn có nhiều khả năng nhận được một trận đấu hơn gấp 3 lần",
+  "online_now": "Trực tuyến ngay bây giờ",
+  "like": "GIỐNG",
+  "nope": "KHÔNG",
+  "supper_like": "Bữa ăn tối như"
 }
